@@ -65,26 +65,22 @@ public class JMSSettingsHandler extends JMSConfigurationHandler<JMSSettingsModif
         // let's extract some useful information from the event
         WorkspaceInfo workspace = event.getSource().getWorkspace();
         // settings are global or specific to a certain workspace
-        SettingsInfo settingsInfo =
-                workspace == null ? geoServer.getSettings() : geoServer.getSettings(workspace);
+        SettingsInfo settingsInfo = workspace == null ? geoServer.getSettings() : geoServer.getSettings(workspace);
         // if not settings were found this means that a user just deleted this workspace
         // or deleted this workspace settings on this GeoServer instance or that a previously
         // synchronization problem happened
         if (settingsInfo == null) {
             throw new IllegalArgumentException(
-                    String.format(
-                            "No settings for workspace '%s' found on this instance.",
-                            workspace.getName()));
+                    "No settings for workspace '%s' found on this instance.".formatted(workspace.getName()));
         }
         // well let's update our settings updating only the modified properties
         try {
             BeanUtils.smartUpdate(settingsInfo, event.getPropertyNames(), event.getNewValues());
         } catch (Exception exception) {
-            String message =
-                    workspace == null
-                            ? "Error updating GeoServer global settings."
-                            : "Error updating workspace '%s' settings.";
-            throw new RuntimeException(String.format(message, workspace), exception);
+            String message = workspace == null
+                    ? "Error updating GeoServer global settings."
+                    : "Error updating workspace '%s' settings.";
+            throw new RuntimeException(message.formatted(workspace), exception);
         }
         // save the updated settings
         geoServer.save(settingsInfo);
