@@ -64,8 +64,7 @@ public class LayersClientIT {
         DataStoresClient dataStores = support.client().dataStores();
         FeatureTypesClient featureTyes = support.client().featureTypes();
         this.layers = support.client().layers();
-        String wsname =
-                String.format("%s-ws1-%d", testName.getMethodName(), rnd.nextInt((int) 1e6));
+        String wsname = "%s-ws1-%d".formatted(testName.getMethodName(), rnd.nextInt((int) 1e6));
 
         workspaces.create(wsname);
         this.ws = workspaces.findByName(wsname).get();
@@ -81,16 +80,11 @@ public class LayersClientIT {
 
         // 2.15.2 fails if nativeName is not set, gets it deserialized as the literal
         // string "null"
-        roadsFT =
-                new FeatureTypeInfo()
-                        .name("roads")
-                        .nativeName("roads")
-                        .store(new DataStoreInfo().name("roadsStore"));
-        streamsFT =
-                new FeatureTypeInfo()
-                        .name("streams")
-                        .nativeName("streams")
-                        .store(new DataStoreInfo().name("streamsStore"));
+        roadsFT = new FeatureTypeInfo().name("roads").nativeName("roads").store(new DataStoreInfo().name("roadsStore"));
+        streamsFT = new FeatureTypeInfo()
+                .name("streams")
+                .nativeName("streams")
+                .store(new DataStoreInfo().name("streamsStore"));
 
         featureTyes.create(ws.getName(), roadsFT);
         featureTyes.create(ws.getName(), streamsFT);
@@ -106,8 +100,7 @@ public class LayersClientIT {
         List<NamedLink> list = layers.getLayers(ws.getName());
         assertNotNull(list);
         assertEquals(2, list.size());
-        List<String> layerNames =
-                list.stream().map(NamedLink::getName).collect(Collectors.toList());
+        List<String> layerNames = list.stream().map(NamedLink::getName).collect(Collectors.toList());
         assertTrue(layerNames.toString(), layerNames.contains(roadsFT.getName()));
         assertTrue(layerNames.toString(), layerNames.contains(streamsFT.getName()));
     }
@@ -133,29 +126,31 @@ public class LayersClientIT {
     public @Test void updateLayerSetDefaultStyle() throws IOException {
         StylesClient styles = support.client().styles();
         String styleBody =
-                "{\n"
-                        + "  \"version\": 8,\n"
-                        + "  \"name\": \"violet polygon\",\n"
-                        + "  \"layers\": [\n"
-                        + "      {\n"
-                        + "          \"id\": \"violet polygon\",\n"
-                        + "          \"type\": \"fill\",\n"
-                        + "          \"source-layer\": \"roads\",\n"
-                        + "          \"paint\": {\n"
-                        + "              \"fill-color\": \"#3300ff\",\n"
-                        + "              \"fill-outline-color\":\"#000000\"\n"
-                        + "          }\n"
-                        + "      }, {\n"
-                        + "          \"id\": \"red polygon\",\n"
-                        + "          \"type\": \"fill\",\n"
-                        + "          \"source-layer\": \"roads\",\n"
-                        + "          \"paint\": {\n"
-                        + "              \"fill-color\": \"#aa0000\",\n"
-                        + "              \"fill-outline-color\":\"#000000\"\n"
-                        + "          }\n"
-                        + "      }\n"
-                        + "  ]\n"
-                        + "}";
+                """
+                {
+                  "version": 8,
+                  "name": "violet polygon",
+                  "layers": [
+                      {
+                          "id": "violet polygon",
+                          "type": "fill",
+                          "source-layer": "roads",
+                          "paint": {
+                              "fill-color": "#3300ff",
+                              "fill-outline-color":"#000000"
+                          }
+                      }, {
+                          "id": "red polygon",
+                          "type": "fill",
+                          "source-layer": "roads",
+                          "paint": {
+                              "fill-color": "#aa0000",
+                              "fill-outline-color":"#000000"
+                          }
+                      }
+                  ]
+                }\
+                """;
         StyleInfo style = styles.createMapboxStyle(ws.getName(), "roads-style", styleBody);
 
         LayerInfo info = new LayerInfo();
@@ -170,9 +165,7 @@ public class LayersClientIT {
     }
 
     public @Test void updateLayerSetAttribution() throws IOException {
-        Layer layerResponse =
-                layers.getLayer(ws.getName(), roadsFT.getName())
-                        .orElseThrow(NoSuchElementException::new);
+        Layer layerResponse = layers.getLayer(ws.getName(), roadsFT.getName()).orElseThrow(NoSuchElementException::new);
 
         LayerInfo info = new LayerInfo();
         info.setName(layerResponse.getName());
@@ -202,9 +195,7 @@ public class LayersClientIT {
     }
 
     public @Test void updateLayerMetadatamap() throws IOException {
-        Layer layerResponse =
-                layers.getLayer(ws.getName(), roadsFT.getName())
-                        .orElseThrow(NoSuchElementException::new);
+        Layer layerResponse = layers.getLayer(ws.getName(), roadsFT.getName()).orElseThrow(NoSuchElementException::new);
 
         assertNull(layerResponse.getMetadata());
 
