@@ -52,7 +52,7 @@ public class GetCoverageHandler extends RequestObjectHandler {
         try {
             crs = CRS.decode(crsName);
         } catch (Exception e) {
-            LOGGER.log(Level.WARNING, String.format("Could not decode CRS ID: %s", crsName), e);
+            LOGGER.log(Level.WARNING, "Could not decode CRS ID: %s".formatted(crsName), e);
             return null;
         }
 
@@ -63,8 +63,7 @@ public class GetCoverageHandler extends RequestObjectHandler {
 
         try {
             // Turn into a class that implements BoundingBox
-            return new ReferencedEnvelope(minX, maxX, minY, maxY, crs)
-                    .toBounds(monitorConfig.getBboxCrs());
+            return new ReferencedEnvelope(minX, maxX, minY, maxY, crs).toBounds(monitorConfig.getBboxCrs());
         } catch (TransformException e) {
             LOGGER.log(Level.WARNING, "Could not transform bounding box to logging CRS", e);
             return null;
