@@ -12,11 +12,12 @@ import java.util.ArrayList;
 import java.util.HashSet;
 import java.util.List;
 import java.util.Map;
+import java.util.Optional;
 import java.util.Set;
 import java.util.logging.Level;
 import java.util.logging.Logger;
 import javax.measure.UnitConverter;
-import javax.media.jai.iterator.RandomIter;
+import org.eclipse.imagen.iterator.RandomIter;
 import org.geoserver.catalog.Catalog;
 import org.geoserver.catalog.LayerInfo;
 import org.geoserver.catalog.MetadataMap;
@@ -59,39 +60,42 @@ import ucar.units.UnitSystemException;
 
 public abstract class AbstractNetCDFEncoder implements NetCDFEncoder {
 
+    public static final String SHUFFLE_KEY = "shuffle";
+    public static final String DATA_PACKING_KEY = "dataPacking";
+    public static final String COMPRESSION_KEY = "compression";
+    public static final String VARIABLE_NAME_KEY = "variableName";
+    public static final String UOM_KEY = "uom";
+    public static final String COPY_GLOBAL_ATTRIBUTES_KEY = "copyGlobalAttributes";
+    public static final String COPY_VARIABLE_ATTRIBUTES_KEY = "copyVariableAttributes";
+
     protected static StandardUnitFormat SUF = StandardUnitFormat.instance();
 
     public static final Logger LOGGER = Logging.getLogger(AbstractNetCDFEncoder.class);
 
-    protected static final double EQUALITY_DELTA =
-            1E-10; // Consider customizing it depending on the noData magnitude
+    protected static final double EQUALITY_DELTA = 1E-10; // Consider customizing it depending on the noData magnitude
 
     /**
-     * Attributes that are never copied to the main output variable from a NetCDF/GRIB source
-     * because they require special handling.
-     */
-    protected static final Set<String> COPY_ATTRIBUTES_BLACKLIST =
-            Set.of(
-                    // coordinate variable names are usually changed
-                    "coordinates",
-                    // do not survive type change or packing and should be set from no-data value
-                    "_FillValue",
-                    "missing_value",
-                    // this one is better not copied over in case of sub-setting instead
-                    "_ChunkSizes");
-
-    /**
-     * Global Attributes that are never copied from a NetCDF/GRIB source because they require
+     * Attributes that are never copied to the main output variable from a NetCDF/GRIB source because they require
      * special handling.
      */
+    protected static final Set<String> COPY_ATTRIBUTES_BLACKLIST = Set.of(
+            // coordinate variable names are usually changed
+            "coordinates",
+            // do not survive type change or packing and should be set from no-data value
+            "_FillValue",
+            "missing_value",
+            // this one is better not copied over in case of sub-setting instead
+            "_ChunkSizes");
+
+    /** Global Attributes that are never copied from a NetCDF/GRIB source because they require special handling. */
     protected static final Set<String> COPY_GLOBAL_ATTRIBUTES_BLACKLIST = Set.of("_NCProperties");
 
     /** Bean related to the {@link NetCDFCFParser} */
     protected static NetCDFParserBean parserBean = GeoServerExtensions.bean(NetCDFParserBean.class);
 
     /**
-     * A dimension mapping between dimension names and dimension manager instances We use a Linked
-     * map to preserve the dimension order
+     * A dimension mapping between dimension names and dimension manager instances We use a Linked map to preserve the
+     * dimension order
      */
     protected NetCDFDimensionsManager dimensionsManager = new NetCDFDimensionsManager();
 
@@ -140,10 +144,7 @@ public abstract class AbstractNetCDFEncoder implements NetCDFEncoder {
      * @param encodingParameters customized encoding params
      */
     public AbstractNetCDFEncoder(
-            GranuleStack granuleStack,
-            File file,
-            Map<String, String> encodingParameters,
-            String outputFormat)
+            GranuleStack granuleStack, File file, Map<String, String> encodingParameters, String outputFormat)
             throws IOException {
         this.granuleStack = granuleStack;
         this.sampleGranule = granuleStack.getGranules().get(0);
@@ -197,10 +198,8 @@ public abstract class AbstractNetCDFEncoder implements NetCDFEncoder {
         if (globalAttributes != null) {
             for (NetCDFSettingsContainer.GlobalAttribute att : globalAttributes) {
                 if (att.getKey().equalsIgnoreCase(NetCDFUtilities.CONVENTIONS)) {
-                    writerb.addAttribute(
-                            new Attribute(
-                                    NetCDFUtilities.COORD_SYS_BUILDER,
-                                    NetCDFUtilities.COORD_SYS_BUILDER_CONVENTION));
+                    writerb.addAttribute(new Attribute(
+                            NetCDFUtilities.COORD_SYS_BUILDER, NetCDFUtilities.COORD_SYS_BUILDER_CONVENTION));
                 }
                 writerb.addAttribute(buildAttribute(att.getKey(), att.getValue()));
             }
@@ -236,10 +235,7 @@ public abstract class AbstractNetCDFEncoder implements NetCDFEncoder {
             try {
                 return NetCDFUtilities.getDataset(sourceUrl);
             } catch (Exception e) {
-                LOGGER.info(
-                        String.format(
-                                "Failed to open source URL %s as NetCDF/GRIB: %s",
-                                sourceUrl, e.getMessage()));
+                LOGGER.info("Failed to open source URL %s as NetCDF/GRIB: %s".formatted(sourceUrl, e.getMessage()));
             }
         }
         return null;
@@ -260,18 +256,16 @@ public abstract class AbstractNetCDFEncoder implements NetCDFEncoder {
         return new Attribute(key, value);
     }
 
-    protected NetcdfFormatWriter.Builder getWriterBuilder(File file, String outputFormat)
-            throws IOException {
+    protected NetcdfFormatWriter.Builder getWriterBuilder(File file, String outputFormat) throws IOException {
         if (NetCDFUtilities.NETCDF4_MIMETYPE.equalsIgnoreCase(outputFormat)) {
             ncFormat = NetcdfFileFormat.NETCDF4_CLASSIC;
         } else {
             if (LOGGER.isLoggable(Level.FINE)) {
-                LOGGER.fine(
-                        "Requested output format "
-                                + outputFormat
-                                + " isn't "
-                                + NetCDFUtilities.NETCDF4_MIMETYPE
-                                + "\nFallback to Version 3");
+                LOGGER.fine("Requested output format "
+                        + outputFormat
+                        + " isn't "
+                        + NetCDFUtilities.NETCDF4_MIMETYPE
+                        + "\nFallback to Version 3");
             }
             // Version 3 as fallback (the Default)
             ncFormat = NetcdfFileFormat.NETCDF3;
@@ -283,13 +277,10 @@ public abstract class AbstractNetCDFEncoder implements NetCDFEncoder {
                 throw new IOException(NetCDFUtilities.NC4_ERROR_MESSAGE);
             }
             Nc4Chunking chunker = new Nc4ChunkingDefault(compressionLevel, shuffle);
-            writerb =
-                    NetcdfFormatWriter.createNewNetcdf4(ncFormat, file.getAbsolutePath(), chunker);
+            writerb = NetcdfFormatWriter.createNewNetcdf4(ncFormat, file.getAbsolutePath(), chunker);
         }
 
-        return writerb != null
-                ? writerb
-                : NetcdfFormatWriter.createNewNetcdf3(file.getAbsolutePath());
+        return writerb != null ? writerb : NetcdfFormatWriter.createNewNetcdf3(file.getAbsolutePath());
     }
 
     /**
@@ -316,9 +307,8 @@ public abstract class AbstractNetCDFEncoder implements NetCDFEncoder {
     @SuppressWarnings("PMD.MissingOverride")
     protected NetCDFLayerSettingsContainer getSettings(Map<String, String> encodingParameters) {
         Set<String> keys = encodingParameters.keySet();
-        if (keys != null
-                && !keys.isEmpty()
-                && keys.contains(WCS20GetCoverageResponse.COVERAGE_ID_PARAM)) {
+        NetCDFLayerSettingsContainer settings = null;
+        if (keys != null && !keys.isEmpty() && keys.contains(WCS20GetCoverageResponse.COVERAGE_ID_PARAM)) {
             String coverageId = encodingParameters.get(WCS20GetCoverageResponse.COVERAGE_ID_PARAM);
             if (coverageId != null) {
                 GeoServer geoserver = GeoServerExtensions.bean(GeoServer.class);
@@ -330,29 +320,87 @@ public abstract class AbstractNetCDFEncoder implements NetCDFEncoder {
                         map = info.getResource().getMetadata();
                     }
                 }
-                if (map != null
-                        && !map.isEmpty()
-                        && map.containsKey(NetCDFSettingsContainer.NETCDFOUT_KEY)) {
-                    NetCDFLayerSettingsContainer settings =
-                            map.get(
-                                    NetCDFSettingsContainer.NETCDFOUT_KEY,
-                                    NetCDFLayerSettingsContainer.class);
-                    return settings;
+                if (map != null && !map.isEmpty() && map.containsKey(NetCDFSettingsContainer.NETCDFOUT_KEY)) {
+                    settings = map.get(NetCDFSettingsContainer.NETCDFOUT_KEY, NetCDFLayerSettingsContainer.class);
                 }
             }
         }
+        if (hasEncodingParams(encodingParameters)) {
+            settings = applyEncodingOverrides(settings, encodingParameters);
+        }
 
-        return null;
+        return settings;
+    }
+
+    private boolean hasEncodingParams(Map<String, String> encodingParameters) {
+        return encodingParameters.containsKey(COMPRESSION_KEY)
+                || encodingParameters.containsKey(DATA_PACKING_KEY)
+                || encodingParameters.containsKey(SHUFFLE_KEY)
+                || encodingParameters.containsKey(VARIABLE_NAME_KEY)
+                || encodingParameters.containsKey(UOM_KEY);
+    }
+
+    private NetCDFLayerSettingsContainer applyEncodingOverrides(
+            NetCDFLayerSettingsContainer inputSettings, Map<String, String> encodingParameters) {
+        NetCDFLayerSettingsContainer settings =
+                inputSettings != null ? inputSettings.copy() : new NetCDFLayerSettingsContainer();
+
+        // Check for known keys and override accordingly
+        if (encodingParameters.containsKey(COMPRESSION_KEY)) {
+            String compressionLevel = encodingParameters.get(COMPRESSION_KEY);
+            try {
+                int cl = Integer.parseInt(compressionLevel);
+                settings.setCompressionLevel(cl);
+            } catch (NumberFormatException nfe) {
+                LOGGER.info("Specified compression level is not valid. compression = " + compressionLevel);
+            }
+        }
+        if (encodingParameters.containsKey(VARIABLE_NAME_KEY)) {
+            settings.setLayerName(encodingParameters.get(VARIABLE_NAME_KEY));
+        }
+        if (encodingParameters.containsKey(UOM_KEY)) {
+            settings.setLayerUOM(encodingParameters.get(UOM_KEY));
+        }
+        if (encodingParameters.containsKey(SHUFFLE_KEY)) {
+            String shuffle = encodingParameters.get(SHUFFLE_KEY);
+            boolean cs = Boolean.parseBoolean(shuffle);
+            settings.setShuffle(cs);
+        }
+        if (encodingParameters.containsKey(COPY_GLOBAL_ATTRIBUTES_KEY)) {
+            String copyGlobal = encodingParameters.get(COPY_GLOBAL_ATTRIBUTES_KEY);
+            boolean cpga = Boolean.parseBoolean(copyGlobal);
+            settings.setCopyGlobalAttributes(cpga);
+        }
+        if (encodingParameters.containsKey(COPY_VARIABLE_ATTRIBUTES_KEY)) {
+            String copyVariableAttributes = encodingParameters.get(COPY_VARIABLE_ATTRIBUTES_KEY);
+            boolean cpva = Boolean.parseBoolean(copyVariableAttributes);
+            settings.setCopyAttributes(cpva);
+        }
+        if (encodingParameters.containsKey(DATA_PACKING_KEY)) {
+            Optional<DataPacking> result = getDataPacking(encodingParameters.get(DATA_PACKING_KEY));
+            if (result.isPresent()) {
+                settings.setDataPacking(result.get());
+            }
+        }
+        return settings;
+    }
+
+    private static Optional<DataPacking> getDataPacking(String input) {
+        try {
+            return Optional.of(DataPacking.valueOf(input.toUpperCase()));
+        } catch (IllegalArgumentException | NullPointerException e) {
+            LOGGER.info("Specified DataPacking is not valid: " + input);
+            return Optional.empty();
+        }
     }
 
     protected int checkLevel(Integer level) {
         if (level == null || (level < 0 || level > 9)) {
             if (LOGGER.isLoggable(Level.WARNING)) {
-                LOGGER.warning(
-                        "NetCDF 4 compression Level not in the proper range [0, 9]: "
-                                + level
-                                + "\nProceeding with default value: "
-                                + NetCDFSettingsContainer.DEFAULT_COMPRESSION);
+                LOGGER.warning("NetCDF 4 compression Level not in the proper range [0, 9]: "
+                        + level
+                        + "\nProceeding with default value: "
+                        + NetCDFSettingsContainer.DEFAULT_COMPRESSION);
             }
             return NetCDFSettingsContainer.DEFAULT_COMPRESSION;
         }
@@ -362,19 +410,15 @@ public abstract class AbstractNetCDFEncoder implements NetCDFEncoder {
     /** Update the dimension values of a Dimension, by inspecting the coverage properties */
     protected void updateDimensionValues(GridCoverage2D coverage) {
         Map properties = coverage.getProperties();
-        for (NetCDFDimensionsManager.NetCDFDimensionMapping dimension :
-                dimensionsManager.getDimensions()) {
+        for (NetCDFDimensionsManager.NetCDFDimensionMapping dimension : dimensionsManager.getDimensions()) {
             final String dimensionName = dimension.getName();
             final Object value = properties.get(dimensionName);
             if (value == null) {
                 Set<String> dimensions = crsWriter.getCoordinatesDimensionNames();
                 // Coordinates dimensions (lon/lat) aren't taken into account
                 // for values update. Do not warn if they are missing
-                if (dimensions != null
-                        && !dimensions.contains(dimensionName)
-                        && LOGGER.isLoggable(Level.WARNING)) {
-                    LOGGER.warning(
-                            "No Dimensions available with the specified name: " + dimensionName);
+                if (dimensions != null && !dimensions.contains(dimensionName) && LOGGER.isLoggable(Level.WARNING)) {
+                    LOGGER.warning("No Dimensions available with the specified name: " + dimensionName);
                 }
             } else {
                 dimension.getDimensionValues().addValue(value);
@@ -399,14 +443,12 @@ public abstract class AbstractNetCDFEncoder implements NetCDFEncoder {
 
         // Loop over dimensions
         Dimension boundDimension = null;
-        for (NetCDFDimensionsManager.NetCDFDimensionMapping dimension :
-                dimensionsManager.getDimensions()) {
+        for (NetCDFDimensionsManager.NetCDFDimensionMapping dimension : dimensionsManager.getDimensions()) {
             final DimensionBean dim = dimension.getCoverageDimension();
             final boolean isRange = dim.isRange();
             String dimensionName = dimension.getName();
             final int dimensionLength = dimension.getDimensionValues().getSize();
-            if (dimensionName.equalsIgnoreCase("TIME")
-                    || dimensionName.equalsIgnoreCase("ELEVATION")) {
+            if (dimensionName.equalsIgnoreCase("TIME") || dimensionName.equalsIgnoreCase("ELEVATION")) {
                 // Special management for TIME and ELEVATION dimensions
                 // we will put these dimension lowercase for NetCDF names
                 dimensionName = dimensionName.toLowerCase();
@@ -420,21 +462,16 @@ public abstract class AbstractNetCDFEncoder implements NetCDFEncoder {
             dimension.setNetCDFDimension(netcdfDimension);
 
             // Assign variable to dimensions having coordinates
-            Variable.Builder variableBuilder =
-                    writerb.addVariable(
-                                    dimensionName,
-                                    NetCDFUtilities.getNetCDFDataType(dim.getDatatype()),
-                                    dimensionName)
-                            .addAttribute(new Attribute(NetCDFUtilities.LONG_NAME, dimensionName))
-                            .addAttribute(
-                                    new Attribute(NetCDFUtilities.DESCRIPTION, dimensionName));
+            Variable.Builder variableBuilder = writerb.addVariable(
+                            dimensionName, NetCDFUtilities.getNetCDFDataType(dim.getDatatype()), dimensionName)
+                    .addAttribute(new Attribute(NetCDFUtilities.LONG_NAME, dimensionName))
+                    .addAttribute(new Attribute(NetCDFUtilities.DESCRIPTION, dimensionName));
 
             if (NetCDFUtilities.isATime(dim.getDatatype())) {
                 // Special management for times. We use the NetCDF convention of defining times
                 // starting from
                 // an origin. Right now we use the Linux EPOCH
-                variableBuilder.addAttribute(
-                        new Attribute(NetCDFUtilities.UNITS, NetCDFUtilities.TIME_ORIGIN));
+                variableBuilder.addAttribute(new Attribute(NetCDFUtilities.UNITS, NetCDFUtilities.TIME_ORIGIN));
             } else {
                 variableBuilder.addAttribute(new Attribute(NetCDFUtilities.UNITS, dim.getSymbol()));
             }
@@ -446,10 +483,7 @@ public abstract class AbstractNetCDFEncoder implements NetCDFEncoder {
                 boundsDimensions.add(boundDimension);
                 final String boundName = dimensionName + NetCDFUtilities.BOUNDS_SUFFIX;
                 variableBuilder.addAttribute(new Attribute(NetCDFUtilities.BOUNDS, boundName));
-                writerb.addVariable(
-                        boundName,
-                        NetCDFUtilities.getNetCDFDataType(dim.getDatatype()),
-                        boundsDimensions);
+                writerb.addVariable(boundName, NetCDFUtilities.getNetCDFDataType(dim.getDatatype()), boundsDimensions);
             }
         }
     }
@@ -459,8 +493,7 @@ public abstract class AbstractNetCDFEncoder implements NetCDFEncoder {
     public void write() throws IOException, ucar.ma2.InvalidRangeException {
         try (NetcdfFormatWriter formatWriter = writer) {
             crsWriter.setWriter(formatWriter);
-            for (NetCDFDimensionsManager.NetCDFDimensionMapping mapper :
-                    dimensionsManager.getDimensions()) {
+            for (NetCDFDimensionsManager.NetCDFDimensionMapping mapper : dimensionsManager.getDimensions()) {
                 crsWriter.setCoordinateVariable(mapper);
             }
 
@@ -475,8 +508,7 @@ public abstract class AbstractNetCDFEncoder implements NetCDFEncoder {
     @Override
     public void close() {
         // release resources
-        for (NetCDFDimensionsManager.NetCDFDimensionMapping mapper :
-                dimensionsManager.getDimensions()) {
+        for (NetCDFDimensionsManager.NetCDFDimensionMapping mapper : dimensionsManager.getDimensions()) {
             mapper.dispose();
         }
         dimensionsManager.dispose();
@@ -517,10 +549,9 @@ public abstract class AbstractNetCDFEncoder implements NetCDFEncoder {
         // Checking CF convention
         boolean validName = parser.hasEntryId(variableName) || parser.hasAliasId(variableName);
         // Checking UOM
-        Entry e =
-                parser.getEntry(variableName) != null
-                        ? parser.getEntry(variableName)
-                        : parser.getEntryFromAlias(variableName);
+        Entry e = parser.getEntry(variableName) != null
+                ? parser.getEntry(variableName)
+                : parser.getEntryFromAlias(variableName);
 
         boolean validUOM = false;
         if (e != null) {
@@ -529,9 +560,7 @@ public abstract class AbstractNetCDFEncoder implements NetCDFEncoder {
             if (canonical.equalsIgnoreCase(definedUnit)) {
                 validUOM = true;
                 if (LOGGER.isLoggable(Level.FINE)) {
-                    LOGGER.fine(
-                            "Canonical unit and specified unit are equal. "
-                                    + "Proceeding with standard_name set");
+                    LOGGER.fine("Canonical unit and specified unit are equal. " + "Proceeding with standard_name set");
                 }
             } else {
                 boolean parseable = false;
@@ -542,26 +571,21 @@ public abstract class AbstractNetCDFEncoder implements NetCDFEncoder {
                         validUOM = true;
                         parseable = true;
                         if (LOGGER.isLoggable(Level.FINE)) {
-                            LOGGER.fine(
-                                    "Canonical unit and specified unit are compatible. "
-                                            + "Proceeding with standard_name set");
+                            LOGGER.fine("Canonical unit and specified unit are compatible. "
+                                    + "Proceeding with standard_name set");
                         }
                     }
-                } catch (UnitDBException
-                        | SpecificationException
-                        | PrefixDBException
-                        | UnitSystemException e1) {
+                } catch (UnitDBException | SpecificationException | PrefixDBException | UnitSystemException e1) {
                     if (LOGGER.isLoggable(Level.FINE)) {
                         LOGGER.fine(e1.getLocalizedMessage());
                     }
                 }
                 if (!parseable) {
                     if (LOGGER.isLoggable(Level.INFO)) {
-                        LOGGER.info(
-                                "The specified unit "
-                                        + definedUnit
-                                        + " can't be converted to a "
-                                        + " UCAR unit so it doesn't allow to define a standard name");
+                        LOGGER.info("The specified unit "
+                                + definedUnit
+                                + " can't be converted to a "
+                                + " UCAR unit so it doesn't allow to define a standard name");
                     }
                 }
             }
@@ -572,9 +596,8 @@ public abstract class AbstractNetCDFEncoder implements NetCDFEncoder {
     }
 
     /**
-     * Get the x, y pixel from the data iterator and assign it to the NetCDF array matrix. Also
-     * check if the read pixel is noData and apply the unitConversion (if needed) and dataPacking
-     * (if needed).
+     * Get the x, y pixel from the data iterator and assign it to the NetCDF array matrix. Also check if the read pixel
+     * is noData and apply the unitConversion (if needed) and dataPacking (if needed).
      */
     protected void setPixel(
             int x,
@@ -613,10 +636,7 @@ public abstract class AbstractNetCDFEncoder implements NetCDFEncoder {
                     sampleFloat = (float) unitConverter.convert(sampleFloat);
                 }
                 if (dataPacker != null) {
-                    sample =
-                            validSample
-                                    ? dataPacker.pack(sampleFloat)
-                                    : dataPacker.getReservedValue();
+                    sample = validSample ? dataPacker.pack(sampleFloat) : dataPacker.getReservedValue();
                     setIntegerSample(netCDFDataType, matrix, matrixIndex, sample);
                 } else {
                     matrix.setFloat(matrixIndex, sampleFloat);
@@ -629,23 +649,18 @@ public abstract class AbstractNetCDFEncoder implements NetCDFEncoder {
                     sampleDouble = unitConverter.convert(sampleDouble);
                 }
                 if (dataPacker != null) {
-                    sample =
-                            validSample
-                                    ? dataPacker.pack(sampleDouble)
-                                    : dataPacker.getReservedValue();
+                    sample = validSample ? dataPacker.pack(sampleDouble) : dataPacker.getReservedValue();
                     setIntegerSample(netCDFDataType, matrix, matrixIndex, sample);
                 } else {
                     matrix.setDouble(matrixIndex, sampleDouble);
                 }
                 break;
             default:
-                throw new UnsupportedOperationException(
-                        "Operation not supported for this dataType: " + netCDFDataType);
+                throw new UnsupportedOperationException("Operation not supported for this dataType: " + netCDFDataType);
         }
     }
 
-    protected void setIntegerSample(
-            DataType netCDFDataType, Array matrix, Index matrixIndex, int sample) {
+    protected void setIntegerSample(DataType netCDFDataType, Array matrix, Index matrixIndex, int sample) {
         switch (netCDFDataType) {
             case BYTE:
                 matrix.setByte(matrixIndex, (byte) sample);
@@ -655,6 +670,8 @@ public abstract class AbstractNetCDFEncoder implements NetCDFEncoder {
                 break;
             case INT:
                 matrix.setInt(matrixIndex, sample);
+                break;
+            default:
                 break;
         }
     }
@@ -667,16 +684,12 @@ public abstract class AbstractNetCDFEncoder implements NetCDFEncoder {
         return (Math.abs(noDataValue - sample.doubleValue()) < EQUALITY_DELTA);
     }
 
-    /**
-     * Setup the proper NetCDF array indexing, taking current dimension values from the current
-     * coverage
-     */
+    /** Setup the proper NetCDF array indexing, taking current dimension values from the current coverage */
     protected void updateIndexing(final int[] indexing, final GridCoverage2D currentCoverage) {
         int i = 0;
         int dimElement = 0;
         final Map properties = currentCoverage.getProperties();
-        for (NetCDFDimensionsManager.NetCDFDimensionMapping manager :
-                dimensionsManager.getDimensions()) {
+        for (NetCDFDimensionsManager.NetCDFDimensionMapping manager : dimensionsManager.getDimensions()) {
             // Loop over dimensions
             final DimensionBean coverageDimension = manager.getCoverageDimension();
             if (coverageDimension != null) { // Lat and lon doesn't have a Coverage dimension
@@ -689,7 +702,8 @@ public abstract class AbstractNetCDFEncoder implements NetCDFEncoder {
                 // which matches the coverage's one
                 // TODO: Improve this search. Make it more smart/performant
                 @SuppressWarnings("unchecked")
-                final Set<Object> values = (Set<Object>) manager.getDimensionValues().getValues();
+                final Set<Object> values =
+                        (Set<Object>) manager.getDimensionValues().getValues();
                 for (Object value : values) {
                     if (value.equals(val)) {
                         indexing[i++] = dimElement;
@@ -713,16 +727,14 @@ public abstract class AbstractNetCDFEncoder implements NetCDFEncoder {
         // indices for which a data value as been written
         public final Set<Integer> writtenIndices = new HashSet<>();
 
-        public ExtraVariableRecord(
-                NetCDFSettingsContainer.ExtraVariable extraVariable, int dimensionIndex) {
+        public ExtraVariableRecord(NetCDFSettingsContainer.ExtraVariable extraVariable, int dimensionIndex) {
             this.extraVariable = extraVariable;
             this.dimensionIndex = dimensionIndex;
         }
     }
 
     @SuppressWarnings("deprecation") // getting Longname from attributes
-    protected void copyAttributes(
-            Variable sourceVar, Variable.Builder varb, DataPacking dataPacking) {
+    protected void copyAttributes(Variable sourceVar, Variable.Builder varb, DataPacking dataPacking) {
         AttributeContainerMutable attributesContainer = varb.getAttributeContainer();
         for (Attribute att : sourceVar.attributes()) {
             // do not allow overwrite or attributes in blacklist
@@ -738,35 +750,23 @@ public abstract class AbstractNetCDFEncoder implements NetCDFEncoder {
             for (NetCDFSettingsContainer.ExtraVariable extra : extraVariables) {
                 Variable sourceVar = source.findVariable(extra.getSource());
                 if (sourceVar == null) {
-                    LOGGER.info(
-                            String.format(
-                                    "Could not find extra variable source '%s' "
-                                            + "in NetCDF/GRIB %s",
-                                    extra.getSource(), source.getLocation()));
+                    LOGGER.info(String.format(
+                            "Could not find extra variable source '%s' " + "in NetCDF/GRIB %s",
+                            extra.getSource(), source.getLocation()));
                 } else if (!sourceVar.getDimensionsString().isEmpty()) {
-                    LOGGER.info(
-                            String.format(
-                                    "Only scalar extra variables are supported but source "
-                                            + "'%s' in NetCDF/GRIB %s has dimensions '%s'",
-                                    extra.getSource(),
-                                    source.getLocation(),
-                                    sourceVar.getDimensionsString()));
+                    LOGGER.info(String.format(
+                            "Only scalar extra variables are supported but source "
+                                    + "'%s' in NetCDF/GRIB %s has dimensions '%s'",
+                            extra.getSource(), source.getLocation(), sourceVar.getDimensionsString()));
                 } else if (variableAlreadyDefined(writerb, extra.getOutput())) {
-                    LOGGER.info(
-                            String.format(
-                                    "Extra variable output '%s' already exists",
-                                    extra.getOutput()));
+                    LOGGER.info("Extra variable output '%s' already exists".formatted(extra.getOutput()));
                 } else if (extra.getDimensions().split("\\s").length > 1) {
-                    LOGGER.info(
-                            String.format(
-                                    "Extra variable output '%s' " + "has too many dimensions '%s'",
-                                    extra.getOutput(), extra.getDimensions()));
+                    LOGGER.info(String.format(
+                            "Extra variable output '%s' " + "has too many dimensions '%s'",
+                            extra.getOutput(), extra.getDimensions()));
                 } else {
                     Variable.Builder outputVarb =
-                            writerb.addVariable(
-                                    extra.getOutput(),
-                                    sourceVar.getDataType(),
-                                    extra.getDimensions());
+                            writerb.addVariable(extra.getOutput(), sourceVar.getDataType(), extra.getDimensions());
                     for (Attribute att : sourceVar.attributes()) {
                         outputVarb.addAttribute(att);
                     }
@@ -809,14 +809,11 @@ public abstract class AbstractNetCDFEncoder implements NetCDFEncoder {
                 if (extra.getDimensions().isEmpty()) {
                     scalarExtraVariables.add(extra);
                 } else {
-                    for (int dimensionIndex = 0;
-                            dimensionIndex < dimName.length;
-                            dimensionIndex++) {
+                    for (int dimensionIndex = 0; dimensionIndex < dimName.length; dimensionIndex++) {
                         // side effect of this condition is to skip extra variables
                         // with multiple output dimensions (unsupported)
                         if (extra.getDimensions().equals(dimName[dimensionIndex])) {
-                            nonscalarExtraVariables.add(
-                                    new ExtraVariableRecord(extra, dimensionIndex));
+                            nonscalarExtraVariables.add(new ExtraVariableRecord(extra, dimensionIndex));
                             break;
                         }
                     }
