@@ -12,18 +12,17 @@ import org.geoserver.platform.Operation;
 import org.geoserver.wfs.request.FeatureCollectionResponse;
 
 /**
- * Appends paging links as HTTP headers for GetFeature responses, mandatory for all formats that
- * cannot do their own link encoding, and useful for all in general
+ * Appends paging links as HTTP headers for GetFeature responses, mandatory for all formats that cannot do their own
+ * link encoding, and useful for all in general
  */
 public class HttpHeaderLinksAppender extends AbstractDispatcherCallback {
 
     @Override
-    public Response responseDispatched(
-            Request request, Operation operation, Object result, Response response) {
+    public Response responseDispatched(Request request, Operation operation, Object result, Response response) {
         // is this a feature response we are about to encode?
-        if (result instanceof FeaturesResponse) {
+        if (result instanceof FeaturesResponse featuresResponse) {
             HttpServletResponse httpResponse = request.getHttpResponse();
-            FeatureCollectionResponse fcr = ((FeaturesResponse) result).getResponse();
+            FeatureCollectionResponse fcr = featuresResponse.getResponse();
             String contentType = response.getMimeType(result, operation);
             if (fcr.getPrevious() != null) {
                 addLink(httpResponse, "prev", contentType, fcr.getPrevious());
@@ -36,9 +35,8 @@ public class HttpHeaderLinksAppender extends AbstractDispatcherCallback {
         return response;
     }
 
-    private void addLink(
-            HttpServletResponse httpResponse, String rel, String contentType, String href) {
-        String headerValue = String.format("<%s>; rel=\"%s\"; type=\"%s\"", href, rel, contentType);
+    private void addLink(HttpServletResponse httpResponse, String rel, String contentType, String href) {
+        String headerValue = "<%s>; rel=\"%s\"; type=\"%s\"".formatted(href, rel, contentType);
         httpResponse.addHeader("Link", headerValue);
     }
 }
