@@ -21,8 +21,8 @@ import org.geotools.util.Range;
 import org.geotools.util.logging.Logging;
 
 /**
- * Utilities method to produce histogram from dimension domains values. Two types of histograms are
- * supported numerical, times and enumerated values.
+ * Utilities method to produce histogram from dimension domains values. Two types of histograms are supported numerical,
+ * times and enumerated values.
  */
 final class HistogramUtils {
 
@@ -45,10 +45,7 @@ final class HistogramUtils {
 
     private HistogramUtils() {}
 
-    /**
-     * Helper method that get the threshold value that will be used to check if the resolution is to
-     * high.
-     */
+    /** Helper method that get the threshold value that will be used to check if the resolution is to high. */
     private static long getHistogramMaxThreshold() {
         String value = System.getProperty(HISTOGRAM_MAX_THRESHOLD_VARIABLE);
         if (value == null) {
@@ -60,10 +57,9 @@ final class HistogramUtils {
     }
 
     /**
-     * Builds an histogram for the provided domain values. The returned tuple will contain the
-     * domain representation and the histogram values. The domain values should be numbers, dates or
-     * strings. Ranges are also supported, the min value will be used to discover the domain values
-     * type.
+     * Builds an histogram for the provided domain values. The returned tuple will contain the domain representation and
+     * the histogram values. The domain values should be numbers, dates or strings. Ranges are also supported, the min
+     * value will be used to discover the domain values type.
      */
     @SuppressWarnings("PMD.ForLoopCanBeForeach")
     static Tuple<String, List<Integer>> buildHistogram(
@@ -107,19 +103,14 @@ final class HistogramUtils {
                 indexes.forEach(i -> histogramValues.set(i, histogramValues.get(i) + 1));
             } else if (LOGGER.isLoggable(Level.FINE)) {
                 LOGGER.log(
-                        Level.FINE,
-                        "No values found for interval: "
-                                + range.getMinValue()
-                                + "-"
-                                + range.getMaxValue());
+                        Level.FINE, "No values found for interval: " + range.getMinValue() + "-" + range.getMaxValue());
             }
         }
         return Tuple.tuple(bucketsTuple.first, histogramValues);
     }
 
     /** Compute the buckets for the given domain values and resolution. */
-    private static Tuple<String, List<Range>> computeBuckets(
-            List<Comparable> domainValues, String resolution) {
+    private static Tuple<String, List<Range>> computeBuckets(List<Comparable> domainValues, String resolution) {
         switch (findHistogramType(domainValues)) {
             case NUMERIC:
                 return getNumericBuckets(domainValues, resolution);
@@ -133,9 +124,9 @@ final class HistogramUtils {
     /** Helper method that just founds the histogram type based on domains values. */
     private static HistogramType findHistogramType(List<Comparable> domainValues) {
         Object value = domainValues.get(domainValues.size() - 1);
-        if (value instanceof Range) {
+        if (value instanceof Range range) {
             // this is a range so lets use the min value
-            value = ((Range) value).getMinValue();
+            value = range.getMinValue();
         }
         // let's try to find this histogram type
         if (value instanceof Number) {
@@ -149,21 +140,19 @@ final class HistogramUtils {
     }
 
     /**
-     * Helper method that creates buckets for a numeric domain based on the provided resolution. The
-     * returned tuple will contain the domain representation and the domain buckets.
+     * Helper method that creates buckets for a numeric domain based on the provided resolution. The returned tuple will
+     * contain the domain representation and the domain buckets.
      */
-    private static Tuple<String, List<Range>> getNumericBuckets(
-            List<Comparable> domainValues, String resolution) {
+    private static Tuple<String, List<Range>> getNumericBuckets(List<Comparable> domainValues, String resolution) {
         Tuple<Double, Double> minMax = DimensionsUtils.getMinMax(domainValues, Double.class);
         return getNumericBuckets(minMax.first, minMax.second, resolution);
     }
 
     /**
-     * Helper method that creates buckets for a numeric domain based on the provided resolution. The
-     * returned tuple will contain the domain representation and the domain buckets.
+     * Helper method that creates buckets for a numeric domain based on the provided resolution. The returned tuple will
+     * contain the domain representation and the domain buckets.
      */
-    public static Tuple<String, List<Range>> getNumericBuckets(
-            double min, double max, String resolution) {
+    public static Tuple<String, List<Range>> getNumericBuckets(double min, double max, String resolution) {
         resolution = resolution != null ? resolution : NUMERICAL_DEFAULT_RESOLUTION;
         double finalResolution = Double.parseDouble(resolution);
         int i = 0;
@@ -182,8 +171,7 @@ final class HistogramUtils {
             // one bucket catches all
             boolean includeLast = (max - min) < finalResolution;
             return Tuple.tuple(
-                    domainString,
-                    Collections.singletonList(NumberRange.create(min, true, max, includeLast)));
+                    domainString, Collections.singletonList(NumberRange.create(min, true, max, includeLast)));
         }
         List<Range> buckets = new ArrayList<>();
         for (double step = min; step < max; step += finalResolution) {
@@ -199,18 +187,17 @@ final class HistogramUtils {
     }
 
     /**
-     * Helper method that creates buckets for a time domain based on the provided resolution. The
-     * returned tuple will contain the domain representation and the domain buckets.
+     * Helper method that creates buckets for a time domain based on the provided resolution. The returned tuple will
+     * contain the domain representation and the domain buckets.
      */
-    private static Tuple<String, List<Range>> getTimeBuckets(
-            List<Comparable> domainValues, String resolution) {
+    private static Tuple<String, List<Range>> getTimeBuckets(List<Comparable> domainValues, String resolution) {
         Tuple<Date, Date> minMax = DimensionsUtils.getMinMax(domainValues, Date.class);
         return getTimeBuckets(minMax.first, minMax.second, resolution);
     }
 
     /**
-     * Helper method that creates buckets for a time domain based on the provided resolution. The
-     * returned tuple will contain the domain representation and the domain buckets.
+     * Helper method that creates buckets for a time domain based on the provided resolution. The returned tuple will
+     * contain the domain representation and the domain buckets.
      */
     public static Tuple<String, List<Range>> getTimeBuckets(Date min, Date max, String resolution) {
         // if the max value is at the very edge of the last interval, then add one more (we are
@@ -228,8 +215,7 @@ final class HistogramUtils {
                 max = new Date(max.getTime() + resolutionInMs);
             }
         } catch (ParseException e) {
-            throw new RuntimeException(
-                    String.format("Error parsing time resolution '%s'.", resolution), e);
+            throw new RuntimeException("Error parsing time resolution '%s'.".formatted(resolution), e);
         }
         Tuple<Date, Date> minMax = Tuple.tuple(min, max);
         Tuple<String, List<Date>> intervalsAndSpec = getDateIntervals(minMax, resolution);
@@ -244,8 +230,7 @@ final class HistogramUtils {
         if (intervals.size() == 1) {
             boolean includeLast = difference < resolutionInMs;
             return Tuple.tuple(
-                    intervalsAndSpec.first,
-                    Collections.singletonList(new DateRange(min, true, max, includeLast)));
+                    intervalsAndSpec.first, Collections.singletonList(new DateRange(min, true, max, includeLast)));
         }
         List<Range> buckets = new ArrayList<>();
         Date previous = intervals.get(0);
@@ -257,8 +242,7 @@ final class HistogramUtils {
     }
 
     /** Helper method that computes the time intervals for a certain resolution. */
-    private static Tuple<String, List<Date>> getDateIntervals(
-            Tuple<Date, Date> minMax, String resolution) {
+    private static Tuple<String, List<Date>> getDateIntervals(Tuple<Date, Date> minMax, String resolution) {
         ISO8601Formatter dateFormatter = new ISO8601Formatter();
         String domainString = dateFormatter.format(minMax.first);
         domainString += "/" + dateFormatter.format(minMax.second) + "/" + resolution;
@@ -267,13 +251,12 @@ final class HistogramUtils {
             List<Date> intervals = new ArrayList<>();
             @SuppressWarnings("unchecked")
             Collection<Object> parsed = timeParser.parse(domainString);
-            parsed.forEach(
-                    o -> {
-                        if (o instanceof Date) intervals.add((Date) o);
-                        else
-                            throw new RuntimeException(
-                                    "Unexpected DateRange specification found, this service can only handle points in time");
-                    });
+            parsed.forEach(o -> {
+                if (o instanceof Date date) intervals.add(date);
+                else
+                    throw new RuntimeException(
+                            "Unexpected DateRange specification found, this service can only handle points in time");
+            });
             Date last = intervals.get(intervals.size() - 1);
             long resolutionInMs = org.geoserver.ows.kvp.TimeParser.parsePeriod(resolution);
             if (last.getTime() < minMax.second.getTime()) {
@@ -281,15 +264,13 @@ final class HistogramUtils {
             }
             return Tuple.tuple(domainString, intervals);
         } catch (ParseException exception) {
-            throw new RuntimeException(
-                    String.format("Error parsing time resolution '%s'.", resolution), exception);
+            throw new RuntimeException("Error parsing time resolution '%s'.".formatted(resolution), exception);
         }
     }
 
     /**
-     * Helper method that creates buckets for an enumerated domain. The returned tuple will contain
-     * the domain representation and the domain buckets. Note that in this case the resolution will
-     * be ignored.
+     * Helper method that creates buckets for an enumerated domain. The returned tuple will contain the domain
+     * representation and the domain buckets. Note that in this case the resolution will be ignored.
      */
     private static Tuple<String, List<Range>> getEnumeratedBuckets(List<Comparable> domainValues) {
         StringBuilder domain = new StringBuilder();
@@ -341,8 +322,8 @@ final class HistogramUtils {
     }
 
     /**
-     * Range class used to represent enumerated values. The contains operation will return true if
-     * the provided values is equal to the enumerated value.
+     * Range class used to represent enumerated values. The contains operation will return true if the provided values
+     * is equal to the enumerated value.
      */
     private static final class EnumeratedRange extends Range<String> {
 
