@@ -24,15 +24,11 @@ import org.springframework.web.context.request.RequestContextHolder;
 /** Base class for vector based dimension */
 public abstract class VectorDimension extends Dimension {
 
-    public VectorDimension(
-            WMS wms, String dimensionName, LayerInfo layerInfo, DimensionInfo dimensionInfo) {
+    public VectorDimension(WMS wms, String dimensionName, LayerInfo layerInfo, DimensionInfo dimensionInfo) {
         super(wms, dimensionName, layerInfo, dimensionInfo);
     }
 
-    /**
-     * Helper method used to get domain values from a vector type in the form of a feature
-     * collection.
-     */
+    /** Helper method used to get domain values from a vector type in the form of a feature collection. */
     @Override
     protected FeatureCollection getDomain(Query query) {
         FeatureTypeInfo typeInfo = (FeatureTypeInfo) getResourceInfo();
@@ -42,9 +38,7 @@ public abstract class VectorDimension extends Dimension {
             source = DimensionsUtils.getFeatures(typeInfo);
         } catch (Exception exception) {
             throw new RuntimeException(
-                    String.format(
-                            "Error getting feature source of vector '%s'.", resourceInfo.getName()),
-                    exception);
+                    "Error getting feature source of vector '%s'.".formatted(resourceInfo.getName()), exception);
         }
         // fix type name
         query = new Query(query);
@@ -53,9 +47,8 @@ public abstract class VectorDimension extends Dimension {
             return source.getFeatures(query);
         } catch (Exception exception) {
             throw new RuntimeException(
-                    String.format(
-                            "Error reading feature from layer '%s' for dimension '%s'.",
-                            resourceInfo.getName(), getDimensionName()),
+                    "Error reading feature from layer '%s' for dimension '%s'."
+                            .formatted(resourceInfo.getName(), getDimensionName()),
                     exception);
         }
     }
@@ -65,11 +58,8 @@ public abstract class VectorDimension extends Dimension {
         FeatureCollection featureCollection = getDomain(new Query(null, filter));
         if (noDuplicates) {
             // no duplicate values should be included
-            Set<Comparable> values =
-                    DimensionsUtils.getValuesWithoutDuplicates(
-                            dimensionInfo.getAttribute(),
-                            dimensionInfo.getEndAttribute(),
-                            featureCollection);
+            Set<Comparable> values = DimensionsUtils.getValuesWithoutDuplicates(
+                    dimensionInfo.getAttribute(), dimensionInfo.getEndAttribute(), featureCollection);
             return new ArrayList<>(values);
         }
         // we need the duplicate values (this is useful for some operations like get histogram
@@ -87,8 +77,7 @@ public abstract class VectorDimension extends Dimension {
     }
 
     @Override
-    protected DomainSummary getPagedDomainValues(
-            Query query, int maxNumberOfValues, SortOrder sortOrder) {
+    protected DomainSummary getPagedDomainValues(Query query, int maxNumberOfValues, SortOrder sortOrder) {
         String attribute = dimensionInfo.getAttribute();
         String endAttribute = dimensionInfo.getEndAttribute();
         Query sortedQuery = new Query(query);
@@ -96,16 +85,15 @@ public abstract class VectorDimension extends Dimension {
         SortBy sortByDim = FILTER_FACTORY.sort(sortByEnd ? endAttribute : attribute, sortOrder);
         sortedQuery.setSortBy(new SortBy[] {sortByDim});
         FeatureCollection features = getDomain(sortedQuery);
-        return getPagedDomainValues(
-                features, attribute, endAttribute, maxNumberOfValues, sortByDim);
+        return getPagedDomainValues(features, attribute, endAttribute, maxNumberOfValues, sortByDim);
     }
 
     private boolean sortByEnd() {
         RequestAttributes attrs = RequestContextHolder.getRequestAttributes();
         if (attrs != null) {
             Object o = attrs.getAttribute(MultiDimensionalExtension.SORT_BY_END, 0);
-            if (o instanceof Boolean) {
-                return (Boolean) o;
+            if (o instanceof Boolean boolean1) {
+                return boolean1;
             }
         }
         return false;
