@@ -4,6 +4,8 @@
  */
 package org.geoserver.catalog;
 
+import static java.util.Collections.emptyList;
+
 import java.awt.RenderingHints;
 import java.io.BufferedOutputStream;
 import java.io.BufferedReader;
@@ -159,8 +161,8 @@ import si.uom.SI;
  *
  * <ul>
  *   <li>{@link #crsCache} - quick lookup of CoorrdinateReferenceSystem by srs name
- *   <li>{@link #dataStoreCache} - live {@link DataAccess} connections. Responsible for maintaining
- *       lifecycle with an appropriate call to {@link DataAccess#dispose()} when no longer in use.
+ *   <li>{@link #dataStoreCache} - live {@link DataAccess} connections. Responsible for maintaining lifecycle with an
+ *       appropriate call to {@link DataAccess#dispose()} when no longer in use.
  *   <li>{@link #featureTypeCache}
  *   <li>{@link #featureTypeAttributeCache}
  *   <li>{@link #wmsCache}
@@ -172,9 +174,7 @@ import si.uom.SI;
  */
 public class ResourcePool {
 
-    /**
-     * OGC "cylindrical earth" model, we'll use it to translate meters to degrees (yes, it's ugly)
-     */
+    /** OGC "cylindrical earth" model, we'll use it to translate meters to degrees (yes, it's ugly) */
     static final double OGC_DEGREE_TO_METERS = 6378137.0 * 2.0 * Math.PI / 360;
 
     static final double OGC_METERS_TO_DEGREES = 1 / OGC_DEGREE_TO_METERS;
@@ -216,31 +216,23 @@ public class ResourcePool {
     EntityResolverProvider entityResolverProvider;
 
     /**
-     * Applies attributes customization. It's a {@link RetypeFeatureTypeCallback}, it needs to be
-     * applied sooner in the process of setting up a FeatureSource, so it does not fit exactly the
-     * extension point lifecycle.
+     * Applies attributes customization. It's a {@link RetypeFeatureTypeCallback}, it needs to be applied sooner in the
+     * process of setting up a FeatureSource, so it does not fit exactly the extension point lifecycle.
      */
     TransformFeatureTypeCallback transformer = new TransformFeatureTypeCallback();
 
-    /**
-     * Holds the keys for all the cache having String keys. By ensuring identity allows to
-     * synchronize on id values.
-     */
+    /** Holds the keys for all the cache having String keys. By ensuring identity allows to synchronize on id values. */
     private CanonicalSet<String> cacheKeys;
 
-    /**
-     * Holds the key for the CoverageHintReaderCache. By ensuring identity allows to synchronize on
-     * the key.
-     */
+    /** Holds the key for the CoverageHintReaderCache. By ensuring identity allows to synchronize on the key. */
     private CanonicalSet<CoverageHintReaderKey> coverageCacheKeys;
 
     /** Creates a new instance of the resource pool explicitly supplying the application context. */
     public static ResourcePool create(Catalog catalog, ApplicationContext appContext) {
         // look for an implementation in spring context
-        ResourcePool pool =
-                appContext == null
-                        ? GeoServerExtensions.bean(ResourcePool.class)
-                        : GeoServerExtensions.bean(ResourcePool.class, appContext);
+        ResourcePool pool = appContext == null
+                ? GeoServerExtensions.bean(ResourcePool.class)
+                : GeoServerExtensions.bean(ResourcePool.class, appContext);
         if (pool == null) {
             pool = new ResourcePool();
         }
@@ -269,8 +261,7 @@ public class ResourcePool {
     /**
      * Creates the resource pool.
      *
-     * <p>Client code should use {@link ResourcePool#create(Catalog)} instead of calling this
-     * constructor directly.
+     * <p>Client code should use {@link ResourcePool#create(Catalog)} instead of calling this constructor directly.
      */
     protected ResourcePool(Catalog catalog) {
         this();
@@ -316,8 +307,7 @@ public class ResourcePool {
     }
 
     /**
-     * DataStoreCache implementation responsible for freeing DataAccess resources when they are no
-     * longer in use.
+     * DataStoreCache implementation responsible for freeing DataAccess resources when they are no longer in use.
      *
      * @return Cache used to look up DataAccess via id
      * @see #getDataStoreCache()
@@ -348,8 +338,7 @@ public class ResourcePool {
      *
      * <p>The cache key is the corresponding FeatureTypeInfo id ({@link CatalogInfo#getId()}.
      *
-     * <p>The concrete Map implementation is determined by {@link
-     * #createFeatureTypeAttributeCache(int)}
+     * <p>The concrete Map implementation is determined by {@link #createFeatureTypeAttributeCache(int)}
      */
     public Map<String, List<AttributeTypeInfo>> getFeatureTypeAttributeCache() {
         return featureTypeAttributeCache;
@@ -438,8 +427,8 @@ public class ResourcePool {
     }
 
     /**
-     * Sets the coverage executor used for concurrent processing of files (e.g. in image mosaic,
-     * when multi-threaded loading is enabled)
+     * Sets the coverage executor used for concurrent processing of files (e.g. in image mosaic, when multi-threaded
+     * loading is enabled)
      */
     public synchronized void setCoverageExecutor(ThreadPoolExecutor coverageExecutor) {
         this.coverageExecutor = coverageExecutor;
@@ -476,8 +465,7 @@ public class ResourcePool {
     }
 
     /**
-     * Returns a {@link CoordinateReferenceSystem} object based on its identifier caching the
-     * result.
+     * Returns a {@link CoordinateReferenceSystem} object based on its identifier caching the result.
      *
      * <p>The <tt>srsName</tt> parameter should have one of the forms:
      *
@@ -490,8 +478,8 @@ public class ResourcePool {
      * OR be something parsable by {@link CRS#decode(String)}.
      *
      * @param srsName The coordinate reference system identifier.
-     * @throws IOException In the event the srsName can not be parsed or leads to an exception in
-     *     the underlying call to CRS.decode.
+     * @throws IOException In the event the srsName can not be parsed or leads to an exception in the underlying call to
+     *     CRS.decode.
      */
     public CoordinateReferenceSystem getCRS(String srsName) throws IOException {
 
@@ -516,18 +504,15 @@ public class ResourcePool {
     }
 
     /**
-     * Looks up the identifier of a given {@link CoordinateReferenceSystem} object, giving a
-     * preference to EPSG codes expressed as <code>EPSG:xyzw</code>, when possible, and returning
-     * another code, otherwise. This behavior is specific to GeoServer, thus, it has not been
-     * included in the GeoTools {@link CRS} facade.
+     * Looks up the identifier of a given {@link CoordinateReferenceSystem} object, giving a preference to EPSG codes
+     * expressed as <code>EPSG:xyzw</code>, when possible, and returning another code, otherwise. This behavior is
+     * specific to GeoServer, thus, it has not been included in the GeoTools {@link CRS} facade.
      *
      * @param crs The coordinate reference system.
-     * @param fullScan If {@code true}, an exhaustive full scan against all registered objects will
-     *     be performed (may be slow). Otherwise only a fast lookup based on embedded identifiers
-     *     and names will be performed.
+     * @param fullScan If {@code true}, an exhaustive full scan against all registered objects will be performed (may be
+     *     slow). Otherwise only a fast lookup based on embedded identifiers and names will be performed.
      */
-    public static String lookupIdentifier(CoordinateReferenceSystem crs, boolean fullScan)
-            throws FactoryException {
+    public static String lookupIdentifier(CoordinateReferenceSystem crs, boolean fullScan) throws FactoryException {
         // full scan can be pretty expensive, cache results
         if (fullScan) {
             String identifier = crsIdentifierCache.get(crs);
@@ -546,13 +531,12 @@ public class ResourcePool {
     private static String lookupIdentifierInternal(CoordinateReferenceSystem crs, boolean fullScan)
             throws FactoryException {
         // Lookup the first code, it should be the official one for this CRS
-        String result =
-                crs.getIdentifiers().stream()
-                        .filter(id -> id.getAuthority() != null)
-                        .filter(id -> id.getCode() != null)
-                        .findFirst()
-                        .map(id -> id.toString())
-                        .orElse(null);
+        String result = crs.getIdentifiers().stream()
+                .filter(id -> id.getAuthority() != null)
+                .filter(id -> id.getCode() != null)
+                .findFirst()
+                .map(id -> id.toString())
+                .orElse(null);
         // .. then validate it can be used to lookup the CRS, and that it matches
         if (result != null) {
             try {
@@ -579,8 +563,7 @@ public class ResourcePool {
 
         // search in other authorities, skipping the alias ones
         final Set<Citation> authorities = new LinkedHashSet<>();
-        for (final CRSAuthorityFactory factory :
-                ReferencingFactoryFinder.getCRSAuthorityFactories(null)) {
+        for (final CRSAuthorityFactory factory : ReferencingFactoryFinder.getCRSAuthorityFactories(null)) {
             authorities.add(factory.getAuthority());
         }
         authorities.remove(Citations.HTTP_OGC);
@@ -597,12 +580,11 @@ public class ResourcePool {
     /**
      * Returns the datastore factory used to create underlying resources for a datastore.
      *
-     * <p>This method first uses {@link DataStoreInfo#getType()} to obtain the datastore. In the
-     * event of a failure it falls back on {@link DataStoreInfo#getConnectionParameters()}.
+     * <p>This method first uses {@link DataStoreInfo#getType()} to obtain the datastore. In the event of a failure it
+     * falls back on {@link DataStoreInfo#getConnectionParameters()}.
      *
      * @param info The data store metadata.
-     * @return The datastore factory, or null if no such factory could be found, or the factory is
-     *     not available.
+     * @return The datastore factory, or null if no such factory could be found, or the factory is not available.
      * @throws IOException Any I/O errors.
      */
     public DataAccessFactory getDataStoreFactory(DataStoreInfo info) throws IOException {
@@ -626,16 +608,15 @@ public class ResourcePool {
     /**
      * Returns the underlying resource for a DataAccess, caching the result.
      *
-     * <p>In the result of the resource not being in the cache {@link
-     * DataStoreInfo#getConnectionParameters()} is used to create the connection.
+     * <p>In the result of the resource not being in the cache {@link DataStoreInfo#getConnectionParameters()} is used
+     * to create the connection.
      *
-     * @param info DataStoreMeta providing id used for cache lookup (and connection paraemters if a
-     *     connection is needed)
+     * @param info DataStoreMeta providing id used for cache lookup (and connection paraemters if a connection is
+     *     needed)
      * @throws IOException Any errors that occur connecting to the resource.
      */
     @SuppressWarnings("unchecked")
-    public DataAccess<? extends FeatureType, ? extends Feature> getDataStore(DataStoreInfo info)
-            throws IOException {
+    public DataAccess<? extends FeatureType, ? extends Feature> getDataStore(DataStoreInfo info) throws IOException {
 
         DataStoreInfo expandedStore = clone(info, true);
 
@@ -672,22 +653,19 @@ public class ResourcePool {
             }
             disableStoreInfoIfNeeded(info, DataStoreInfo.class, e);
 
-            if (e instanceof IOException) {
-                throw (IOException) e;
+            if (e instanceof IOException exception) {
+                throw exception;
             } else {
                 throw (IOException) new IOException().initCause(e);
             }
         }
     }
 
-    private void disableStoreInfoIfNeeded(
-            StoreInfo storeInfo, Class<? extends StoreInfo> clazz, Exception e) {
+    private void disableStoreInfoIfNeeded(StoreInfo storeInfo, Class<? extends StoreInfo> clazz, Exception e) {
         if (storeInfo.isEnabled() && storeInfo.isDisableOnConnFailure()) {
             LOGGER.warning(
-                    "Auto disable option is set to true. Disabling the store due connection error: "
-                            + e.getMessage());
-            StoreInfo toDisable =
-                    catalog.getStoreByName(storeInfo.getWorkspace(), storeInfo.getName(), clazz);
+                    "Auto disable option is set to true. Disabling the store due connection error: " + e.getMessage());
+            StoreInfo toDisable = catalog.getStoreByName(storeInfo.getWorkspace(), storeInfo.getName(), clazz);
             toDisable.setEnabled(false);
             catalog.save(toDisable);
         }
@@ -702,8 +680,7 @@ public class ResourcePool {
         // call this method to execute the hack which recognizes
         // urls which are relative to the data directory
         // TODO: find a better way to do this
-        connectionParameters =
-                ResourcePool.getParams(connectionParameters, catalog.getResourceLoader());
+        connectionParameters = ResourcePool.getParams(connectionParameters, catalog.getResourceLoader());
 
         // obtain the factory, either using the "type", or if not found, using the parameters
         DataAccessFactory factory = null;
@@ -713,10 +690,9 @@ public class ResourcePool {
             // ignoring since the error message is the same as for the null factory, see line below
         }
         if (factory == null) {
-            throw new IOException(
-                    "Failed to find the datastore factory for "
-                            + info.getName()
-                            + ", did you forget to install the store extension jar?");
+            throw new IOException("Failed to find the datastore factory for "
+                    + info.getName()
+                    + ", did you forget to install the store extension jar?");
         }
         Param[] params = factory.getParametersInfo();
 
@@ -773,9 +749,8 @@ public class ResourcePool {
         } catch (IOException e) {
             LOGGER.log(
                     Level.INFO,
-                    String.format(
-                            "Failed to create the store using the configured factory (%s), will try a generic lookup now.",
-                            factory.getClass()),
+                    "Failed to create the store using the configured factory (%s), will try a generic lookup now."
+                            .formatted(factory.getClass()),
                     e);
             dataStore = DataStoreUtils.getDataAccess(connectionParameters);
         }
@@ -793,8 +768,7 @@ public class ResourcePool {
         }
 
         if (dataStore == null) {
-            throw new NullPointerException(
-                    "Could not acquire data access '" + info.getName() + "'");
+            throw new NullPointerException("Could not acquire data access '" + info.getName() + "'");
         } else if (info.isDisableOnConnFailure()) {
             // do getNames() to force the store to open a connection and eventually to fail
             // for misconfiguration so that autodisable can then work properly.
@@ -806,9 +780,8 @@ public class ResourcePool {
     /**
      * Process connection parameters into a synchronized map.
      *
-     * <p>This is used to smooth any relative path kind of issues for any file URLS or directory.
-     * This code should be expanded to deal with any other context sensitive issues data stores tend
-     * to have.
+     * <p>This is used to smooth any relative path kind of issues for any file URLS or directory. This code should be
+     * expanded to deal with any other context sensitive issues data stores tend to have.
      *
      * <ul>
      *   <li>key ends in URL, and value is a string
@@ -819,14 +792,13 @@ public class ResourcePool {
      * @return Processed parameters with relative file URLs resolved
      * @param m a map of data store connection parameters
      * @parm loader
-     * @task REVISIT: cache these?
+     * @revist cache these?
      */
     @SuppressWarnings("unchecked")
     public static <K, V> Map<K, V> getParams(Map<K, V> m, GeoServerResourceLoader loader) {
         Map<K, V> params = Collections.synchronizedMap(new HashMap<>(m));
 
-        final GeoServerEnvironment gsEnvironment =
-                GeoServerExtensions.bean(GeoServerEnvironment.class);
+        final GeoServerEnvironment gsEnvironment = GeoServerExtensions.bean(GeoServerEnvironment.class);
 
         for (Entry<K, V> entry : params.entrySet()) {
             String key = (String) entry.getKey();
@@ -839,39 +811,26 @@ public class ResourcePool {
             // TODO: this code is a pretty big hack, using the name to
             // determine if the key is a url, could be named something else
             // and still be a url
-            if ((key != null) && key.matches(".* *url") && value instanceof String) {
-                String path = (String) value;
+            if ((key != null) && key.matches(".* *url") && value instanceof String path) {
 
                 if (path.startsWith("file:")) {
                     File fixedPath =
-                            Resources.find(
-                                    Resources.fromURL(
-                                            Files.asResource(loader.getBaseDirectory()), path),
-                                    true);
+                            Resources.find(Resources.fromURL(Files.asResource(loader.getBaseDirectory()), path), true);
                     URL url = URLs.fileToUrl(fixedPath);
                     entry.setValue((V) url.toExternalForm());
                 }
-            } else if (value instanceof URL && ((URL) value).getProtocol().equals("file")) {
-                URL url = (URL) value;
-                File fixedPath =
-                        Resources.find(
-                                Resources.fromURL(
-                                        Files.asResource(loader.getBaseDirectory()),
-                                        url.toString()),
-                                true);
+            } else if (value instanceof URL url && url.getProtocol().equals("file")) {
+                File fixedPath = Resources.find(
+                        Resources.fromURL(Files.asResource(loader.getBaseDirectory()), url.toString()), true);
                 entry.setValue((V) URLs.fileToUrl(fixedPath));
             } else if ((key != null)
                     && (key.equals("directory") || key.equals("database") || key.equals("file"))
-                    && value instanceof String) {
-                String path = (String) value;
+                    && value instanceof String path) {
                 // if a url is used for a directory (for example property store), convert it to path
 
                 if (path.startsWith("file:")) {
                     File fixedPath =
-                            Resources.find(
-                                    Resources.fromURL(
-                                            Files.asResource(loader.getBaseDirectory()), path),
-                                    true);
+                            Resources.find(Resources.fromURL(Files.asResource(loader.getBaseDirectory()), path), true);
                     entry.setValue((V) fixedPath.toString());
                 }
             }
@@ -931,10 +890,7 @@ public class ResourcePool {
         try {
             handleSchemaOverride(atts, info);
         } catch (Exception e) {
-            LOGGER.log(
-                    Level.WARNING,
-                    "Error occured applying schema override for " + info.getName(),
-                    e);
+            LOGGER.log(Level.WARNING, "Error occured applying schema override for " + info.getName(), e);
         }
         return atts;
     }
@@ -970,8 +926,7 @@ public class ResourcePool {
             if (oldSchemaFile != null) {
                 schemaFile = new File(oldSchemaFile.getParentFile(), "schema.xsd");
                 try (BufferedWriter out =
-                        new BufferedWriter(
-                                new OutputStreamWriter(new FileOutputStream(schemaFile)))) {
+                        new BufferedWriter(new OutputStreamWriter(new FileOutputStream(schemaFile)))) {
                     out.write("<xs:schema xmlns:xs='http://www.w3.org/2001/XMLSchema'");
                     out.write(" xmlns:gml='http://www.opengis.net/gml'");
                     out.write(">");
@@ -987,17 +942,16 @@ public class ResourcePool {
         if (schemaFile != null) {
             // TODO: farm this schema loading stuff to some utility class
             // parse the schema + generate attributes from that
-            List<XSDSchemaLocator> locators =
-                    Arrays.asList(GML.getInstance().createSchemaLocator());
+            List<XSDSchemaLocator> locators = Arrays.asList(GML.getInstance().createSchemaLocator());
             XSDSchema schema = null;
             try {
-                schema = Schemas.parse(schemaFile.getAbsolutePath(), locators, null);
+                schema = Schemas.parse(
+                        schemaFile.getAbsolutePath(), locators, emptyList(), emptyList(), getEntityResolver());
             } catch (Exception e) {
-                LOGGER.warning(
-                        "Unable to parse "
-                                + schemaFile.getAbsolutePath()
-                                + "."
-                                + " Falling back on native feature type");
+                LOGGER.warning("Unable to parse "
+                        + schemaFile.getAbsolutePath()
+                        + "."
+                        + " Falling back on native feature type");
             }
             if (schema != null) {
                 XSDTypeDefinition type = null;
@@ -1046,9 +1000,9 @@ public class ResourcePool {
     /**
      * Returns the underlying resource for a feature type, caching the result.
      *
-     * <p>In the event that the resource is not in the cache the associated data store resource is
-     * loaded, and the feature type resource obtained. During loading the underlying feature type
-     * resource is "wrapped" to take into account feature type name aliasing and reprojection.
+     * <p>In the event that the resource is not in the cache the associated data store resource is loaded, and the
+     * feature type resource obtained. During loading the underlying feature type resource is "wrapped" to take into
+     * account feature type name aliasing and reprojection.
      *
      * @param info The feature type metadata.
      * @throws IOException Any errors that occure while loading the resource.
@@ -1057,8 +1011,7 @@ public class ResourcePool {
         return getFeatureType(info, true);
     }
 
-    FeatureType getFeatureType(FeatureTypeInfo info, boolean handleProjectionPolicy)
-            throws IOException {
+    FeatureType getFeatureType(FeatureTypeInfo info, boolean handleProjectionPolicy) throws IOException {
         try {
             return tryGetFeatureType(info, handleProjectionPolicy);
         } catch (Exception ex) {
@@ -1073,16 +1026,14 @@ public class ResourcePool {
         }
     }
 
-    FeatureType tryGetFeatureType(FeatureTypeInfo info, boolean handleProjectionPolicy)
-            throws IOException {
+    FeatureType tryGetFeatureType(FeatureTypeInfo info, boolean handleProjectionPolicy) throws IOException {
         boolean cacheable = isCacheable(info);
         return cacheable
                 ? getCacheableFeatureType(info, handleProjectionPolicy)
                 : getNonCacheableFeatureType(info, handleProjectionPolicy);
     }
 
-    FeatureType getCacheableFeatureType(FeatureTypeInfo info, boolean handleProjectionPolicy)
-            throws IOException {
+    FeatureType getCacheableFeatureType(FeatureTypeInfo info, boolean handleProjectionPolicy) throws IOException {
 
         String id = info.getId();
         if (id == null) return acquireFeatureType(info, handleProjectionPolicy);
@@ -1102,11 +1053,9 @@ public class ResourcePool {
         return ft;
     }
 
-    private FeatureType acquireFeatureType(FeatureTypeInfo info, boolean handleProjectionPolicy)
-            throws IOException {
+    private FeatureType acquireFeatureType(FeatureTypeInfo info, boolean handleProjectionPolicy) throws IOException {
         // grab the underlying feature type
-        DataAccess<? extends FeatureType, ? extends Feature> dataAccess =
-                getDataStore(info.getStore());
+        DataAccess<? extends FeatureType, ? extends Feature> dataAccess = getDataStore(info.getStore());
         FeatureTypeCallback initializer = getFeatureTypeInitializer(info, dataAccess);
         if (initializer != null) {
             initializer.initialize(info, dataAccess, null);
@@ -1117,22 +1066,19 @@ public class ResourcePool {
         return ft;
     }
 
-    private FeatureType getNonCacheableFeatureType(
-            FeatureTypeInfo info, boolean handleProjectionPolicy) throws IOException {
+    private FeatureType getNonCacheableFeatureType(FeatureTypeInfo info, boolean handleProjectionPolicy)
+            throws IOException {
         FeatureType ft = null;
 
         // grab the underlying feature type
-        DataAccess<? extends FeatureType, ? extends Feature> dataAccess =
-                getDataStore(info.getStore());
+        DataAccess<? extends FeatureType, ? extends Feature> dataAccess = getDataStore(info.getStore());
 
         FeatureTypeCallback initializer = getFeatureTypeInitializer(info, dataAccess);
         Name temporaryName = null;
         if (initializer != null) {
             temporaryName = getTemporaryName(info, dataAccess, initializer);
         }
-        ft =
-                dataAccess.getSchema(
-                        temporaryName != null ? temporaryName : info.getQualifiedNativeName());
+        ft = dataAccess.getSchema(temporaryName != null ? temporaryName : info.getQualifiedNativeName());
         ft = buildFeatureType(info, handleProjectionPolicy, ft);
 
         // Remove layer configuration from datastore
@@ -1144,8 +1090,8 @@ public class ResourcePool {
     }
 
     /**
-     * Builds a temporary name for a feature type making sure there is no conflict with other
-     * existing type names in the store
+     * Builds a temporary name for a feature type making sure there is no conflict with other existing type names in the
+     * store
      */
     protected Name getTemporaryName(
             FeatureTypeInfo info,
@@ -1176,14 +1122,12 @@ public class ResourcePool {
     }
 
     /**
-     * Looks up a FetureTypeInitializer for this FeatureTypeInfo and DataAccess.
-     * FeatureTypeInitializer are used to init and dispose configured feature types (as opposed to
-     * ones that natively originate from the source)
+     * Looks up a FetureTypeInitializer for this FeatureTypeInfo and DataAccess. FeatureTypeInitializer are used to init
+     * and dispose configured feature types (as opposed to ones that natively originate from the source)
      */
     FeatureTypeCallback getFeatureTypeInitializer(
             FeatureTypeInfo info, DataAccess<? extends FeatureType, ? extends Feature> dataAccess) {
-        List<FeatureTypeCallback> featureTypeInitializers =
-                GeoServerExtensions.extensions(FeatureTypeCallback.class);
+        List<FeatureTypeCallback> featureTypeInitializers = GeoServerExtensions.extensions(FeatureTypeCallback.class);
         FeatureTypeCallback initializer = null;
         for (FeatureTypeCallback fti : featureTypeInitializers) {
             if (fti.canHandle(info, dataAccess)) {
@@ -1193,19 +1137,16 @@ public class ResourcePool {
         return initializer;
     }
 
-    private FeatureType buildFeatureType(
-            FeatureTypeInfo info, boolean handleProjectionPolicy, FeatureType ft)
+    private FeatureType buildFeatureType(FeatureTypeInfo info, boolean handleProjectionPolicy, FeatureType ft)
             throws IOException {
         // TODO: support reprojection for non-simple FeatureType
         if (ft instanceof SimpleFeatureType) {
             // configured attribute customization, execute before projection handling and callbacks
             if (info.getAttributes() != null && !info.getAttributes().isEmpty())
                 ft = transformer.retypeFeatureType(info, ft);
-
-            SimpleFeatureType sft = (SimpleFeatureType) ft;
             // create the feature type so it lines up with the "declared" schema
             SimpleFeatureTypeBuilder tb = new SimpleFeatureTypeBuilder();
-            tb.init(sft);
+            tb.init((SimpleFeatureType) ft);
             // Handle any aliases defined in info
             tb.setName(info.getName());
             tb.setNamespaceURI(info.getNamespace().getURI());
@@ -1228,8 +1169,7 @@ public class ResourcePool {
             ft = tb.buildFeatureType();
 
             // extension point for retyping the feature type
-            for (RetypeFeatureTypeCallback callback :
-                    GeoServerExtensions.extensions(RetypeFeatureTypeCallback.class)) {
+            for (RetypeFeatureTypeCallback callback : GeoServerExtensions.extensions(RetypeFeatureTypeCallback.class)) {
                 ft = callback.retypeFeatureType(info, ft);
             }
         } // end special case for SimpleFeatureType
@@ -1242,9 +1182,8 @@ public class ResourcePool {
     }
 
     /**
-     * Returns true if this object is saved in the catalog and not a modified proxy. We don't want
-     * to cache the result of computations made against a dirty object, nor the ones made against an
-     * object that still haven't been saved
+     * Returns true if this object is saved in the catalog and not a modified proxy. We don't want to cache the result
+     * of computations made against a dirty object, nor the ones made against an object that still haven't been saved
      */
     boolean isCacheable(CatalogInfo info) {
         // saved?
@@ -1255,8 +1194,7 @@ public class ResourcePool {
         // dirty?
         if (Proxy.isProxyClass(info.getClass())) {
             Object invocationHandler = Proxy.getInvocationHandler(info);
-            if (invocationHandler instanceof ModificationProxy
-                    && ((ModificationProxy) invocationHandler).isDirty()) {
+            if (invocationHandler instanceof ModificationProxy proxy && proxy.isDirty()) {
                 return false;
             }
         }
@@ -1271,8 +1209,7 @@ public class ResourcePool {
 
         // force the user specified CRS if the data has no CRS, or reproject it
         // if necessary
-        if (ad instanceof GeometryDescriptor) {
-            GeometryDescriptor old = (GeometryDescriptor) ad;
+        if (ad instanceof GeometryDescriptor old) {
             try {
                 // if old has no crs, change the projection handlign policy
                 // to be the declared
@@ -1320,14 +1257,13 @@ public class ResourcePool {
      *
      * <p>This method returns null if the attribute descriptor could not be loaded.
      */
-    public AttributeDescriptor getAttributeDescriptor(
-            FeatureTypeInfo ftInfo, AttributeTypeInfo atInfo) throws Exception {
+    public AttributeDescriptor getAttributeDescriptor(FeatureTypeInfo ftInfo, AttributeTypeInfo atInfo)
+            throws Exception {
 
         FeatureType featureType = getFeatureType(ftInfo);
         if (featureType != null) {
             for (PropertyDescriptor pd : featureType.getDescriptors()) {
-                if (pd instanceof AttributeDescriptor) {
-                    AttributeDescriptor ad = (AttributeDescriptor) pd;
+                if (pd instanceof AttributeDescriptor ad) {
                     if (atInfo.getName().equals(ad.getLocalName())) {
                         return ad;
                     }
@@ -1356,10 +1292,10 @@ public class ResourcePool {
     }
 
     /**
-     * Clears a coverage resource from cache. In the current implementation, it resets the
-     * underlying reader, as it's the only bit that's actually cached, to allow discovering new
-     * information potentially available in the source (the reader caches information such as the
-     * bounds, native CRS and the image structure, which affect the coverage itself).
+     * Clears a coverage resource from cache. In the current implementation, it resets the underlying reader, as it's
+     * the only bit that's actually cached, to allow discovering new information potentially available in the source
+     * (the reader caches information such as the bounds, native CRS and the image structure, which affect the coverage
+     * itself).
      */
     public void clear(CoverageInfo info) {
         String id = info.getId();
@@ -1374,19 +1310,17 @@ public class ResourcePool {
     /**
      * Loads the feature source for a feature type.
      *
-     * <p>The <tt>hints</tt> parameter is used to control how the feature source is loaded. An
-     * example is using the {@link #REPROJECT} hint to control if the resulting feature source is
-     * reprojected or not.
+     * <p>The <tt>hints</tt> parameter is used to control how the feature source is loaded. An example is using the
+     * {@link #REPROJECT} hint to control if the resulting feature source is reprojected or not.
      *
      * @param info The feature type info.
      * @param hints Any hints to take into account while loading the feature source, may be <code>
      *     null</code>.
      * @throws IOException Any errors that occur while loading the feature source.
      */
-    public FeatureSource<? extends FeatureType, ? extends Feature> getFeatureSource(
-            FeatureTypeInfo info, Hints hints) throws IOException {
-        DataAccess<? extends FeatureType, ? extends Feature> dataAccess =
-                getDataStore(info.getStore());
+    public FeatureSource<? extends FeatureType, ? extends Feature> getFeatureSource(FeatureTypeInfo info, Hints hints)
+            throws IOException {
+        DataAccess<? extends FeatureType, ? extends Feature> dataAccess = getDataStore(info.getStore());
 
         // TODO: support aliasing (renaming), reprojection, and locking for DataAccess
         if (!(dataAccess instanceof DataStore)) {
@@ -1416,8 +1350,7 @@ public class ResourcePool {
             fs = (SimpleFeatureSource) transformer.wrapFeatureSource(info, fs);
         }
         // then check name, and other customizations (e.g., projection policy)
-        if (!nativeName.equals(alias)
-                || DataUtilities.compare(fs.getSchema(), targetFeatureType) != 0) {
+        if (!nativeName.equals(alias) || DataUtilities.compare(fs.getSchema(), targetFeatureType) != 0) {
             // rename and retype as necessary
             fs = RetypingFeatureSource.getRetypingSource(fs, targetFeatureType);
         }
@@ -1447,13 +1380,11 @@ public class ResourcePool {
         } else {
             CoordinateReferenceSystem resultCRS = null;
             GeometryDescriptor gd = fs.getSchema().getGeometryDescriptor();
-            CoordinateReferenceSystem nativeCRS =
-                    gd != null ? gd.getCoordinateReferenceSystem() : null;
+            CoordinateReferenceSystem nativeCRS = gd != null ? gd.getCoordinateReferenceSystem() : null;
 
             if (ppolicy == ProjectionPolicy.NONE
                     && info.getNativeCRS() != null
-                    && info.getMetadata().get(FeatureTypeInfo.OTHER_SRS) != null)
-                resultCRS = info.getNativeCRS();
+                    && info.getMetadata().get(FeatureTypeInfo.OTHER_SRS) != null) resultCRS = info.getNativeCRS();
             else if (ppolicy == ProjectionPolicy.NONE && nativeCRS != null) {
                 resultCRS = nativeCRS;
             } else {
@@ -1492,8 +1423,7 @@ public class ResourcePool {
             }
 
             // applying wrappers using implementations of RetypeFeatureTypeCallback
-            for (RetypeFeatureTypeCallback callback :
-                    GeoServerExtensions.extensions(RetypeFeatureTypeCallback.class)) {
+            for (RetypeFeatureTypeCallback callback : GeoServerExtensions.extensions(RetypeFeatureTypeCallback.class)) {
                 if (SimpleFeatureSource.class.isAssignableFrom(fs.getClass()))
                     fs = (SimpleFeatureSource) callback.wrapFeatureSource(info, fs);
             }
@@ -1512,14 +1442,13 @@ public class ResourcePool {
     }
 
     /**
-     * Helper method that will search for the feature source corresponding to the provided feature
-     * type info on the provided data access. We will first search based on the published name
-     * (layer name) and only if this search fails we will search based on the native name.
+     * Helper method that will search for the feature source corresponding to the provided feature type info on the
+     * provided data access. We will first search based on the published name (layer name) and only if this search fails
+     * we will search based on the native name.
      */
     @SuppressWarnings("unchecked")
     private FeatureSource<? extends FeatureType, ? extends Feature> getFeatureSource(
-            DataAccess<? extends FeatureType, ? extends Feature> dataAccess, FeatureTypeInfo info)
-            throws IOException {
+            DataAccess<? extends FeatureType, ? extends Feature> dataAccess, FeatureTypeInfo info) throws IOException {
         FeatureSource<? extends FeatureType, ? extends Feature> featureSource;
         try {
             // first try to search based on the published name, to avoid any unexpected aliasing
@@ -1527,16 +1456,13 @@ public class ResourcePool {
         } catch (Exception exception) {
             LOGGER.log(
                     Level.FINE,
-                    String.format(
-                            "Error retrieving feature type using published name '%s'.",
-                            info.getQualifiedName()));
+                    "Error retrieving feature type using published name '%s'.".formatted(info.getQualifiedName()));
             // let's try now to search based on the native name
             featureSource = dataAccess.getFeatureSource(info.getQualifiedNativeName());
         }
         // return a decorated feature source, capable of handling the layer definition default CQL
         // filter
-        return new GeoserverComplexFeatureSource(
-                (FeatureSource<FeatureType, Feature>) featureSource, info);
+        return new GeoserverComplexFeatureSource((FeatureSource<FeatureType, Feature>) featureSource, info);
     }
 
     private Double getTolerance(FeatureTypeInfo info) {
@@ -1602,13 +1528,12 @@ public class ResourcePool {
         return coordinateSystem.getAxis(0).getUnit();
     }
 
-    public GridCoverageReader getGridCoverageReader(CoverageInfo info, Hints hints)
-            throws IOException {
+    public GridCoverageReader getGridCoverageReader(CoverageInfo info, Hints hints) throws IOException {
         return getGridCoverageReader(info, null, hints);
     }
 
-    public GridCoverageReader getGridCoverageReader(
-            CoverageInfo info, String coverageName, Hints hints) throws IOException {
+    public GridCoverageReader getGridCoverageReader(CoverageInfo info, String coverageName, Hints hints)
+            throws IOException {
         return getGridCoverageReader(info.getStore(), info, coverageName, hints);
     }
 
@@ -1616,11 +1541,10 @@ public class ResourcePool {
      * Returns a coverage reader, caching the result.
      *
      * @param info The coverage metadata.
-     * @param hints Hints to use when loading the coverage, may be <code>null</code>.
+     * @param hints Hints to use when loading the coverage, may be {@code null}.
      * @throws IOException Any errors that occur loading the reader.
      */
-    public GridCoverageReader getGridCoverageReader(CoverageStoreInfo info, Hints hints)
-            throws IOException {
+    public GridCoverageReader getGridCoverageReader(CoverageStoreInfo info, Hints hints) throws IOException {
         return getGridCoverageReader(info, null, hints);
     }
 
@@ -1628,11 +1552,11 @@ public class ResourcePool {
      * Returns a coverage reader, caching the result.
      *
      * @param storeInfo The coverage metadata.
-     * @param hints Hints to use when loading the coverage, may be <code>null</code>.
+     * @param hints Hints to use when loading the coverage, may be {@code null}.
      * @throws IOException Any errors that occur loading the reader.
      */
-    public GridCoverageReader getGridCoverageReader(
-            CoverageStoreInfo storeInfo, String coverageName, Hints hints) throws IOException {
+    public GridCoverageReader getGridCoverageReader(CoverageStoreInfo storeInfo, String coverageName, Hints hints)
+            throws IOException {
         return getGridCoverageReader(storeInfo, null, coverageName, hints);
     }
 
@@ -1640,20 +1564,17 @@ public class ResourcePool {
      * Returns a coverage reader, caching the result.
      *
      * @param info The coverage metadata.
-     * @param hints Hints to use when loading the coverage, may be <code>null</code>.
+     * @param hints Hints to use when loading the coverage, may be {@code null}.
      * @throws IOException Any errors that occur loading the reader.
      */
     private GridCoverageReader getGridCoverageReader(
-            CoverageStoreInfo info, CoverageInfo coverageInfo, String coverageName, Hints hints)
-            throws IOException {
+            CoverageStoreInfo info, CoverageInfo coverageInfo, String coverageName, Hints hints) throws IOException {
 
         CoverageStoreInfo expandedStore = clone(info, true);
 
         final AbstractGridFormat gridFormat = info.getFormat();
         if (gridFormat == null) {
-            IOException e =
-                    new IOException(
-                            "Could not find the raster plugin for format " + info.getType());
+            IOException e = new IOException("Could not find the raster plugin for format " + info.getType());
             disableStoreInfoIfNeeded(info, CoverageStoreInfo.class, e);
             throw e;
         }
@@ -1689,18 +1610,12 @@ public class ResourcePool {
                         //
                         // /////////////////////////////////////////////////////////
                         final String urlString = expandedStore.getURL();
-                        Object readObject =
-                                getCoverageStoreSource(
-                                        urlString, coverageInfo, expandedStore, hints);
+                        Object readObject = getCoverageStoreSource(urlString, coverageInfo, expandedStore, hints);
 
                         // readers might change the provided hints, pass down a defensive copy
                         reader = gridFormat.getReader(readObject, hints);
                         if (reader == null) {
-                            throw new IOException(
-                                    "Failed to create reader from "
-                                            + urlString
-                                            + " and hints "
-                                            + hints);
+                            throw new IOException("Failed to create reader from " + urlString + " and hints " + hints);
                         }
                         if (key != null) {
                             hintCoverageReaderCache.put(key, reader);
@@ -1721,9 +1636,7 @@ public class ResourcePool {
             MetadataMap metadata = coverageInfo.getMetadata();
             if (metadata != null && metadata.containsKey(CoverageView.COVERAGE_VIEW)) {
                 CoverageView coverageView = (CoverageView) metadata.get(CoverageView.COVERAGE_VIEW);
-                reader =
-                        CoverageViewReader.wrap(
-                                (GridCoverage2DReader) reader, coverageView, coverageInfo, hints);
+                reader = CoverageViewReader.wrap((GridCoverage2DReader) reader, coverageView, coverageInfo, hints);
             }
         }
 
@@ -1741,8 +1654,7 @@ public class ResourcePool {
                 }
             }
 
-            return CoverageDimensionCustomizerReader.wrap(
-                    (GridCoverage2DReader) reader, coverageName, coverageInfo);
+            return CoverageDimensionCustomizerReader.wrap((GridCoverage2DReader) reader, coverageName, coverageInfo);
         } else {
             // In order to deal with Bands customization, we need to get a CoverageInfo.
             // Therefore we won't wrap the reader into a CoverageDimensionCustomizerReader in case
@@ -1754,8 +1666,7 @@ public class ResourcePool {
             // that case so returning the simple reader.
             final int numCoverages = reader.getGridCoverageCount();
             if (numCoverages == 1) {
-                return CoverageDimensionCustomizerReader.wrap(
-                        (GridCoverage2DReader) reader, null, coverageInfo);
+                return CoverageDimensionCustomizerReader.wrap((GridCoverage2DReader) reader, null, coverageInfo);
             }
             // Avoid dimensions wrapping since we have a multi-coverage reader
             // but no coveragename have been specified
@@ -1764,23 +1675,19 @@ public class ResourcePool {
     }
 
     /**
-     * Attempted to convert the URL-ish string to a parseable input object for coverage reading
-     * purposes, otherwise just returns the string itself
+     * Attempted to convert the URL-ish string to a parseable input object for coverage reading purposes, otherwise just
+     * returns the string itself
      *
      * @param urlString the url string to parse, which may actually be a path
      * @return an object appropriate for passing to a grid coverage reader
      */
     public static Object getCoverageStoreSource(
-            String urlString,
-            CoverageInfo coverageInfo,
-            CoverageStoreInfo coverageStoreInfo,
-            Hints hints) {
+            String urlString, CoverageInfo coverageInfo, CoverageStoreInfo coverageStoreInfo, Hints hints) {
         List<CoverageReaderInputObjectConverter> converters =
                 GeoServerExtensions.extensions(CoverageReaderInputObjectConverter.class);
 
         for (CoverageReaderInputObjectConverter converter : converters) {
-            Optional<?> convertedValue =
-                    converter.convert(urlString, coverageInfo, coverageStoreInfo, hints);
+            Optional<?> convertedValue = converter.convert(urlString, coverageInfo, coverageStoreInfo, hints);
             if (convertedValue.isPresent()) {
                 return convertedValue.get();
             }
@@ -1800,8 +1707,7 @@ public class ResourcePool {
         }
     }
 
-    public GridCoverage getGridCoverage(CoverageInfo info, ReferencedEnvelope env, Hints hints)
-            throws IOException {
+    public GridCoverage getGridCoverage(CoverageInfo info, ReferencedEnvelope env, Hints hints) throws IOException {
         return getGridCoverage(info, (String) null, env, hints);
     }
 
@@ -1816,8 +1722,7 @@ public class ResourcePool {
      * @param hints Hints to use while loading the coverage.
      * @throws IOException Any errors that occur loading the coverage.
      */
-    public GridCoverage getGridCoverage(
-            CoverageInfo info, String coverageName, ReferencedEnvelope env, Hints hints)
+    public GridCoverage getGridCoverage(CoverageInfo info, String coverageName, ReferencedEnvelope env, Hints hints)
             throws IOException {
         final GridCoverageReader reader = getGridCoverageReader(info, coverageName, hints);
         if (reader == null) {
@@ -1838,8 +1743,7 @@ public class ResourcePool {
      * @throws IOException Any errors that occur loading the coverage.
      */
     public GridCoverage getGridCoverage(
-            CoverageInfo info, GridCoverageReader reader, ReferencedEnvelope env, Hints hints)
-            throws IOException {
+            CoverageInfo info, GridCoverageReader reader, ReferencedEnvelope env, Hints hints) throws IOException {
 
         ReferencedEnvelope coverageBounds;
         try {
@@ -1876,8 +1780,7 @@ public class ResourcePool {
             try {
                 envelope = CRS.transform(envelope, destCRS);
             } catch (TransformException e) {
-                throw (IOException)
-                        new IOException("error occured transforming envelope").initCause(e);
+                throw (IOException) new IOException("error occured transforming envelope").initCause(e);
             }
         }
 
@@ -1897,9 +1800,7 @@ public class ResourcePool {
         // /////////////////////////////////////////////////////////
 
         GridCoverage gc =
-                reader.read(
-                        CoverageUtils.getParameters(
-                                reader.getFormat().getReadParameters(), info.getParameters()));
+                reader.read(CoverageUtils.getParameters(reader.getFormat().getReadParameters(), info.getParameters()));
 
         if ((gc == null) || !(gc instanceof GridCoverage2D)) {
             throw new IOException("The requested coverage could not be found.");
@@ -1949,8 +1850,7 @@ public class ResourcePool {
             // if we have a hit but the resolver has been changed, clean and build again
             if (wms != null
                     && wms.getHints() != null
-                    && !Objects.equals(
-                            wms.getHints().get(XMLHandlerHints.ENTITY_RESOLVER), entityResolver)) {
+                    && !Objects.equals(wms.getHints().get(XMLHandlerHints.ENTITY_RESOLVER), entityResolver)) {
                 wmsCache.remove(id);
                 wms = null;
             }
@@ -1974,8 +1874,7 @@ public class ResourcePool {
         }
     }
 
-    private WebMapServer createWebMapServer(
-            WMSStoreInfo expandedStore, EntityResolver entityResolver)
+    private WebMapServer createWebMapServer(WMSStoreInfo expandedStore, EntityResolver entityResolver)
             throws IOException, org.geotools.ows.ServiceException {
         HTTPClient client = getHTTPClient(expandedStore);
         URL serverURL = new URL(expandedStore.getCapabilitiesURL());
@@ -1988,13 +1887,11 @@ public class ResourcePool {
         WebMapServer wms;
         if (StringUtils.isNotEmpty(expandedStore.getHeaderName())
                 && StringUtils.isNotEmpty(expandedStore.getHeaderValue())) {
-            wms =
-                    new WebMapServer(
-                            serverURL,
-                            client,
-                            hints,
-                            Collections.singletonMap(
-                                    expandedStore.getHeaderName(), expandedStore.getHeaderValue()));
+            wms = new WebMapServer(
+                    serverURL,
+                    client,
+                    hints,
+                    Collections.singletonMap(expandedStore.getHeaderName(), expandedStore.getHeaderValue()));
         } else {
             wms = new WebMapServer(serverURL, client, hints);
         }
@@ -2019,8 +1916,7 @@ public class ResourcePool {
             // if we have a hit but the resolver has been changed, clean and build again
             if (wmts != null
                     && wmts.getHints() != null
-                    && !Objects.equals(
-                            wmts.getHints().get(XMLHandlerHints.ENTITY_RESOLVER), entityResolver)) {
+                    && !Objects.equals(wmts.getHints().get(XMLHandlerHints.ENTITY_RESOLVER), entityResolver)) {
                 wmtsCache.remove(id);
                 wmts = null;
             }
@@ -2051,23 +1947,16 @@ public class ResourcePool {
         HTTPClient client = getHTTPClient(expandedStore);
         URL serverURL = new URL(expandedStore.getCapabilitiesURL());
         WebMapTileServer wmts;
-        if (StringUtils.isNotEmpty(info.getHeaderName())
-                && StringUtils.isNotEmpty(info.getHeaderValue())) {
-            wmts =
-                    new WebMapTileServer(
-                            serverURL,
-                            client,
-                            Collections.singletonMap(info.getHeaderName(), info.getHeaderValue()));
+        if (StringUtils.isNotEmpty(info.getHeaderName()) && StringUtils.isNotEmpty(info.getHeaderValue())) {
+            wmts = new WebMapTileServer(
+                    serverURL, client, Collections.singletonMap(info.getHeaderName(), info.getHeaderValue()));
         } else {
             wmts = new WebMapTileServer(serverURL, client);
         }
         return wmts;
     }
 
-    /**
-     * Returns the entity resolver from the {@link EntityResolverProvider}, or null if none is
-     * configured
-     */
+    /** Returns the entity resolver from the {@link EntityResolverProvider}, or null if none is configured */
     public EntityResolver getEntityResolver() {
         EntityResolver entityResolver = null;
         if (entityResolverProvider != null) {
@@ -2076,6 +1965,7 @@ public class ResourcePool {
         return entityResolver;
     }
 
+    @SuppressWarnings("PMD.CloseResource") // mtClient
     private HTTPClient getHTTPClient(HTTPStoreInfo info) {
         String capabilitiesURL = info.getCapabilitiesURL();
 
@@ -2090,16 +1980,12 @@ public class ResourcePool {
         HTTPClient client;
         if (info.isUseConnectionPooling()) {
             client = HTTPClientFinder.createClient(HTTPConnectionPooling.class);
-            if (info.getMaxConnections() > 0 && client instanceof HTTPConnectionPooling) {
+            if (info.getMaxConnections() > 0 && client instanceof HTTPConnectionPooling mtClient) {
                 int maxConnections = info.getMaxConnections();
-                @SuppressWarnings("PMD.CloseResource") // wrapped and returned
-                HTTPConnectionPooling mtClient = (HTTPConnectionPooling) client;
                 mtClient.setMaxConnections(maxConnections);
             }
         } else {
-            client =
-                    HTTPClientFinder.createClient(
-                            new Hints(Hints.HTTP_CLIENT, SimpleHttpClient.class));
+            client = HTTPClientFinder.createClient(new Hints(Hints.HTTP_CLIENT, SimpleHttpClient.class));
         }
         String username = info.getUsername();
         String password = info.getPassword();
@@ -2135,13 +2021,10 @@ public class ResourcePool {
             }
         }
 
-        throw new IOException(
-                "Could not find layer " + info.getName() + " in the server capabilitiles document");
+        throw new IOException("Could not find layer " + info.getName() + " in the server capabilitiles document");
     }
 
-    /**
-     * Locates and returns a WTMS {@link Layer} based on the configuration stored in WMTSLayerInfo
-     */
+    /** Locates and returns a WTMS {@link Layer} based on the configuration stored in WMTSLayerInfo */
     public WMTSLayer getWMTSLayer(WMTSLayerInfo info) throws IOException {
 
         String name = info.getName();
@@ -2157,8 +2040,7 @@ public class ResourcePool {
             }
         }
 
-        throw new IOException(
-                "Could not find layer " + info.getName() + " in the server capabilitiles document");
+        throw new IOException("Could not find layer " + info.getName() + " in the server capabilitiles document");
     }
 
     /** Clears the cached resource for a web map server */
@@ -2174,12 +2056,11 @@ public class ResourcePool {
     }
 
     /**
-     * Returns a style resource, caching the result. Any associated images should also be unpacked
-     * onto the local machine. ResourcePool will watch the style for changes and invalidate the
-     * cache as needed.
+     * Returns a style resource, caching the result. Any associated images should also be unpacked onto the local
+     * machine. ResourcePool will watch the style for changes and invalidate the cache as needed.
      *
-     * <p>The resource is loaded by parsing {@link StyleInfo#getFilename()} as an SLD. The SLD is
-     * prepared for direct use by GeoTools, making use of absolute file paths where possible.
+     * <p>The resource is loaded by parsing {@link StyleInfo#getFilename()} as an SLD. The SLD is prepared for direct
+     * use by GeoTools, making use of absolute file paths where possible.
      *
      * @param info The style metadata.
      * @throws IOException Any parsing errors.
@@ -2198,14 +2079,13 @@ public class ResourcePool {
                     sldCache.put(key, sld);
 
                     final Resource styleResource = dataDir().style(info);
-                    styleResource.addListener(
-                            new ResourceListener() {
-                                @Override
-                                public void changed(ResourceNotification notify) {
-                                    sldCache.remove(key);
-                                    styleResource.removeListener(this);
-                                }
-                            });
+                    styleResource.addListener(new ResourceListener() {
+                        @Override
+                        public void changed(ResourceNotification notify) {
+                            sldCache.remove(key);
+                            styleResource.removeListener(this);
+                        }
+                    });
                 }
             }
         }
@@ -2214,12 +2094,12 @@ public class ResourcePool {
     }
 
     /**
-     * Returns the first {@link Style} in a style resource, caching the result. Any associated
-     * images should also be unpacked onto the local machine. ResourcePool will watch the style for
-     * changes and invalidate the cache as needed.
+     * Returns the first {@link Style} in a style resource, caching the result. Any associated images should also be
+     * unpacked onto the local machine. ResourcePool will watch the style for changes and invalidate the cache as
+     * needed.
      *
-     * <p>The resource is loaded by parsing {@link StyleInfo#getFilename()} as an SLD. The SLD is
-     * prepared for direct use by GeoTools, making use of absolute file paths where possible.
+     * <p>The resource is loaded by parsing {@link StyleInfo#getFilename()} as an SLD. The SLD is prepared for direct
+     * use by GeoTools, making use of absolute file paths where possible.
      *
      * @param info The style metadata.
      * @throws IOException Any parsing errors.
@@ -2237,14 +2117,13 @@ public class ResourcePool {
                     styleCache.put(key, style);
 
                     final Resource styleResource = dataDir().style(info);
-                    styleResource.addListener(
-                            new ResourceListener() {
-                                @Override
-                                public void changed(ResourceNotification notify) {
-                                    styleCache.remove(key);
-                                    styleResource.removeListener(this);
-                                }
-                            });
+                    styleResource.addListener(new ResourceListener() {
+                        @Override
+                        public void changed(ResourceNotification notify) {
+                            styleCache.remove(key);
+                            styleResource.removeListener(this);
+                        }
+                    });
                 }
             }
         }
@@ -2256,8 +2135,7 @@ public class ResourcePool {
         Style style = dataDir().parsedStyle(info);
 
         if (style == null) {
-            throw new ServiceException(
-                    "Could not extract a UserStyle definition from " + info.getName());
+            throw new ServiceException("Could not extract a UserStyle definition from " + info.getName());
         }
         // Make sure we don't change the name of an object in sldCache
         return new StyleBuilder().reset(style).name(info.prefixedName()).buildStyle();
@@ -2331,15 +2209,13 @@ public class ResourcePool {
      * @param style The style object.
      * @param format Whether to format the style
      */
-    public void writeSLD(StyleInfo info, StyledLayerDescriptor style, boolean format)
-            throws IOException {
+    public void writeSLD(StyleInfo info, StyledLayerDescriptor style, boolean format) throws IOException {
         synchronized (sldCache) {
             writeStyleFile(info, style, format);
         }
     }
 
-    private void writeStyleFile(StyleInfo info, StyledLayerDescriptor style, boolean format)
-            throws IOException {
+    private void writeStyleFile(StyleInfo info, StyledLayerDescriptor style, boolean format) throws IOException {
         Resource styleFile = dataDir().style(info);
 
         try (BufferedOutputStream out = new BufferedOutputStream(styleFile.out())) {
@@ -2373,8 +2249,7 @@ public class ResourcePool {
      * @param in the new stream to write to styleFile
      * @param styleFile file to update
      */
-    public static void writeStyle(final InputStream in, final Resource styleFile)
-            throws IOException {
+    public static void writeStyle(final InputStream in, final Resource styleFile) throws IOException {
         try (BufferedOutputStream out = new BufferedOutputStream(styleFile.out())) {
             IOUtils.copy(in, out);
             out.flush();
@@ -2424,14 +2299,14 @@ public class ResourcePool {
     }
 
     /**
-     * Base class for all the resource caches, ensures type safety and provides an easier way to
-     * handle with resource disposal
+     * Base class for all the resource caches, ensures type safety and provides an easier way to handle with resource
+     * disposal
      *
      * @author Andrea Aime
      * @param <K>
      * @param <V>
      */
-    abstract class CatalogResourceCache<K, V> extends SoftValueHashMap<K, V> {
+    abstract static class CatalogResourceCache<K, V> extends SoftValueHashMap<K, V> {
 
         public CatalogResourceCache() {
             this(100);
@@ -2482,30 +2357,29 @@ public class ResourcePool {
                 LOGGER.fine("Disposing feature type '" + info.getName() + "'/" + id);
                 fireDisposed(info, featureType);
                 if (null != featureTypeAttributeCache.remove(id)) {
-                    LOGGER.fine(
-                            "AttributeType cache cleared for feature type '"
-                                    + info.getName()
-                                    + "'/"
-                                    + id
-                                    + " as a side effect of its cache disposal");
+                    LOGGER.fine("AttributeType cache cleared for feature type '"
+                            + info.getName()
+                            + "'/"
+                            + id
+                            + " as a side effect of its cache disposal");
                 }
             }
         }
     }
 
     /**
-     * Custom CatalogResourceCache responsible for disposing of DataAccess instances (allowing the
-     * recovery of operating system resources).
+     * Custom CatalogResourceCache responsible for disposing of DataAccess instances (allowing the recovery of operating
+     * system resources).
      *
      * @see ResourcePool#dataStoreCache
      */
     class DataStoreCache extends CatalogResourceCache<String, DataAccess> {
         /**
-         * Ensure data access entry is removed from catalog, and ensure DataAccess dispose is called
-         * to return system resources.
+         * Ensure data access entry is removed from catalog, and ensure DataAccess dispose is called to return system
+         * resources.
          *
-         * <p>This method is used when cleaning up a weak reference and will immediately dispose of
-         * the indicated dataAccess.
+         * <p>This method is used when cleaning up a weak reference and will immediately dispose of the indicated
+         * dataAccess.
          *
          * @param id DataStore id, or null if not known
          * @param dataAccess DataAccess to dispose
@@ -2526,8 +2400,7 @@ public class ResourcePool {
                 LOGGER.fine("Dispose data access '" + name + "' " + implementation);
                 dataAccess.dispose();
             } catch (Exception e) {
-                LOGGER.warning(
-                        "Error occured disposing data access '" + name + "' " + implementation);
+                LOGGER.warning("Error occured disposing data access '" + name + "' " + implementation);
                 LOGGER.log(Level.FINE, "", e);
             }
         }
@@ -2553,8 +2426,7 @@ public class ResourcePool {
         }
     }
 
-    class CoverageHintReaderCache
-            extends CatalogResourceCache<CoverageHintReaderKey, GridCoverageReader> {
+    class CoverageHintReaderCache extends CatalogResourceCache<CoverageHintReaderKey, GridCoverageReader> {
 
         @Override
         protected void dispose(CoverageHintReaderKey key, GridCoverageReader reader) {
@@ -2613,7 +2485,7 @@ public class ResourcePool {
         }
     }
 
-    class FeatureTypeAttributeCache extends CatalogResourceCache<String, List<AttributeTypeInfo>> {
+    static class FeatureTypeAttributeCache extends CatalogResourceCache<String, List<AttributeTypeInfo>> {
 
         FeatureTypeAttributeCache(int size) {
             super(size);
@@ -2625,55 +2497,46 @@ public class ResourcePool {
         }
     }
 
-    class WMSCache extends CatalogResourceCache<String, WebMapServer> {
+    static class WMSCache extends CatalogResourceCache<String, WebMapServer> {
 
         @Override
+        @SuppressWarnings("PMD.CloseResource") // closeable
         protected void dispose(String key, WebMapServer server) {
             HTTPClient client = server.getHTTPClient();
-            if (client instanceof Closeable) {
+            if (client instanceof Closeable closeable) {
                 // dispose the client, and the connection pool hosted into it as a consequence
                 // the connection pool additionally holds a few threads that are also getting
                 // disposed with this call
-                @SuppressWarnings("PMD.CloseResource") // actually closing here
-                Closeable closeable = (Closeable) client;
                 try {
                     closeable.close();
                 } catch (IOException e) {
-                    LOGGER.log(
-                            Level.FINE,
-                            "Failure while disposing the http client for a WMS store",
-                            e);
+                    LOGGER.log(Level.FINE, "Failure while disposing the http client for a WMS store", e);
                 }
             }
         }
     }
 
-    class WMTSCache extends CatalogResourceCache<String, WebMapTileServer> {
+    static class WMTSCache extends CatalogResourceCache<String, WebMapTileServer> {
 
         @Override
+        @SuppressWarnings("PMD.CloseResource") // closeable
         protected void dispose(String key, WebMapTileServer server) {
             HTTPClient client = server.getHTTPClient();
-            if (client instanceof Closeable) {
+            if (client instanceof Closeable closeable) {
                 // dispose the client, and the connection pool hosted into it as a consequence
                 // the connection pool additionally holds a few threads that are also getting
                 // disposed with this call
-                @SuppressWarnings("PMD.CloseResource") // actually closing here
-                Closeable closeable = (Closeable) client;
                 try {
                     closeable.close();
                 } catch (IOException e) {
-                    LOGGER.log(
-                            Level.FINE,
-                            "Failure while disposing the http client for a WMTS store",
-                            e);
+                    LOGGER.log(Level.FINE, "Failure while disposing the http client for a WMTS store", e);
                 }
             }
         }
     }
 
     /** Listens to catalog events clearing cache entires when resources are modified. */
-    public static class CacheClearingListener extends CatalogVisitorAdapter
-            implements CatalogListener {
+    public static class CacheClearingListener extends CatalogVisitorAdapter implements CatalogListener {
 
         private final ResourcePool pool;
 
@@ -2732,8 +2595,7 @@ public class ResourcePool {
     /**
      * Used to clean up any outstanding data store listeners.
      *
-     * <p>The DataStore is still active as the listeners are called allowing any required clean up
-     * to occur.
+     * <p>The DataStore is still active as the listeners are called allowing any required clean up to occur.
      *
      * @param da Data access
      */
@@ -2788,14 +2650,13 @@ public class ResourcePool {
     }
 
     /**
-     * Flush the feature type held by the data store associated with a FeatureTypeInfo to be safe in
-     * case the underlying schema has changed.
+     * Flush the feature type held by the data store associated with a FeatureTypeInfo to be safe in case the underlying
+     * schema has changed.
      *
-     * <p>Implementation note: so far this method only works with {@link ContentDataStore} instances
-     * (i.e. all JDBC ones and others, but not all). This is to avoid calling {@link
-     * DataStore#dispose()} as other threads may be using it and has proved to result in
-     * unpredictable errors. Instead, we're calling the datastore feature type's {@link
-     * ContentState#flush()} method which forces re-loading the native type when next used.
+     * <p>Implementation note: so far this method only works with {@link ContentDataStore} instances (i.e. all JDBC ones
+     * and others, but not all). This is to avoid calling {@link DataStore#dispose()} as other threads may be using it
+     * and has proved to result in unpredictable errors. Instead, we're calling the datastore feature type's
+     * {@link ContentState#flush()} method which forces re-loading the native type when next used.
      */
     protected void flushDataStore(FeatureTypeInfo ft) {
         DataStoreInfo ds = ft.getStore();
@@ -2809,32 +2670,26 @@ public class ResourcePool {
         try {
             dataStore = getDataStore(ds);
         } catch (IOException e) {
-            LOGGER.log(
-                    Level.WARNING,
-                    "Unable to obtain data store '" + ft.getQualifiedNativeName() + "' to flush",
-                    e);
+            LOGGER.log(Level.WARNING, "Unable to obtain data store '" + ft.getQualifiedNativeName() + "' to flush", e);
             return;
         }
         final int dsFtCount = countFeatureTypesOf(ds);
         if (dsFtCount == 0) {
             // clean up cached DataAccess if no longer in use
-            LOGGER.log(
-                    Level.FINE,
-                    "Feature Type {0} cleared: Disposing DataStore {1} - {2}",
-                    new String[] {ft.getName(), ds.getName(), "Last Feature Type Disposed"});
+            LOGGER.log(Level.FINE, "Feature Type {0} cleared: Disposing DataStore {1} - {2}", new String[] {
+                ft.getName(), ds.getName(), "Last Feature Type Disposed"
+            });
             clear(ds);
         } else {
-            if (dataStore instanceof ContentDataStore) {
-                ContentDataStore contentDataStore = (ContentDataStore) dataStore;
+            if (dataStore instanceof ContentDataStore contentDataStore) {
                 try {
                     // ask ContentDataStore to forget cached column information
                     String nativeName = ft.getNativeName();
                     if (nativeName != null) {
                         flushState(contentDataStore, nativeName);
-                        LOGGER.log(
-                                Level.FINE,
-                                "Feature Type {0} cleared from ContentDataStore {1}",
-                                new String[] {ft.getName(), ds.getName()});
+                        LOGGER.log(Level.FINE, "Feature Type {0} cleared from ContentDataStore {1}", new String[] {
+                            ft.getName(), ds.getName()
+                        });
                     }
                 } catch (Exception e) {
                     LOGGER.log(Level.WARNING, "Unable to flush '" + ft.getQualifiedNativeName(), e);
@@ -2854,8 +2709,7 @@ public class ResourcePool {
         return dsTypeCount;
     }
 
-    private void flushState(ContentDataStore contentDataStore, String nativeName)
-            throws IOException {
+    private void flushState(ContentDataStore contentDataStore, String nativeName) throws IOException {
         ContentFeatureSource featureSource = contentDataStore.getFeatureSource(nativeName);
         featureSource.getState().flush();
     }
@@ -2864,8 +2718,8 @@ public class ResourcePool {
         DataStoreInfo target;
         try {
             target = SerializationUtils.clone(source);
-            if (target instanceof StoreInfoImpl && target.getCatalog() == null) {
-                ((StoreInfoImpl) target).setCatalog(catalog);
+            if (target instanceof StoreInfoImpl impl && target.getCatalog() == null) {
+                impl.setCatalog(catalog);
             }
         } catch (Exception e) {
             target = catalog.getFactory().createDataStore();
@@ -2877,8 +2731,7 @@ public class ResourcePool {
         }
 
         // Resolve GeoServer Environment placeholders
-        final GeoServerEnvironment gsEnvironment =
-                GeoServerExtensions.bean(GeoServerEnvironment.class);
+        final GeoServerEnvironment gsEnvironment = GeoServerExtensions.bean(GeoServerEnvironment.class);
 
         if (source.getConnectionParameters() != null
                 && !source.getConnectionParameters().isEmpty()) {
@@ -2893,8 +2746,7 @@ public class ResourcePool {
                         String key = param.getKey();
                         Object value = param.getValue();
 
-                        if (gsEnvironment != null
-                                && GeoServerEnvironment.allowEnvParametrization()) {
+                        if (gsEnvironment != null && GeoServerEnvironment.allowEnvParametrization()) {
                             value = gsEnvironment.resolveValue(value);
                         }
 
@@ -2907,13 +2759,12 @@ public class ResourcePool {
         return target;
     }
 
-    public CoverageStoreInfo clone(
-            final CoverageStoreInfo source, boolean allowEnvParametrization) {
+    public CoverageStoreInfo clone(final CoverageStoreInfo source, boolean allowEnvParametrization) {
         CoverageStoreInfo target;
         try {
             target = SerializationUtils.clone(source);
-            if (target instanceof StoreInfoImpl && target.getCatalog() == null) {
-                ((StoreInfoImpl) target).setCatalog(catalog);
+            if (target instanceof StoreInfoImpl impl && target.getCatalog() == null) {
+                impl.setCatalog(catalog);
             }
         } catch (Exception e) {
             target = catalog.getFactory().createCoverageStore();
@@ -2925,8 +2776,7 @@ public class ResourcePool {
         }
 
         // Resolve GeoServer Environment placeholders
-        final GeoServerEnvironment gsEnvironment =
-                GeoServerExtensions.bean(GeoServerEnvironment.class);
+        final GeoServerEnvironment gsEnvironment = GeoServerExtensions.bean(GeoServerEnvironment.class);
 
         if (gsEnvironment != null && GeoServerEnvironment.allowEnvParametrization()) {
             target.setURL((String) gsEnvironment.resolveValue(source.getURL()));
@@ -2962,8 +2812,8 @@ public class ResourcePool {
         WMSStoreInfo target;
         try {
             target = SerializationUtils.clone(source);
-            if (target instanceof StoreInfoImpl && target.getCatalog() == null) {
-                ((StoreInfoImpl) target).setCatalog(catalog);
+            if (target instanceof StoreInfoImpl impl && target.getCatalog() == null) {
+                impl.setCatalog(catalog);
             }
         } catch (Exception e) {
             target = catalog.getFactory().createWebMapServer();
@@ -2978,12 +2828,10 @@ public class ResourcePool {
 
         if (allowEnvParametrization) {
             // Resolve GeoServer Environment placeholders
-            final GeoServerEnvironment gsEnvironment =
-                    GeoServerExtensions.bean(GeoServerEnvironment.class);
+            final GeoServerEnvironment gsEnvironment = GeoServerExtensions.bean(GeoServerEnvironment.class);
 
             if (gsEnvironment != null && GeoServerEnvironment.allowEnvParametrization()) {
-                target.setCapabilitiesURL(
-                        (String) gsEnvironment.resolveValue(source.getCapabilitiesURL()));
+                target.setCapabilitiesURL((String) gsEnvironment.resolveValue(source.getCapabilitiesURL()));
                 target.setUsername((String) gsEnvironment.resolveValue(source.getUsername()));
                 target.setPassword((String) gsEnvironment.resolveValue(source.getPassword()));
             }
@@ -2996,8 +2844,8 @@ public class ResourcePool {
         WMTSStoreInfo target;
         try {
             target = SerializationUtils.clone(source);
-            if (target instanceof StoreInfoImpl && target.getCatalog() == null) {
-                ((StoreInfoImpl) target).setCatalog(catalog);
+            if (target instanceof StoreInfoImpl impl && target.getCatalog() == null) {
+                impl.setCatalog(catalog);
             }
         } catch (Exception e) {
             target = catalog.getFactory().createWebMapTileServer();
@@ -3012,12 +2860,10 @@ public class ResourcePool {
 
         if (allowEnvParametrization) {
             // Resolve GeoServer Environment placeholders
-            final GeoServerEnvironment gsEnvironment =
-                    GeoServerExtensions.bean(GeoServerEnvironment.class);
+            final GeoServerEnvironment gsEnvironment = GeoServerExtensions.bean(GeoServerEnvironment.class);
 
             if (gsEnvironment != null && GeoServerEnvironment.allowEnvParametrization()) {
-                target.setCapabilitiesURL(
-                        (String) gsEnvironment.resolveValue(source.getCapabilitiesURL()));
+                target.setCapabilitiesURL((String) gsEnvironment.resolveValue(source.getCapabilitiesURL()));
                 target.setUsername((String) gsEnvironment.resolveValue(source.getUsername()));
                 target.setPassword((String) gsEnvironment.resolveValue(source.getPassword()));
             }
@@ -3049,10 +2895,10 @@ public class ResourcePool {
     }
 
     /**
-     * Retrieve the proper {@link CoverageInfo} object from the specified {@link CoverageStoreInfo}
-     * using the specified coverageName (which may be the native one in some cases). In case of null
-     * coverageName being specified, we assume we are dealing with a single coverageStore <-> single
-     * coverage relation so we will take the first coverage available on that store.
+     * Retrieve the proper {@link CoverageInfo} object from the specified {@link CoverageStoreInfo} using the specified
+     * coverageName (which may be the native one in some cases). In case of null coverageName being specified, we assume
+     * we are dealing with a single coverageStore <-> single coverage relation so we will take the first coverage
+     * available on that store.
      *
      * @param storeInfo the storeInfo to be used to access the catalog
      */
@@ -3082,8 +2928,8 @@ public class ResourcePool {
     }
 
     /**
-     * The catalog repository, used to gather store references by name by some GeoTools stores like
-     * pre-generalized or image mosaic
+     * The catalog repository, used to gather store references by name by some GeoTools stores like pre-generalized or
+     * image mosaic
      */
     public CatalogRepository getRepository() {
         return repository;
