@@ -16,6 +16,7 @@ import java.util.Collection;
 import java.util.List;
 import java.util.Map;
 import java.util.function.Consumer;
+import java.util.function.Supplier;
 import java.util.logging.Level;
 import java.util.logging.Logger;
 import java.util.stream.Collectors;
@@ -27,8 +28,10 @@ import org.geoserver.catalog.FeatureTypeInfo;
 import org.geoserver.catalog.LayerGroupInfo;
 import org.geoserver.catalog.LayerInfo;
 import org.geoserver.catalog.NamespaceInfo;
+import org.geoserver.catalog.Predicates;
 import org.geoserver.catalog.ResourceInfo;
 import org.geoserver.catalog.ResourcePool;
+import org.geoserver.catalog.StoreInfo;
 import org.geoserver.catalog.StyleInfo;
 import org.geoserver.catalog.WMSLayerInfo;
 import org.geoserver.catalog.WMSStoreInfo;
@@ -67,14 +70,14 @@ import org.springframework.security.core.context.SecurityContextHolder;
 /**
  * Initializes GeoServer configuration and catalog on startup.
  *
- * <p>This class post processes the singleton beans {@link Catalog} and {@link GeoServer},
- * populating them from stored configuration.
+ * <p>This class post processes the singleton beans {@link Catalog} and {@link GeoServer}, populating them from stored
+ * configuration.
  *
  * @author Justin Deoliveira, The Open Planning Project
  */
 public abstract class GeoServerLoader {
 
-    static Logger LOGGER = Logging.getLogger("org.geoserver");
+    static Logger LOGGER = Logging.getLogger("org.geoserver.config");
 
     /** Workspace IO resources */
     static final class WorkspaceContents {
@@ -108,8 +111,8 @@ public abstract class GeoServerLoader {
     }
 
     /**
-     * Holder for both the contents and the resource of a single file to aid in identifying the
-     * offending file when loading fails *
+     * Holder for both the contents and the resource of a single file to aid in identifying the offending file when
+     * loading fails *
      */
     static final class SingleResourceContents {
         final Resource resource;
@@ -165,17 +168,13 @@ public abstract class GeoServerLoader {
     }
 
     /** Feature Type IO resource mapper */
-    static final ResourceLayerMapper FEATURE_LAYER_MAPPER =
-            new ResourceLayerMapper("featuretype.xml", "feature type");
+    static final ResourceLayerMapper FEATURE_LAYER_MAPPER = new ResourceLayerMapper("featuretype.xml", "feature type");
     /** Coverage IO resource mapper */
-    static final ResourceLayerMapper COVERAGE_LAYER_MAPPER =
-            new ResourceLayerMapper("coverage.xml", "coverage");
+    static final ResourceLayerMapper COVERAGE_LAYER_MAPPER = new ResourceLayerMapper("coverage.xml", "coverage");
     /** WMS Layer IO resource mapper */
-    static final ResourceLayerMapper WMS_LAYER_MAPPER =
-            new ResourceLayerMapper("wmslayer.xml", "wms layer");
+    static final ResourceLayerMapper WMS_LAYER_MAPPER = new ResourceLayerMapper("wmslayer.xml", "wms layer");
     /** WMTS Layer IO resource mapper */
-    static final ResourceLayerMapper WMTS_LAYER_MAPPER =
-            new ResourceLayerMapper("wmtslayer.xml", "wmts layer");
+    static final ResourceLayerMapper WMTS_LAYER_MAPPER = new ResourceLayerMapper("wmtslayer.xml", "wmts layer");
     /**
      * Generic layer catalog loader for all types of IO resources
      *
@@ -205,17 +204,15 @@ public abstract class GeoServerLoader {
             }
 
             if (LOGGER.isLoggable(Level.CONFIG)) {
-                String type =
-                        ft instanceof CoverageInfo
-                                ? "coverage"
-                                : ft instanceof FeatureTypeInfo ? "feature type" : "resource";
-                LOGGER.config(
-                        "Loaded "
-                                + type
-                                + " '"
-                                + lc.resource.name()
-                                + "', "
-                                + (ft.isEnabled() ? "enabled" : "disabled"));
+                String type = ft instanceof CoverageInfo
+                        ? "coverage"
+                        : ft instanceof FeatureTypeInfo ? "feature type" : "resource";
+                LOGGER.config("Loaded "
+                        + type
+                        + " '"
+                        + lc.resource.name()
+                        + "', "
+                        + (ft.isEnabled() ? "enabled" : "disabled"));
             }
 
             try {
@@ -226,9 +223,7 @@ public abstract class GeoServerLoader {
 
                 for (StyleInfo style : l.getStyles()) {
                     if (null == style) {
-                        LOGGER.log(
-                                Level.SEVERE,
-                                "Layer '" + l.getName() + "' references a missing style");
+                        LOGGER.log(Level.SEVERE, "Layer '" + l.getName() + "' references a missing style");
                     }
                 }
 
@@ -242,7 +237,7 @@ public abstract class GeoServerLoader {
 
     protected GeoServerResourceLoader resourceLoader;
     GeoServer geoserver;
-    XStreamPersisterFactory xpf = new XStreamPersisterFactory();
+    protected XStreamPersisterFactory xpf = new XStreamPersisterFactory();
 
     // JD: this is a hack for the moment, it is used only to maintain tests since the test setup
     // relies
@@ -254,8 +249,7 @@ public abstract class GeoServerLoader {
         this.resourceLoader = resourceLoader;
     }
 
-    public void setApplicationContext(ApplicationContext applicationContext)
-            throws BeansException {}
+    public void setApplicationContext(ApplicationContext applicationContext) throws BeansException {}
 
     public void setXStreamPeristerFactory(XStreamPersisterFactory xpf) {
         this.xpf = xpf;
@@ -265,16 +259,14 @@ public abstract class GeoServerLoader {
         GeoServerLoader.legacy = legacy;
     }
 
-    public final Object postProcessAfterInitialization(Object bean, String beanName)
-            throws BeansException {
+    public final Object postProcessAfterInitialization(Object bean, String beanName) throws BeansException {
         return bean;
     }
 
-    public final Object postProcessBeforeInitialization(Object bean, String beanName)
-            throws BeansException {
+    public final Object postProcessBeforeInitialization(Object bean, String beanName) throws BeansException {
         if (bean instanceof Catalog) {
             // ensure this is not a wrapper but the real deal
-            if (bean instanceof Wrapper && ((Wrapper) bean).isWrapperFor(Catalog.class)) {
+            if (bean instanceof Wrapper wrapper && wrapper.isWrapperFor(Catalog.class)) {
                 return bean;
             }
             postProcessBeforeInitializationCatalog(bean);
@@ -340,13 +332,11 @@ public abstract class GeoServerLoader {
 
     protected abstract void loadCatalog(Catalog catalog, XStreamPersister xp) throws Exception;
 
-    protected abstract void loadGeoServer(final GeoServer geoServer, XStreamPersister xp)
-            throws Exception;
+    protected abstract void loadGeoServer(final GeoServer geoServer, XStreamPersister xp) throws Exception;
 
     protected void loadInitializers(GeoServer geoServer) throws Exception {
         // load initializer extensions
-        List<GeoServerInitializer> initializers =
-                GeoServerExtensions.extensions(GeoServerInitializer.class);
+        List<GeoServerInitializer> initializers = GeoServerExtensions.extensions(GeoServerInitializer.class);
         for (GeoServerInitializer initer : initializers) {
             try {
                 initer.initialize(geoServer);
@@ -359,15 +349,13 @@ public abstract class GeoServerLoader {
     /**
      * Notify application initializers that reload is about to start.
      *
-     * <p>Allows initializers to pause listening for configuration changes until the reload is
-     * completed.
+     * <p>Allows initializers to pause listening for configuration changes until the reload is completed.
      *
      * @param geoServer GeoServer being reloaded
      */
     protected void beforeReloadInitializers(GeoServer geoServer) {
         // unload applicable initializer extensions at start up reload process
-        List<GeoServerReinitializer> initializers =
-                GeoServerExtensions.extensions(GeoServerReinitializer.class);
+        List<GeoServerReinitializer> initializers = GeoServerExtensions.extensions(GeoServerReinitializer.class);
         for (GeoServerReinitializer initer : initializers) {
             try {
                 initer.beforeReinitialize(geoServer);
@@ -386,8 +374,7 @@ public abstract class GeoServerLoader {
      */
     protected void reloadInitializers(GeoServer geoServer) {
         // reload applicable initializer extensions at end of reload process
-        List<GeoServerReinitializer> initializers =
-                GeoServerExtensions.extensions(GeoServerReinitializer.class);
+        List<GeoServerReinitializer> initializers = GeoServerExtensions.extensions(GeoServerReinitializer.class);
         for (GeoServerReinitializer initer : initializers) {
             try {
                 initer.reinitialize(geoServer);
@@ -397,10 +384,7 @@ public abstract class GeoServerLoader {
         }
     }
 
-    /**
-     * Does some post processing on the catalog to ensure that the "well-known" styles are always
-     * around.
-     */
+    /** Does some post processing on the catalog to ensure that the "well-known" styles are always around. */
     protected void initializeStyles(Catalog catalog, XStreamPersister xp) throws IOException {
         initializeDefaultStyles(catalog);
     }
@@ -474,10 +458,9 @@ public abstract class GeoServerLoader {
         CatalogImpl catalog2;
         if (!Resources.exists(f)) {
             // assume 2.x style data directory
-            Stopwatch sw = Stopwatch.createStarted();
-            LOGGER.config("Loading catalog " + resourceLoader.getBaseDirectory());
+            Stopwatch sw = logStart();
             catalog2 = (CatalogImpl) readCatalog(xp);
-            LOGGER.config("Read catalog in " + sw.stop());
+            logStop(sw.stop(), catalog2);
         } else {
             // import old style catalog, register the persister now so that we start
             // with a new version of the catalog
@@ -493,28 +476,23 @@ public abstract class GeoServerLoader {
         }
     }
 
-    boolean checkStoresOnStartup(XStreamPersister xp) {
+    protected boolean checkStoresOnStartup(XStreamPersister xp) {
         Resource f = resourceLoader.get("global.xml");
         if (Resources.exists(f)) {
             try {
                 GeoServerInfo global = depersist(xp, f, GeoServerInfo.class);
-                final ResourceErrorHandling resourceErrorHandling =
-                        global.getResourceErrorHandling();
+                final ResourceErrorHandling resourceErrorHandling = global.getResourceErrorHandling();
                 return resourceErrorHandling != null
-                        && !ResourceErrorHandling.SKIP_MISCONFIGURED_LAYERS.equals(
-                                resourceErrorHandling);
+                        && !ResourceErrorHandling.SKIP_MISCONFIGURED_LAYERS.equals(resourceErrorHandling);
             } catch (IOException e) {
-                LOGGER.log(
-                        Level.INFO,
-                        "Failed to determine the capabilities resource error handling",
-                        e);
+                LOGGER.log(Level.INFO, "Failed to determine the capabilities resource error handling", e);
             }
         }
         return true;
     }
 
     /** Reads the catalog from disk. */
-    Catalog readCatalog(XStreamPersister xp) throws Exception {
+    protected Catalog readCatalog(XStreamPersister xp) throws Exception {
         CatalogImpl catalog = new CatalogImpl();
         catalog.setResourceLoader(resourceLoader);
         xp.setCatalog(catalog);
@@ -539,8 +517,7 @@ public abstract class GeoServerLoader {
                 try {
                     defaultWorkspace = depersist(xp, dws, WorkspaceInfo.class);
                     if (LOGGER.isLoggable(Level.CONFIG)) {
-                        LOGGER.config(
-                                "Loaded default workspace '" + defaultWorkspace.getName() + "'");
+                        LOGGER.config("Loaded default workspace '" + defaultWorkspace.getName() + "'");
                     }
                 } catch (Exception e) {
                     LOGGER.log(Level.WARNING, "Failed to load default workspace", e);
@@ -549,18 +526,12 @@ public abstract class GeoServerLoader {
                 LOGGER.warning("No default workspace was found.");
             }
 
-            List<Resource> workspaceList =
-                    workspaces
-                            .list()
-                            .parallelStream()
-                            .filter(r -> Resources.DirectoryFilter.INSTANCE.accept(r))
-                            .collect(Collectors.toList());
+            List<Resource> workspaceList = workspaces.list().parallelStream()
+                    .filter(r -> Resources.DirectoryFilter.INSTANCE.accept(r))
+                    .collect(Collectors.toList());
 
-            try (AsynchResourceIterator<WorkspaceContents> it =
-                    new AsynchResourceIterator<>(
-                            workspaces,
-                            Resources.DirectoryFilter.INSTANCE,
-                            new WorkspaceMapper())) {
+            try (AsynchResourceIterator<WorkspaceContents> it = new AsynchResourceIterator<>(
+                    workspaces, Resources.DirectoryFilter.INSTANCE, new WorkspaceMapper())) {
                 while (it.hasNext()) {
                     WorkspaceContents wc = it.next();
                     WorkspaceInfo ws;
@@ -568,14 +539,9 @@ public abstract class GeoServerLoader {
                     try {
                         ws = depersist(xp, wc.contents, WorkspaceInfo.class);
                         catalog.add(ws);
-                        LOGGER.log(
-                                Level.CONFIG,
-                                () -> String.format("Loaded workspace '%s'", ws.getName()));
+                        LOGGER.log(Level.CONFIG, () -> "Loaded workspace '%s'".formatted(ws.getName()));
                     } catch (Exception e) {
-                        LOGGER.log(
-                                Level.WARNING,
-                                "Failed to load workspace '" + workspaceResource.name() + "'",
-                                e);
+                        LOGGER.log(Level.WARNING, "Failed to load workspace '" + workspaceResource.name() + "'", e);
                         continue;
                     }
 
@@ -585,10 +551,7 @@ public abstract class GeoServerLoader {
                         ns = depersist(xp, wc.nsContents, NamespaceInfo.class);
                         catalog.add(ns);
                     } catch (Exception e) {
-                        LOGGER.log(
-                                Level.WARNING,
-                                "Failed to load namespace for '" + workspaceResource.name() + "'",
-                                e);
+                        LOGGER.log(Level.WARNING, "Failed to load namespace for '" + workspaceResource.name() + "'", e);
                     }
 
                     // set the default workspace, this value might be null in the case of coming
@@ -610,9 +573,7 @@ public abstract class GeoServerLoader {
                             } catch (Exception e) {
                                 LOGGER.log(
                                         Level.WARNING,
-                                        "Failed to persist default workspace '"
-                                                + workspaceResource.name()
-                                                + "'",
+                                        "Failed to persist default workspace '" + workspaceResource.name() + "'",
                                         e);
                             }
                         }
@@ -627,36 +588,34 @@ public abstract class GeoServerLoader {
             }
 
             // maps each store into a SingleResourceContents
-            ResourceMapper<SingleResourceContents> storeMapper =
-                    sd -> {
-                        Resource f = sd.get("datastore.xml");
-                        if (Resources.exists(f)) {
-                            return new SingleResourceContents(f, f.getContents());
-                        }
-                        f = sd.get("coveragestore.xml");
-                        if (Resources.exists(f)) {
-                            return new SingleResourceContents(f, f.getContents());
-                        }
-                        f = sd.get("wmsstore.xml");
-                        if (Resources.exists(f)) {
-                            return new SingleResourceContents(f, f.getContents());
-                        }
-                        f = sd.get("wmtsstore.xml");
-                        if (Resources.exists(f)) {
-                            return new SingleResourceContents(f, f.getContents());
-                        }
-                        if (!isConfigDirectory(sd)) {
-                            LOGGER.warning("Ignoring store directory '" + sd.name() + "'");
-                        }
-                        // nothing found
-                        return null;
-                    };
+            ResourceMapper<SingleResourceContents> storeMapper = sd -> {
+                Resource f = sd.get("datastore.xml");
+                if (Resources.exists(f)) {
+                    return new SingleResourceContents(f, f.getContents());
+                }
+                f = sd.get("coveragestore.xml");
+                if (Resources.exists(f)) {
+                    return new SingleResourceContents(f, f.getContents());
+                }
+                f = sd.get("wmsstore.xml");
+                if (Resources.exists(f)) {
+                    return new SingleResourceContents(f, f.getContents());
+                }
+                f = sd.get("wmtsstore.xml");
+                if (Resources.exists(f)) {
+                    return new SingleResourceContents(f, f.getContents());
+                }
+                if (!isConfigDirectory(sd)) {
+                    LOGGER.warning("Ignoring store directory '" + sd.name() + "'");
+                }
+                // nothing found
+                return null;
+            };
 
             for (Resource wsd : workspaceList) {
                 // load the stores for this workspace
                 try (AsynchResourceIterator<SingleResourceContents> it =
-                        new AsynchResourceIterator<>(
-                                wsd, Resources.DirectoryFilter.INSTANCE, storeMapper)) {
+                        new AsynchResourceIterator<>(wsd, Resources.DirectoryFilter.INSTANCE, storeMapper)) {
                     while (it.hasNext()) {
                         SingleResourceContents SingleResourceContents = it.next();
                         final String resourceName = SingleResourceContents.resource.name();
@@ -669,10 +628,7 @@ public abstract class GeoServerLoader {
                         } else if ("wmtsstore.xml".equals(resourceName)) {
                             loadWmtsStore(SingleResourceContents, catalog, xp);
                         } else if (!isConfigDirectory(SingleResourceContents.resource)) {
-                            LOGGER.warning(
-                                    "Ignoring store directory '"
-                                            + SingleResourceContents.resource.name()
-                                            + "'");
+                            LOGGER.warning("Ignoring store directory '" + SingleResourceContents.resource.name() + "'");
                             continue;
                         }
                     }
@@ -702,34 +658,23 @@ public abstract class GeoServerLoader {
         return catalog;
     }
 
-    private void loadWmsStore(
-            SingleResourceContents SingleResourceContents,
-            CatalogImpl catalog,
-            XStreamPersister xp) {
+    private void loadWmsStore(SingleResourceContents SingleResourceContents, CatalogImpl catalog, XStreamPersister xp) {
         final Resource storeResource = SingleResourceContents.resource;
         WMSStoreInfo wms = null;
         try {
             wms = depersist(xp, SingleResourceContents.contents, WMSStoreInfo.class);
             catalog.add(wms);
 
-            LOGGER.info(
-                    "Loaded wmsstore '"
-                            + wms.getName()
-                            + "', "
-                            + (wms.isEnabled() ? "enabled" : "disabled"));
+            LOGGER.info("Loaded wmsstore '" + wms.getName() + "', " + (wms.isEnabled() ? "enabled" : "disabled"));
         } catch (Exception e) {
             LOGGER.log(Level.WARNING, "Failed to load wms store '" + storeResource.name() + "'", e);
             return;
         }
 
         // load wms layers
-        LayerLoader<WMSLayerInfo> coverageLoader =
-                new LayerLoader<>(WMSLayerInfo.class, xp, catalog);
-        try (AsynchResourceIterator<LayerContents> it =
-                new AsynchResourceIterator<>(
-                        storeResource.parent(),
-                        Resources.DirectoryFilter.INSTANCE,
-                        WMS_LAYER_MAPPER)) {
+        LayerLoader<WMSLayerInfo> coverageLoader = new LayerLoader<>(WMSLayerInfo.class, xp, catalog);
+        try (AsynchResourceIterator<LayerContents> it = new AsynchResourceIterator<>(
+                storeResource.parent(), Resources.DirectoryFilter.INSTANCE, WMS_LAYER_MAPPER)) {
             while (it.hasNext()) {
                 LayerContents lc = it.next();
                 coverageLoader.accept(lc);
@@ -738,9 +683,7 @@ public abstract class GeoServerLoader {
     }
 
     private void loadWmtsStore(
-            SingleResourceContents SingleResourceContents,
-            CatalogImpl catalog,
-            XStreamPersister xp) {
+            SingleResourceContents SingleResourceContents, CatalogImpl catalog, XStreamPersister xp) {
         final Resource storeResource = SingleResourceContents.resource;
         WMTSStoreInfo wmts = null;
         try {
@@ -749,19 +692,14 @@ public abstract class GeoServerLoader {
 
             LOGGER.info("Loaded wmtsstore '" + wmts.getName() + "'");
         } catch (Exception e) {
-            LOGGER.log(
-                    Level.WARNING, "Failed to load wmts store '" + storeResource.name() + "'", e);
+            LOGGER.log(Level.WARNING, "Failed to load wmts store '" + storeResource.name() + "'", e);
             return;
         }
 
         // load wmts layers
-        LayerLoader<WMTSLayerInfo> coverageLoader =
-                new LayerLoader<>(WMTSLayerInfo.class, xp, catalog);
-        try (AsynchResourceIterator<LayerContents> it =
-                new AsynchResourceIterator<>(
-                        storeResource.parent(),
-                        Resources.DirectoryFilter.INSTANCE,
-                        WMTS_LAYER_MAPPER)) {
+        LayerLoader<WMTSLayerInfo> coverageLoader = new LayerLoader<>(WMTSLayerInfo.class, xp, catalog);
+        try (AsynchResourceIterator<LayerContents> it = new AsynchResourceIterator<>(
+                storeResource.parent(), Resources.DirectoryFilter.INSTANCE, WMTS_LAYER_MAPPER)) {
             while (it.hasNext()) {
                 LayerContents lc = it.next();
                 coverageLoader.accept(lc);
@@ -770,9 +708,7 @@ public abstract class GeoServerLoader {
     }
 
     private void loadCoverageStore(
-            SingleResourceContents SingleResourceContents,
-            CatalogImpl catalog,
-            XStreamPersister xp) {
+            SingleResourceContents SingleResourceContents, CatalogImpl catalog, XStreamPersister xp) {
         CoverageStoreInfo cs = null;
         final Resource storeResource = SingleResourceContents.resource;
         try {
@@ -781,27 +717,17 @@ public abstract class GeoServerLoader {
 
             if (LOGGER.isLoggable(Level.INFO)) {
                 LOGGER.config(
-                        "Loaded coverage store '"
-                                + cs.getName()
-                                + "', "
-                                + (cs.isEnabled() ? "enabled" : "disabled"));
+                        "Loaded coverage store '" + cs.getName() + "', " + (cs.isEnabled() ? "enabled" : "disabled"));
             }
         } catch (Exception e) {
-            LOGGER.log(
-                    Level.WARNING,
-                    "Failed to load coverage store '" + storeResource.name() + "'",
-                    e);
+            LOGGER.log(Level.WARNING, "Failed to load coverage store '" + storeResource.name() + "'", e);
             return;
         }
 
         // load coverages
-        LayerLoader<CoverageInfo> coverageLoader =
-                new LayerLoader<>(CoverageInfo.class, xp, catalog);
-        try (AsynchResourceIterator<LayerContents> it =
-                new AsynchResourceIterator<>(
-                        storeResource.parent(),
-                        Resources.DirectoryFilter.INSTANCE,
-                        COVERAGE_LAYER_MAPPER)) {
+        LayerLoader<CoverageInfo> coverageLoader = new LayerLoader<>(CoverageInfo.class, xp, catalog);
+        try (AsynchResourceIterator<LayerContents> it = new AsynchResourceIterator<>(
+                storeResource.parent(), Resources.DirectoryFilter.INSTANCE, COVERAGE_LAYER_MAPPER)) {
             while (it.hasNext()) {
                 LayerContents lc = it.next();
                 coverageLoader.accept(lc);
@@ -821,11 +747,7 @@ public abstract class GeoServerLoader {
             catalog.add(ds);
 
             if (LOGGER.isLoggable(Level.CONFIG)) {
-                LOGGER.config(
-                        "Loaded data store '"
-                                + ds.getName()
-                                + "', "
-                                + (ds.isEnabled() ? "enabled" : "disabled"));
+                LOGGER.config("Loaded data store '" + ds.getName() + "', " + (ds.isEnabled() ? "enabled" : "disabled"));
             }
 
             if (checkStores && ds.isEnabled()) {
@@ -849,13 +771,9 @@ public abstract class GeoServerLoader {
         }
 
         // load feature types
-        LayerLoader<FeatureTypeInfo> featureLoader =
-                new LayerLoader<>(FeatureTypeInfo.class, xp, catalog);
-        try (AsynchResourceIterator<LayerContents> it =
-                new AsynchResourceIterator<>(
-                        storeResource.parent(),
-                        Resources.DirectoryFilter.INSTANCE,
-                        FEATURE_LAYER_MAPPER)) {
+        LayerLoader<FeatureTypeInfo> featureLoader = new LayerLoader<>(FeatureTypeInfo.class, xp, catalog);
+        try (AsynchResourceIterator<LayerContents> it = new AsynchResourceIterator<>(
+                storeResource.parent(), Resources.DirectoryFilter.INSTANCE, FEATURE_LAYER_MAPPER)) {
             while (it.hasNext()) {
                 LayerContents lc = it.next();
                 featureLoader.accept(lc);
@@ -864,8 +782,8 @@ public abstract class GeoServerLoader {
     }
 
     /**
-     * Some config directories in GeoServer are used to store workspace specific configurations,
-     * identify them so that we don't log complaints about their existence
+     * Some config directories in GeoServer are used to store workspace specific configurations, identify them so that
+     * we don't log complaints about their existence
      */
     private boolean isConfigDirectory(Resource dir) {
         String name = dir.name();
@@ -924,17 +842,14 @@ public abstract class GeoServerLoader {
 
                     String namespace = (String) dataStore.get("namespace");
                     Resource destFeatureTypeDir =
-                            resourceLoader.get(
-                                    Paths.path(
-                                            "workspaces",
-                                            namespace,
-                                            reader.dataStore(),
-                                            reader.name()));
+                            resourceLoader.get(Paths.path("workspaces", namespace, reader.dataStore(), reader.name()));
                     if (destFeatureTypeDir != null) {
                         // copy all the files over
                         for (Resource file : featureTypeDir.list()) {
                             if (file.getType() == Type.RESOURCE && !featureTypeInfo.equals(file)) {
-                                IOUtils.copy(file.in(), destFeatureTypeDir.get(file.name()).out());
+                                IOUtils.copy(
+                                        file.in(),
+                                        destFeatureTypeDir.get(file.name()).out());
                             }
                         }
                     }
@@ -960,10 +875,7 @@ public abstract class GeoServerLoader {
                     GeoServerInfo global = depersist(xp, f, GeoServerInfo.class);
                     geoServer.setGlobal(global);
                 } catch (Exception e) {
-                    LOGGER.log(
-                            Level.WARNING,
-                            "Failed to load global configuration file '" + f.name() + "'",
-                            e);
+                    LOGGER.log(Level.WARNING, "Failed to load global configuration file '" + f.name() + "'", e);
                 }
             }
 
@@ -974,10 +886,7 @@ public abstract class GeoServerLoader {
                     LoggingInfo logging = depersist(xp, f, LoggingInfo.class);
                     geoServer.setLogging(logging);
                 } catch (Exception e) {
-                    LOGGER.log(
-                            Level.WARNING,
-                            "Failed to load logging configuration file '" + f.name() + "'",
-                            e);
+                    LOGGER.log(Level.WARNING, "Failed to load logging configuration file '" + f.name() + "'", e);
                 }
             }
 
@@ -995,10 +904,7 @@ public abstract class GeoServerLoader {
                         } catch (Exception e) {
                             LOGGER.log(
                                     Level.WARNING,
-                                    "Failed to load configuration file '"
-                                            + f.name()
-                                            + "' for workspace "
-                                            + dir.name(),
+                                    "Failed to load configuration file '" + f.name() + "' for workspace " + dir.name(),
                                     e);
                         }
                     }
@@ -1037,8 +943,7 @@ public abstract class GeoServerLoader {
     }
 
     void loadStyles(Resource styles, Catalog catalog, XStreamPersister xp) throws IOException {
-        Filter<Resource> styleFilter =
-                r -> XML_FILTER.accept(r) && !Resources.exists(styles.get(r.name() + ".xml"));
+        Filter<Resource> styleFilter = r -> XML_FILTER.accept(r) && !Resources.exists(styles.get(r.name() + ".xml"));
         try (AsynchResourceIterator<SingleResourceContents> it =
                 new AsynchResourceIterator<>(styles, styleFilter, RESOURCE_MAPPER)) {
             while (it.hasNext()) {
@@ -1065,8 +970,7 @@ public abstract class GeoServerLoader {
                 try {
                     LayerGroupInfo lg = depersist(xp, r.contents, LayerGroupInfo.class);
                     if (lg.getLayers() == null || lg.getLayers().isEmpty()) {
-                        LOGGER.warning(
-                                "Skipping empty layer group '" + lg.getName() + "', it is invalid");
+                        LOGGER.warning("Skipping empty layer group '" + lg.getName() + "', it is invalid");
                         continue;
                     }
                     catalog.add(lg);
@@ -1080,10 +984,7 @@ public abstract class GeoServerLoader {
     }
 
     void loadServices(
-            Resource directory,
-            boolean global,
-            List<XStreamServiceLoader<ServiceInfo>> loaders,
-            GeoServer geoServer) {
+            Resource directory, boolean global, List<XStreamServiceLoader<ServiceInfo>> loaders, GeoServer geoServer) {
         for (XStreamServiceLoader<ServiceInfo> l : loaders) {
             try {
                 ServiceInfo s = l.load(geoServer, directory);
@@ -1091,11 +992,7 @@ public abstract class GeoServerLoader {
 
                 geoServer.add(s);
 
-                LOGGER.config(
-                        "Loaded service '"
-                                + s.getId()
-                                + "', "
-                                + (s.isEnabled() ? "enabled" : "disabled"));
+                LOGGER.config("Loaded service '" + s.getId() + "', " + (s.isEnabled() ? "enabled" : "disabled"));
             } catch (Throwable t) {
                 if (Resources.exists(directory)) {
                     LOGGER.log(
@@ -1108,8 +1005,7 @@ public abstract class GeoServerLoader {
                 } else {
                     LOGGER.log(
                             Level.SEVERE,
-                            "Failed to load the root service configuration with loader for "
-                                    + l.getServiceClass(),
+                            "Failed to load the root service configuration with loader for " + l.getServiceClass(),
                             t);
                 }
             }
@@ -1132,8 +1028,7 @@ public abstract class GeoServerLoader {
     }
 
     /** Helper method which uses xstream to depersist an object as xml from disk. */
-    static <T> T depersist(XStreamPersister xp, byte[] contents, Class<T> clazz)
-            throws IOException {
+    static <T> T depersist(XStreamPersister xp, byte[] contents, Class<T> clazz) throws IOException {
         try (InputStream in = new ByteArrayInputStream(contents)) {
             return xp.load(in, clazz);
         }
@@ -1144,5 +1039,25 @@ public abstract class GeoServerLoader {
         if (geoserver != null) {
             geoserver.dispose();
         }
+    }
+
+    protected Stopwatch logStart() {
+        LOGGER.log(Level.CONFIG, "Loading catalog {0}", resourceLoader.getBaseDirectory());
+        return Stopwatch.createStarted();
+    }
+
+    protected void logStop(Stopwatch stoppedSw, final Catalog catalog) {
+        Supplier<String> msg = () ->
+                "Read Catalog in %s: workspaces: %,d, namespaces: %,d, styles: %,d, stores: %,d, resources: %,d, layers: %,d, layer groups: %,d."
+                        .formatted(
+                                stoppedSw,
+                                catalog.count(WorkspaceInfo.class, Predicates.acceptAll()),
+                                catalog.count(NamespaceInfo.class, Predicates.acceptAll()),
+                                catalog.count(StyleInfo.class, Predicates.acceptAll()),
+                                catalog.count(StoreInfo.class, Predicates.acceptAll()),
+                                catalog.count(ResourceInfo.class, Predicates.acceptAll()),
+                                catalog.count(LayerInfo.class, Predicates.acceptAll()),
+                                catalog.count(LayerGroupInfo.class, Predicates.acceptAll()));
+        LOGGER.info(msg);
     }
 }
