@@ -65,15 +65,9 @@ public class ProxifyingURLMangler implements URLMangler {
     public static Map<String, Pattern> FORWARDED_PATTERNS = new HashMap<>();
 
     {
-        Arrays.asList(ForwardedComponents.values())
-                .forEach(
-                        (comp) -> {
-                            FORWARDED_PATTERNS.put(
-                                    comp.asString(),
-                                    Pattern.compile(
-                                            String.format(
-                                                    "(.*)%s=([^;^ ]+)(.*)", comp.asString())));
-                        });
+        Arrays.asList(ForwardedComponents.values()).forEach((comp) -> {
+            FORWARDED_PATTERNS.put(comp.asString(), Pattern.compile("(.*)%s=([^;^ ]+)(.*)".formatted(comp.asString())));
+        });
     }
 
     public ProxifyingURLMangler(GeoServer geoServer) {
@@ -81,14 +75,12 @@ public class ProxifyingURLMangler implements URLMangler {
     }
 
     @Override
-    public void mangleURL(
-            StringBuilder baseURL, StringBuilder path, Map<String, String> kvp, URLType type) {
+    public void mangleURL(StringBuilder baseURL, StringBuilder path, Map<String, String> kvp, URLType type) {
 
         // first check the system property, then fall back to configuration
-        String proxyBase =
-                (GeoServerExtensions.getProperty(Requests.PROXY_PARAM) != null)
-                        ? GeoServerExtensions.getProperty(Requests.PROXY_PARAM)
-                        : this.geoServer.getSettings().getProxyBaseUrl();
+        String proxyBase = (GeoServerExtensions.getProperty(Requests.PROXY_PARAM) != null)
+                ? GeoServerExtensions.getProperty(Requests.PROXY_PARAM)
+                : this.geoServer.getSettings().getProxyBaseUrl();
 
         // resolve parameters values if parametrization is activated
         proxyBase = resolveParametrization(proxyBase);
@@ -107,10 +99,9 @@ public class ProxifyingURLMangler implements URLMangler {
     private boolean resolveDoMangleHeaders() {
         if (isUseHeadersSystemPropertyEnabled()) return true;
         Boolean wsAwareFlag = geoServer.getSettings().isUseHeadersProxyURL();
-        Boolean resultFlag =
-                wsAwareFlag != null
-                        ? wsAwareFlag
-                        : geoServer.getGlobal().getSettings().isUseHeadersProxyURL();
+        Boolean resultFlag = wsAwareFlag != null
+                ? wsAwareFlag
+                : geoServer.getGlobal().getSettings().isUseHeadersProxyURL();
         if (resultFlag != null) return resultFlag;
         return false;
     }
@@ -125,13 +116,10 @@ public class ProxifyingURLMangler implements URLMangler {
         return useHeadersProxyURL != null && "true".equalsIgnoreCase(useHeadersProxyURL.trim());
     }
 
-    /**
-     * Resolve parameters values in the provided String if GeoServer parametrization is activated.
-     */
+    /** Resolve parameters values in the provided String if GeoServer parametrization is activated. */
     private String resolveParametrization(String proxyBase) {
         if (GeoServerEnvironment.allowEnvParametrization() && StringUtils.isNotBlank(proxyBase)) {
-            GeoServerEnvironment gsEnvironment =
-                    GeoServerExtensions.bean(GeoServerEnvironment.class);
+            GeoServerEnvironment gsEnvironment = GeoServerExtensions.bean(GeoServerEnvironment.class);
             proxyBase = (String) gsEnvironment.resolveValue(proxyBase);
         }
         return proxyBase;
@@ -209,17 +197,16 @@ public class ProxifyingURLMangler implements URLMangler {
     }
 
     private void collectForwardedHeaders(Map<String, String> headers, String headerValue) {
-        FORWARDED_PATTERNS.forEach(
-                (comp, pattern) -> {
-                    Matcher m = pattern.matcher(headerValue);
-                    if (m.matches()) {
-                        String key = toTemplate(Headers.FORWARDED.asString() + "." + comp);
-                        headers.put(key, m.group(2));
-                    }
-                });
+        FORWARDED_PATTERNS.forEach((comp, pattern) -> {
+            Matcher m = pattern.matcher(headerValue);
+            if (m.matches()) {
+                String key = toTemplate(Headers.FORWARDED.asString() + "." + comp);
+                headers.put(key, m.group(2));
+            }
+        });
     }
 
     private String toTemplate(String header) {
-        return String.format("%s%s%s", TEMPLATE_PREFIX, header, TEMPLATE_POSTFIX);
+        return "%s%s%s".formatted(TEMPLATE_PREFIX, header, TEMPLATE_POSTFIX);
     }
 }
