@@ -31,8 +31,8 @@ import org.geoserver.security.impl.DataAccessRuleDAO;
 import org.geotools.util.logging.Logging;
 
 /**
- * Listens for changes on Workspace and Layer/LayerGroup names and updates Data Security Rules if
- * they exist on the modified Resource
+ * Listens for changes on Workspace and Layer/LayerGroup names and updates Data Security Rules if they exist on the
+ * modified Resource
  *
  * @author Imran Rajjad
  */
@@ -61,27 +61,21 @@ public class SecuredResourceNameChangeListener implements CatalogListener {
             final String removedObjectName; // for logging
             final Predicate<DataAccessRule> filter;
             final CatalogInfo eventSource = event.getSource();
-            if (eventSource instanceof WorkspaceInfo) {
-                WorkspaceInfo ws = (WorkspaceInfo) eventSource;
+            if (eventSource instanceof WorkspaceInfo ws) {
                 filter = workspaceFilter(ws.getName());
                 removedObjectName = "Workspace " + ws.getName();
-            } else if (eventSource instanceof LayerInfo) {
-                LayerInfo l = (LayerInfo) eventSource;
+            } else if (eventSource instanceof LayerInfo l) {
                 WorkspaceInfo ws = l.getResource().getStore().getWorkspace();
                 filter = layerFilter(ws.getName(), l.getName());
                 removedObjectName = "Layer " + l.getName();
-            } else if (eventSource instanceof LayerGroupInfo) {
-                LayerGroupInfo lg = (LayerGroupInfo) eventSource;
+            } else if (eventSource instanceof LayerGroupInfo lg) {
                 filter = layerGroupFilter(lg.getWorkspace(), lg.getName());
                 removedObjectName = "Layer Group " + lg.getName();
             } else {
                 return;
             }
 
-            Supplier<String> message =
-                    () ->
-                            String.format(
-                                    "Removing Security Rules for deleted %s", removedObjectName);
+            Supplier<String> message = () -> "Removing Security Rules for deleted %s".formatted(removedObjectName);
             apply(filter, dao::removeRule, message);
         } finally {
             lock.release();
@@ -118,15 +112,14 @@ public class SecuredResourceNameChangeListener implements CatalogListener {
                 filter = workspaceFilter(oldName);
                 updater = r -> r.setRoot(newName);
                 renamedObject = "Workspace";
-            } else if (eventSource instanceof ResourceInfo) {
+            } else if (eventSource instanceof ResourceInfo info) {
                 // if a layer has been renamed
                 // similar layer names can exist in different workspaces
-                String wsName = ((ResourceInfo) eventSource).getStore().getWorkspace().getName();
+                String wsName = info.getStore().getWorkspace().getName();
                 filter = layerFilter(wsName, oldName);
                 updater = r -> r.setLayer(newName);
                 renamedObject = "Resource";
-            } else if (eventSource instanceof LayerGroupInfo) {
-                LayerGroupInfo lg = (LayerGroupInfo) eventSource;
+            } else if (eventSource instanceof LayerGroupInfo lg) {
                 filter = layerGroupFilter(lg.getWorkspace(), oldName);
                 updater = layerGroupRuleUpdater(lg.getWorkspace(), newName);
                 renamedObject = "LayerGroup";
@@ -135,22 +128,18 @@ public class SecuredResourceNameChangeListener implements CatalogListener {
             }
 
             Supplier<String> message =
-                    () ->
-                            String.format(
-                                    "Updating Security Rules for renamed %s: %s -> %s",
-                                    renamedObject, oldName, newName);
+                    () -> "Updating Security Rules for renamed %s: %s -> %s".formatted(renamedObject, oldName, newName);
 
             // modifying directly a rule is not a good idea, depending on the DAO implementation
             // it might do nothing (the DAO uses defensive copies or secondary storage) or it
             // might cause troubles with the DAO internal data structures (e.g. sorted structures,
             // when the field update changes the position of the rule in the order).
             // This bit removes the rule, changes it, and adds it back
-            final Consumer<DataAccessRule> safeUpdater =
-                    r -> {
-                        dao.removeRule(r);
-                        updater.accept(r);
-                        dao.addRule(r);
-                    };
+            final Consumer<DataAccessRule> safeUpdater = r -> {
+                dao.removeRule(r);
+                updater.accept(r);
+                dao.addRule(r);
+            };
             apply(filter, safeUpdater, message);
         } finally {
             lock.release();
@@ -158,8 +147,8 @@ public class SecuredResourceNameChangeListener implements CatalogListener {
     }
 
     /**
-     * Updates the {@link DataAccessRule#setRoot root} if it's a global layer group (i.e. {@code ws
-     * == null}), or the {@link DataAccessRule#setLayer layer} otherwsie.
+     * Updates the {@link DataAccessRule#setRoot root} if it's a global layer group (i.e. {@code ws == null}), or the
+     * {@link DataAccessRule#setLayer layer} otherwsie.
      */
     private Consumer<DataAccessRule> layerGroupRuleUpdater(WorkspaceInfo ws, String newName) {
         if (ws == null) {
@@ -169,18 +158,18 @@ public class SecuredResourceNameChangeListener implements CatalogListener {
     }
 
     /**
-     * @return rule predicate that checks the rule relates to a workspace, matching {@link
-     *     DataAccessRule#getRoot() root} with the workspace name, and checking the {@link
-     *     DataAccessRule#getLayer() layer} <b>is not</b> {@code null}.
+     * @return rule predicate that checks the rule relates to a workspace, matching {@link DataAccessRule#getRoot()
+     *     root} with the workspace name, and checking the {@link DataAccessRule#getLayer() layer} <b>is not</b>
+     *     {@code null}.
      */
     private Predicate<DataAccessRule> workspaceFilter(String workspaceName) {
         return r -> r.getRoot().equalsIgnoreCase(workspaceName) && r.getLayer() != null;
     }
 
     /**
-     * @return rule predicate that matches both the {@link DataAccessRule#getRoot() root} and {@link
-     *     DataAccessRule#getLayer() layer} against the non-null {@code worksapce} and {@code
-     *     layerName}, respectively.
+     * @return rule predicate that matches both the {@link DataAccessRule#getRoot() root} and
+     *     {@link DataAccessRule#getLayer() layer} against the non-null {@code worksapce} and {@code layerName},
+     *     respectively.
      */
     private Predicate<DataAccessRule> layerFilter(String workspace, String layerName) {
         return filter(workspace::equalsIgnoreCase, layerName::equalsIgnoreCase);
@@ -189,9 +178,9 @@ public class SecuredResourceNameChangeListener implements CatalogListener {
     /**
      * Predicate that matches if a rule applies to the given layer group.
      *
-     * <p>For global layer groups, checks the layer group name matches the rule's {@link
-     * DataAccessRule#getRoot() root}, and the rule's layer is {@code null}. For non global layer
-     * groups, behaves like {@link #layerFilter(String, String)}
+     * <p>For global layer groups, checks the layer group name matches the rule's {@link DataAccessRule#getRoot() root},
+     * and the rule's layer is {@code null}. For non global layer groups, behaves like {@link #layerFilter(String,
+     * String)}
      */
     private Predicate<DataAccessRule> layerGroupFilter(WorkspaceInfo ws, String lgName) {
         final boolean isGlobalLayerGroup = null == ws;
@@ -201,10 +190,7 @@ public class SecuredResourceNameChangeListener implements CatalogListener {
         return layerFilter(ws.getName(), lgName);
     }
 
-    void apply(
-            Predicate<DataAccessRule> filter,
-            Consumer<DataAccessRule> action,
-            Supplier<String> logMessage) {
+    void apply(Predicate<DataAccessRule> filter, Consumer<DataAccessRule> action, Supplier<String> logMessage) {
         List<DataAccessRule> matches = getDataAccessRules(filter);
         if (!matches.isEmpty()) {
             LOGGER.info(logMessage);
@@ -228,11 +214,10 @@ public class SecuredResourceNameChangeListener implements CatalogListener {
     }
 
     /**
-     * Returns a {@code Predicate<DataAccessRule>} that satisfies both {@link
-     * DataAccessRule#getRoot() root} {@link DataAccessRule#getLayer() layer} predicates
+     * Returns a {@code Predicate<DataAccessRule>} that satisfies both {@link DataAccessRule#getRoot() root}
+     * {@link DataAccessRule#getLayer() layer} predicates
      */
-    private Predicate<DataAccessRule> filter(
-            Predicate<String> rootFilter, Predicate<String> layerFilter) {
+    private Predicate<DataAccessRule> filter(Predicate<String> rootFilter, Predicate<String> layerFilter) {
         return r -> rootFilter.test(r.getRoot()) && layerFilter.test(r.getLayer());
     }
 
