@@ -4,18 +4,20 @@
  */
 package org.geoserver.system.status;
 
+import java.io.Serial;
 import java.io.Serializable;
 import java.time.LocalTime;
 import org.geotools.util.Converters;
 
 /**
- * Stores values and configuration of system information metrics This object is serialized by
- * MonitorRest to provide XML, JSON and HTML view of data
+ * Stores values and configuration of system information metrics This object is serialized by MonitorRest to provide
+ * XML, JSON and HTML view of data
  *
  * @author sandr
  */
 public class MetricValue implements Serializable {
 
+    @Serial
     private static final long serialVersionUID = 344784541680947799L;
 
     Object value;
@@ -109,10 +111,8 @@ public class MetricValue implements Serializable {
         }
         if (value instanceof Double || value instanceof Float) {
             final Number numberValue = (Number) value;
-            return String.format(
-                    "%.2f %s",
-                    value instanceof Double ? numberValue.doubleValue() : numberValue.floatValue(),
-                    unit);
+            return "%.2f %s"
+                    .formatted(value instanceof Double ? numberValue.doubleValue() : numberValue.floatValue(), unit);
         }
         if (unit != null && unit.equalsIgnoreCase("bytes")) {
             long bytes = Converters.convert(value, Long.class);
@@ -121,7 +121,7 @@ public class MetricValue implements Serializable {
             long seconds = Converters.convert(value, Long.class);
             return LocalTime.MIN.plusSeconds(seconds).toString();
         }
-        return String.format("%s %s", value, unit);
+        return "%s %s".formatted(value, unit);
     }
 
     public String getIdentifier() {
@@ -132,10 +132,7 @@ public class MetricValue implements Serializable {
         this.identifier = identifier;
     }
 
-    /**
-     * Based on this article:
-     * http://programming.guide/java/formatting-byte-size-to-human-readable-format.html
-     */
+    /** Based on this article: http://programming.guide/java/formatting-byte-size-to-human-readable-format.html */
     private static String humanReadableByteCount(long bytes) {
         // df -h and du -h use 1024 by default, system monitoring use MB
         int unit = 1024;
@@ -144,7 +141,7 @@ public class MetricValue implements Serializable {
         }
         int exp = (int) (Math.log(bytes) / Math.log(unit));
         char pre = "KMGTPE".charAt(exp - 1);
-        return String.format("%.1f %siB", bytes / Math.pow(unit, exp), pre);
+        return "%.1f %siB".formatted(bytes / Math.pow(unit, exp), pre);
     }
 
     /** Value holder used for XML and JSOn encoding. */
