@@ -71,6 +71,7 @@ import org.apache.http.message.BasicHeaderValueParser;
 import org.custommonkey.xmlunit.XMLUnit;
 import org.custommonkey.xmlunit.XpathEngine;
 import org.custommonkey.xmlunit.exceptions.XpathException;
+import org.geoserver.GeoserverInitStartupListener;
 import org.geoserver.catalog.CascadeDeleteVisitor;
 import org.geoserver.catalog.Catalog;
 import org.geoserver.catalog.CoverageInfo;
@@ -115,6 +116,7 @@ import org.geoserver.security.GeoServerSecurityManager;
 import org.geoserver.security.GeoServerUserGroupService;
 import org.geoserver.security.GeoServerUserGroupStore;
 import org.geoserver.security.auth.TestingAuthenticationCache;
+import org.geoserver.security.impl.AbstractGeoServerSecurityService;
 import org.geoserver.security.impl.DataAccessRule;
 import org.geoserver.security.impl.DataAccessRuleDAO;
 import org.geoserver.security.impl.GeoServerRole;
@@ -161,26 +163,24 @@ import org.xml.sax.SAXException;
 import org.xml.sax.SAXParseException;
 
 /**
- * Base test class for GeoServer system tests that require a fully configured spring context and
- * work off a real data directory provided by {@link SystemTestData}.
+ * Base test class for GeoServer system tests that require a fully configured spring context and work off a real data
+ * directory provided by {@link SystemTestData}.
  *
  * <h2>Subclass Hooks</h2>
  *
  * <p>Subclasses extending this base class have the following hooks avaialble:
  *
  * <ul>
- *   <li>{@link #setUpTestData(SystemTestData)} - Perform post configuration of the {@link
- *       SystemTestData} instance
- *   <li>{@link #onSetUp(SystemTestData)} - Perform setup after the system has been fully
- *       initialized
+ *   <li>{@link #setUpTestData(SystemTestData)} - Perform post configuration of the {@link SystemTestData} instance
+ *   <li>{@link #onSetUp(SystemTestData)} - Perform setup after the system has been fully initialized
  *   <li>{@link #onTearDown(SystemTestData)} - Perform teardown before the system is to be shutdown
  * </ul>
  *
  * <h2>Test Setup Frequency</h2>
  *
- * <p>By default the setup cycle is executed once for extensions of this class. Subclasses that
- * require a different test setup frequency should annotate themselves with the appropriate {@link
- * TestSetup} annotation. For example to implement a repeated setup: <code><pre>
+ * <p>By default the setup cycle is executed once for extensions of this class. Subclasses that require a different test
+ * setup frequency should annotate themselves with the appropriate {@link TestSetup} annotation. For example to
+ * implement a repeated setup: <code><pre>
  *  {@literal @}TestSetup(run=TestSetupFrequency.REPEAT)
  *  public class MyTest extends GeoServerSystemTestSupport {
  *
@@ -190,10 +190,6 @@ import org.xml.sax.SAXParseException;
  * @author Justin Deoliveira, OpenGeo
  */
 @TestSetup(run = TestSetupFrequency.ONCE)
-@SuppressWarnings({
-    "PMD.JUnit4TestShouldUseBeforeAnnotation",
-    "PMD.JUnit4TestShouldUseAfterAnnotation"
-})
 public class GeoServerSystemTestSupport extends GeoServerBaseTestSupport<SystemTestData> {
 
     private MockHttpServletResponse lastResponse;
@@ -218,55 +214,67 @@ public class GeoServerSystemTestSupport extends GeoServerBaseTestSupport<SystemT
     protected static DispatcherServlet dispatcher;
 
     /**
-     * In IDEs during development GeoTools sources can be in the classpath of GeoServer tests, this
-     * resolver allows them to be resolved while blocking the rest
+     * In IDEs during development GeoTools sources can be in the classpath of GeoServer tests, this resolver allows them
+     * to be resolved while blocking the rest
      */
-    public static final EntityResolver RESOLVE_DISABLED_PROVIDER_DEVMODE =
-            new PreventLocalEntityResolver() {
-                @Override
-                public InputSource resolveEntity(String publicId, String systemId)
-                        throws SAXException, IOException {
-                    if (isLocalGeoToolsSchema(null, systemId)) {
-                        return null;
-                    }
+    public static final EntityResolver RESOLVE_DISABLED_PROVIDER_DEVMODE = new PreventLocalEntityResolver() {
+        @Override
+        public InputSource resolveEntity(String publicId, String systemId) throws SAXException, IOException {
+            if (isLocalGeoToolsSchema(null, systemId) || isDataDirectory(systemId)) {
+                return null;
+            }
 
-                    return super.resolveEntity(publicId, systemId);
-                }
+            return super.resolveEntity(publicId, systemId);
+        }
 
-                @Override
-                public InputSource resolveEntity(
-                        String name, String publicId, String baseURI, String systemId)
-                        throws SAXException, IOException {
-                    if (isLocalGeoToolsSchema(baseURI, systemId)) {
-                        return null;
-                    }
+        @Override
+        public InputSource resolveEntity(String name, String publicId, String baseURI, String systemId)
+                throws SAXException, IOException {
+            if (isLocalGeoToolsSchema(baseURI, systemId) || isDataDirectory(systemId)) {
+                return null;
+            }
 
-                    return super.resolveEntity(name, publicId, baseURI, systemId);
-                }
+            return super.resolveEntity(name, publicId, baseURI, systemId);
+        }
 
-                private boolean isLocalGeoToolsSchema(String baseURI, String systemId) {
-                    if (systemId.startsWith("file:/")) {
-                        return isLocalGeotoolsSchema(systemId);
-                    } else if (!systemId.contains("://") && baseURI != null) {
-                        // location relative to a baseURI
-                        return isLocalGeotoolsSchema(baseURI);
-                    }
+        private boolean isLocalGeoToolsSchema(String baseURI, String systemId) {
+            if (systemId.startsWith("file:/")) {
+                return isLocalGeotoolsSchema(systemId);
+            } else if (!systemId.contains("://") && baseURI != null) {
+                // location relative to a baseURI
+                return isLocalGeotoolsSchema(baseURI);
+            }
+            return false;
+        }
+
+        private boolean isLocalGeotoolsSchema(String path) {
+            // Windows case insensitive filesystem work-around
+            path = path.toLowerCase();
+            // Match the GeoTools locations having schemas we resolve against
+            return path.matches(".*modules[\\\\/]extension[\\\\/]xsd[\\\\/].*\\.xsd")
+                    || path.matches(".*modules[\\\\/]ogc[\\\\/].*\\.xsd");
+        }
+
+        private boolean isDataDirectory(String systemId) {
+            if (applicationContext != null) {
+                GeoServerDataDirectory dd = applicationContext.getBean(GeoServerDataDirectory.class);
+                try {
+                    String path = dd.getRoot("workspaces").dir().getCanonicalPath();
+                    if (systemId.startsWith("file:")) systemId = systemId.substring(5);
+                    String canonicalSystemId = new File(systemId).getCanonicalPath();
+                    return canonicalSystemId.startsWith(path);
+                } catch (IOException e) {
                     return false;
                 }
+            }
+            return false;
+        }
 
-                private boolean isLocalGeotoolsSchema(String path) {
-                    // Windows case insensitive filesystem work-around
-                    path = path.toLowerCase();
-                    // Match the GeoTools locations having schemas we resolve against
-                    return path.matches(".*modules[\\\\/]extension[\\\\/]xsd[\\\\/].*\\.xsd")
-                            || path.matches(".*modules[\\\\/]ogc[\\\\/].*\\.xsd");
-                }
-
-                @Override
-                public String toString() {
-                    return "PreventLocalEntityResolver";
-                }
-            };
+        @Override
+        public String toString() {
+            return "PreventLocalEntityResolver";
+        }
+    };
 
     @Override
     protected final void setUp(SystemTestData testData) throws Exception {
@@ -282,10 +290,6 @@ public class GeoServerSystemTestSupport extends GeoServerBaseTestSupport<SystemT
             // ignore on VM where this optimization does not apply
         }
 
-        // disable security manager to speed up tests, we are spending a lot of time in privileged
-        // blocks
-        System.setSecurityManager(null);
-
         // setup quiet logging (we need to to this here because Data
         // is loaded before GeoServer has a chance to setup logging for good)
         try {
@@ -295,8 +299,7 @@ public class GeoServerSystemTestSupport extends GeoServerBaseTestSupport<SystemT
         }
         System.setProperty(LoggingUtils.RELINQUISH_LOG4J_CONTROL, "true");
         Logging.ALL.setLoggerFactory("org.geotools.util.logging.Log4J2LoggerFactory");
-        GeoServerResourceLoader loader =
-                new GeoServerResourceLoader(testData.getDataDirectoryRoot());
+        GeoServerResourceLoader loader = new GeoServerResourceLoader(testData.getDataDirectoryRoot());
         LoggingUtils.initLogging(loader, getLogConfiguration(), false, true, null);
 
         setUpTestData(testData);
@@ -327,8 +330,7 @@ public class GeoServerSystemTestSupport extends GeoServerBaseTestSupport<SystemT
             setUpSpring(contexts);
 
             applicationContext =
-                    new GeoServerTestApplicationContext(
-                            contexts.toArray(new String[contexts.size()]), servletContext);
+                    new GeoServerTestApplicationContext(contexts.toArray(new String[contexts.size()]), servletContext);
             applicationContext.setUseLegacyGeoServerLoader(false);
             applicationContext.refresh();
             applicationContext.publishEvent(new ContextLoadedEvent(applicationContext));
@@ -337,13 +339,15 @@ public class GeoServerSystemTestSupport extends GeoServerBaseTestSupport<SystemT
             // wipes
             // out all parameters
             servletContext.setAttribute(
-                    WebApplicationContext.ROOT_WEB_APPLICATION_CONTEXT_ATTRIBUTE,
-                    applicationContext);
+                    WebApplicationContext.ROOT_WEB_APPLICATION_CONTEXT_ATTRIBUTE, applicationContext);
 
             dispatcher = buildDispatcher();
 
             // Allow resolution of XSDs from local file system
             EntityResolverProvider.setEntityResolver(RESOLVE_DISABLED_PROVIDER_DEVMODE);
+
+            // Use GeoServer's ImageN ImagingListener
+            GeoserverInitStartupListener.initImageNDefaultInstance();
 
             getSecurityManager().setAuthenticationCache(new TestingAuthenticationCache());
             onSetUp(testData);
@@ -399,9 +403,9 @@ public class GeoServerSystemTestSupport extends GeoServerBaseTestSupport<SystemT
     /**
      * Sets up the {@link SystemTestData} used for this test.
      *
-     * <p>This method is used to add any additional data or configuration to the test setup and may
-     * be overridden or extended. The default implementation calls {@link
-     * SystemTestData#setUpDefaultLayers()} to add the default layers for the test.
+     * <p>This method is used to add any additional data or configuration to the test setup and may be overridden or
+     * extended. The default implementation calls {@link SystemTestData#setUpDefaultLayers()} to add the default layers
+     * for the test.
      */
     protected void setUpTestData(SystemTestData testData) throws Exception {
         testData.setUpDefault();
@@ -410,22 +414,19 @@ public class GeoServerSystemTestSupport extends GeoServerBaseTestSupport<SystemT
     /**
      * Subclass hook called after the system (ie spring context) has been fully initialized.
      *
-     * <p>Subclasses should override for post setup that is needed. The default implementation does
-     * nothing.
+     * <p>Subclasses should override for post setup that is needed. The default implementation does nothing.
      */
     protected void onSetUp(SystemTestData testData) throws Exception {}
 
     /**
      * Subclass hook called before the system (ie spring context) is to be shut down.
      *
-     * <p>Subclasses should override for any cleanup / teardown that should occur on system
-     * shutdown.
+     * <p>Subclasses should override for any cleanup / teardown that should occur on system shutdown.
      */
     protected void onTearDown(SystemTestData testData) throws Exception {}
 
     /**
-     * Sets up the spring context locations to use in constructing the spring context for this
-     * system test.
+     * Sets up the spring context locations to use in constructing the spring context for this system test.
      *
      * <p>Subclasses may override to provide additional context files/locations.
      */
@@ -440,12 +441,11 @@ public class GeoServerSystemTestSupport extends GeoServerBaseTestSupport<SystemT
     /**
      * Returns the logging configuration profile.
      *
-     * <p>The default value is "TEST_LOGGING", which is a pretty quiet configuration, or
-     * "QUIET_LOGGING" based on {@link #isQuietTests()} check of system property {@code
-     * -DquietTests}.
+     * <p>The default value is "TEST_LOGGING", which is a pretty quiet configuration, or "QUIET_LOGGING" based on
+     * {@link #isQuietTests()} check of system property {@code -DquietTests}.
      *
-     * <p>Should you need more verbose logging override this method in subclasses and choose a
-     * different configuration, for example "DEFAULT_LOGGING".
+     * <p>Should you need more verbose logging override this method in subclasses and choose a different configuration,
+     * for example "DEFAULT_LOGGING".
      */
     protected String getLogConfiguration() {
         if (isQuietTests()) {
@@ -455,9 +455,9 @@ public class GeoServerSystemTestSupport extends GeoServerBaseTestSupport<SystemT
     }
 
     /**
-     * Subclasses may override this method to force memory cleaning before the test data dir is
-     * cleaned up. This is necessary on windows if coverages are used in the test, since readers
-     * might still be around in the heap as garbage without having been disposed of
+     * Subclasses may override this method to force memory cleaning before the test data dir is cleaned up. This is
+     * necessary on windows if coverages are used in the test, since readers might still be around in the heap as
+     * garbage without having been disposed of
      */
     protected boolean isMemoryCleanRequired() {
         return false;
@@ -493,14 +493,12 @@ public class GeoServerSystemTestSupport extends GeoServerBaseTestSupport<SystemT
 
     /** Accessor for regular (weak encryption) pbe password encoder. */
     protected GeoServerPBEPasswordEncoder getPBEPasswordEncoder() {
-        return getSecurityManager()
-                .loadPasswordEncoder(GeoServerPBEPasswordEncoder.class, null, false);
+        return getSecurityManager().loadPasswordEncoder(GeoServerPBEPasswordEncoder.class, null, false);
     }
 
     /** Accessor for strong encryption pbe password encoder. */
     protected GeoServerPBEPasswordEncoder getStrongPBEPasswordEncoder() {
-        return getSecurityManager()
-                .loadPasswordEncoder(GeoServerPBEPasswordEncoder.class, null, true);
+        return getSecurityManager().loadPasswordEncoder(GeoServerPBEPasswordEncoder.class, null, true);
     }
 
     /** Accessor for global resource loader instance from the test application context. */
@@ -538,8 +536,8 @@ public class GeoServerSystemTestSupport extends GeoServerBaseTestSupport<SystemT
     //
 
     /**
-     * Asserts the content type taking into account that Spring-test insists on adding the charset
-     * encoding to the content type (see https://jira.spring.io/browse/SPR-1717)
+     * Asserts the content type taking into account that Spring-test insists on adding the charset encoding to the
+     * content type (see https://jira.spring.io/browse/SPR-1717)
      */
     protected static void assertContentType(String contentType, MockHttpServletResponse response) {
         String actual = response.getHeader("Content-Type");
@@ -568,8 +566,7 @@ public class GeoServerSystemTestSupport extends GeoServerBaseTestSupport<SystemT
      * @param typename the QName for the type
      */
     protected FeatureTypeInfo getFeatureTypeInfo(QName typename) {
-        return getCatalog()
-                .getFeatureTypeByName(typename.getNamespaceURI(), typename.getLocalPart());
+        return getCatalog().getFeatureTypeByName(typename.getNamespaceURI(), typename.getLocalPart());
     }
 
     /**
@@ -582,8 +579,8 @@ public class GeoServerSystemTestSupport extends GeoServerBaseTestSupport<SystemT
     }
 
     /**
-     * Given a qualified layer name returns a string in the form "prefix:localPart" if prefix is
-     * available, "localPart" if prefix is null
+     * Given a qualified layer name returns a string in the form "prefix:localPart" if prefix is available, "localPart"
+     * if prefix is null
      */
     public String getLayerId(QName layerName) {
         return toString(layerName);
@@ -598,8 +595,8 @@ public class GeoServerSystemTestSupport extends GeoServerBaseTestSupport<SystemT
      *
      * <p>If the workspace does not exist, this method will do nothing rather than fail.
      *
-     * <p>This method is intended to be called after system startup. Typically from {@link
-     * #onSetUp(SystemTestData)} or a {@literal @}Before hook.
+     * <p>This method is intended to be called after system startup. Typically from {@link #onSetUp(SystemTestData)} or
+     * a {@literal @}Before hook.
      *
      * @param name Name of the workspace.
      */
@@ -617,11 +614,11 @@ public class GeoServerSystemTestSupport extends GeoServerBaseTestSupport<SystemT
      *
      * <p>If the namespace does not exist, this method will do nothing rather than fail.
      *
-     * <p>To do a recursive delete of all the resources under the namespace the {@link
-     * #removeWorkspace(String)} method shoul be used.
+     * <p>To do a recursive delete of all the resources under the namespace the {@link #removeWorkspace(String)} method
+     * shoul be used.
      *
-     * <p>This method is intended to be called after system startup. Typically from {@link
-     * #onSetUp(SystemTestData)} or a {@literal @}Before hook.
+     * <p>This method is intended to be called after system startup. Typically from {@link #onSetUp(SystemTestData)} or
+     * a {@literal @}Before hook.
      *
      * @param prefix The prefix of the namespace.
      */
@@ -638,8 +635,8 @@ public class GeoServerSystemTestSupport extends GeoServerBaseTestSupport<SystemT
      *
      * <p>If the store does not exist, this method will do nothing rather than fail.
      *
-     * <p>This method is intended to be called after system startup. Typically from {@link
-     * #onSetUp(SystemTestData)} or a {@literal @}Before hook.
+     * <p>This method is intended to be called after system startup. Typically from {@link #onSetUp(SystemTestData)} or
+     * a {@literal @}Before hook.
      *
      * @param workspaceName Name of the workspace of the store.
      * @param name Name of the store.
@@ -660,8 +657,8 @@ public class GeoServerSystemTestSupport extends GeoServerBaseTestSupport<SystemT
      *
      * <p>If the layer does not exist, this method will do nothing rather than fail.
      *
-     * <p>This method is intended to be called after system startup. Typically from {@link
-     * #onSetUp(SystemTestData)} or a {@literal @}Before hook.
+     * <p>This method is intended to be called after system startup. Typically from {@link #onSetUp(SystemTestData)} or
+     * a {@literal @}Before hook.
      *
      * @param workspaceName Name of the workspace/namespace of the layer.
      * @param name Name of the layer.
@@ -685,19 +682,16 @@ public class GeoServerSystemTestSupport extends GeoServerBaseTestSupport<SystemT
      *
      * <p>If the style does not exist, this method will do nothing rather than fail.
      *
-     * <p>This method is intended to be called after system startup. Typically from {@link
-     * #onSetUp(SystemTestData)} or a {@literal @}Before hook.
+     * <p>This method is intended to be called after system startup. Typically from {@link #onSetUp(SystemTestData)} or
+     * a {@literal @}Before hook.
      *
-     * @param workspaceName The optional workspace of the style, may be <code>null</code>.
+     * @param workspaceName The optional workspace of the style, may be {@code null}.
      * @param name Name of the style.
      */
     protected void removeStyle(String workspaceName, String name) throws IOException {
         Catalog cat = getCatalog();
 
-        StyleInfo s =
-                workspaceName != null
-                        ? cat.getStyleByName(workspaceName, name)
-                        : cat.getStyleByName(name);
+        StyleInfo s = workspaceName != null ? cat.getStyleByName(workspaceName, name) : cat.getStyleByName(name);
         if (s != null) {
             cat.remove(s);
 
@@ -705,11 +699,9 @@ public class GeoServerSystemTestSupport extends GeoServerBaseTestSupport<SystemT
             cat.getResourcePool().deleteStyle(s, true);
         } else {
             // handle case of sld fiel still lying around
-            File sld =
-                    workspaceName != null
-                            ? cat.getResourceLoader()
-                                    .find("workspaces", workspaceName, "styles", name + ".sld")
-                            : cat.getResourceLoader().find("styles", name + ".sld");
+            File sld = workspaceName != null
+                    ? cat.getResourceLoader().find("workspaces", workspaceName, "styles", name + ".sld")
+                    : cat.getResourceLoader().find("styles", name + ".sld");
             if (sld != null) {
                 sld.delete();
             }
@@ -721,19 +713,17 @@ public class GeoServerSystemTestSupport extends GeoServerBaseTestSupport<SystemT
      *
      * <p>If the layer group does not exist, this method will do nothing rather than fail.
      *
-     * <p>This method is intended to be called after system startup. Typically from {@link
-     * #onSetUp(SystemTestData)} or a {@literal @}Before hook.
+     * <p>This method is intended to be called after system startup. Typically from {@link #onSetUp(SystemTestData)} or
+     * a {@literal @}Before hook.
      *
-     * @param workspaceName The optional workspace of the layer group, may be <code>null</code>.
+     * @param workspaceName The optional workspace of the layer group, may be {@code null}.
      * @param name Name of the layer group.
      */
     protected void removeLayerGroup(String workspaceName, String name) {
         Catalog cat = getCatalog();
 
         LayerGroupInfo lg =
-                workspaceName != null
-                        ? cat.getLayerGroupByName(workspaceName, name)
-                        : cat.getLayerGroupByName(name);
+                workspaceName != null ? cat.getLayerGroupByName(workspaceName, name) : cat.getLayerGroupByName(name);
         if (lg != null) {
             cat.remove(lg);
         }
@@ -742,8 +732,8 @@ public class GeoServerSystemTestSupport extends GeoServerBaseTestSupport<SystemT
     /**
      * Reverts a layer back to its original state, both data and configuration.
      *
-     * <p>This method is intended to be called after system startup. Typically from {@link
-     * #onSetUp(SystemTestData)} or a {@literal @}Before hook.
+     * <p>This method is intended to be called after system startup. Typically from {@link #onSetUp(SystemTestData)} or
+     * a {@literal @}Before hook.
      *
      * @param workspace The name of the workspace/namespace containing the layer.
      * @param name The name of the layer.
@@ -755,8 +745,8 @@ public class GeoServerSystemTestSupport extends GeoServerBaseTestSupport<SystemT
     /**
      * Reverts a layer back to its original state, both data and configuration.
      *
-     * <p>This method is intended to be called after system startup. Typically from {@link
-     * #onSetUp(SystemTestData)} or a {@literal @}Before hook.
+     * <p>This method is intended to be called after system startup. Typically from {@link #onSetUp(SystemTestData)} or
+     * a {@literal @}Before hook.
      *
      * @param qName The qualified name of the layer.
      */
@@ -767,8 +757,8 @@ public class GeoServerSystemTestSupport extends GeoServerBaseTestSupport<SystemT
     /**
      * Reverts a service back to its original configuration state.
      *
-     * <p>This method is intended to be called after system startup. Typically from {@link
-     * #onSetUp(SystemTestData)} or a {@literal @}Before hook.
+     * <p>This method is intended to be called after system startup. Typically from {@link #onSetUp(SystemTestData)} or
+     * a {@literal @}Before hook.
      *
      * @param serviceClass The class/interface of the service object.
      * @param workspace The optional workspace containing the service config, may be <code>null
@@ -781,8 +771,8 @@ public class GeoServerSystemTestSupport extends GeoServerBaseTestSupport<SystemT
     /**
      * Reverts settings back to original configuration state.
      *
-     * <p>This method is intended to be called after system startup. Typically from {@link
-     * #onSetUp(SystemTestData)} or a {@literal @}Before hook.
+     * <p>This method is intended to be called after system startup. Typically from {@link #onSetUp(SystemTestData)} or
+     * a {@literal @}Before hook.
      *
      * @param workspace The optional workspace containing the settings config, may be <code>null
      *     </code>.
@@ -795,11 +785,11 @@ public class GeoServerSystemTestSupport extends GeoServerBaseTestSupport<SystemT
     // authentication/security helpers
     //
     /**
-     * Sets the authentication for this test run (will be removed during {@link #tearDown()} ). Use
-     * a null user name to turn off authentication again.
+     * Sets the authentication for this test run (will be removed during {@link #tearDown()} ). Use a null user name to
+     * turn off authentication again.
      *
-     * <p>Remember to override the getFilters() method so that Spring Security filters are enabled
-     * during testing (otherwise no authentication will take place):
+     * <p>Remember to override the getFilters() method so that Spring Security filters are enabled during testing
+     * (otherwise no authentication will take place):
      *
      * <pre>
      * protected List&lt;javax.servlet.Filter&gt; getFilters() {
@@ -828,11 +818,19 @@ public class GeoServerSystemTestSupport extends GeoServerBaseTestSupport<SystemT
         this.password = password;
     }
 
+    /** Login as the {@literal admin} user with roles {@literal ADMIN, ROLE_ADMINISTRATOR} */
+    protected Authentication loginAsAdmin() {
+        return login(
+                "admin",
+                "geoserver",
+                AbstractGeoServerSecurityService.DEFAULT_LOCAL_ADMIN_ROLE,
+                GeoServerRole.ADMIN_ROLE.getAuthority());
+    }
+
     /**
      * Sets up the authentication context for the test.
      *
-     * <p>This context lasts only for a single test case, it is cleared after every test has
-     * completed.
+     * <p>This context lasts only for a single test case, it is cleared after every test has completed.
      *
      * @param username The username.
      * @param password The password.
@@ -845,15 +843,12 @@ public class GeoServerSystemTestSupport extends GeoServerBaseTestSupport<SystemT
             l.add(new SimpleGrantedAuthority(role));
         }
 
-        Authentication authentication =
-                new UsernamePasswordAuthenticationToken(username, password, l);
+        Authentication authentication = new UsernamePasswordAuthenticationToken(username, password, l);
         SecurityContextHolder.getContext().setAuthentication(authentication);
         return authentication;
     }
 
-    protected void addUser(
-            String username, String password, List<String> groups, List<String> roles)
-            throws Exception {
+    protected void addUser(String username, String password, List<String> groups, List<String> roles) throws Exception {
         GeoServerSecurityManager secMgr = getSecurityManager();
         GeoServerUserGroupService ugService = secMgr.loadUserGroupService("default");
 
@@ -891,8 +886,8 @@ public class GeoServerSystemTestSupport extends GeoServerBaseTestSupport<SystemT
         }
     }
 
-    protected void addLayerAccessRule(
-            String workspace, String layer, AccessMode mode, String... roles) throws IOException {
+    protected void addLayerAccessRule(String workspace, String layer, AccessMode mode, String... roles)
+            throws IOException {
         DataAccessRuleDAO dao = DataAccessRuleDAO.get();
         DataAccessRule rule = new DataAccessRule();
         rule.setRoot(workspace);
@@ -943,17 +938,16 @@ public class GeoServerSystemTestSupport extends GeoServerBaseTestSupport<SystemT
         request.setServerName("localhost");
         request.setServerPort(8080);
         request.setContextPath("/geoserver");
-        request.setRequestURI(
-                ResponseUtils.stripQueryString(ResponseUtils.appendPath("/geoserver/", path)));
-        // request.setRequestURL(ResponseUtils.appendPath("http://localhost:8080/geoserver", path )
-        // );
+        request.setRequestURI(ResponseUtils.stripQueryString(ResponseUtils.appendPath("/geoserver/", path)));
         request.setQueryString(ResponseUtils.getQueryString(path));
         request.setRemoteAddr("127.0.0.1");
-        request.setServletPath(
-                ResponseUtils.makePathAbsolute(ResponseUtils.stripRemainingPath(path)));
+        request.setServletPath(ResponseUtils.makePathAbsolute(ResponseUtils.stripRemainingPath(path)));
         request.setPathInfo(
-                ResponseUtils.makePathAbsolute(
-                        ResponseUtils.stripBeginningPath(ResponseUtils.stripQueryString(path))));
+                ResponseUtils.makePathAbsolute(ResponseUtils.stripBeginningPath(ResponseUtils.stripQueryString(path))));
+        if (request.getPathInfo().equals("/")) {
+            request.setPathInfo(request.getServletPath());
+            request.setServletPath("");
+        }
         request.addHeader("Host", "localhost:8080");
 
         // deal with authentication
@@ -962,8 +956,7 @@ public class GeoServerSystemTestSupport extends GeoServerBaseTestSupport<SystemT
             if (password != null) {
                 token += password;
             }
-            request.addHeader(
-                    "Authorization", "Basic " + new String(Base64.encodeBase64(token.getBytes())));
+            request.addHeader("Authorization", "Basic " + new String(Base64.encodeBase64(token.getBytes())));
         }
 
         kvp(request, path);
@@ -1011,8 +1004,7 @@ public class GeoServerSystemTestSupport extends GeoServerBaseTestSupport<SystemT
     /**
      * Executes an ows request using the GET method.
      *
-     * @param path The porition of the request after hte context, example:
-     *     'wms?request=GetMap&version=1.1.1&..."
+     * @param path The porition of the request after hte context, example: 'wms?request=GetMap&version=1.1.1&..."
      * @return An input stream which is the result of the request.
      */
     protected InputStream get(String path) throws Exception {
@@ -1023,8 +1015,7 @@ public class GeoServerSystemTestSupport extends GeoServerBaseTestSupport<SystemT
     /**
      * Executes an ows request using the GET method.
      *
-     * @param path The porition of the request after hte context, example:
-     *     'wms?request=GetMap&version=1.1.1&..."
+     * @param path The porition of the request after hte context, example: 'wms?request=GetMap&version=1.1.1&..."
      * @param charset The character set to use when reading the response.
      * @return An input stream which is the result of the request.
      */
@@ -1036,8 +1027,7 @@ public class GeoServerSystemTestSupport extends GeoServerBaseTestSupport<SystemT
     /**
      * Executes an ows request using the GET method.
      *
-     * @param path The porition of the request after hte context, example:
-     *     'wms?request=GetMap&version=1.1.1&..."
+     * @param path The porition of the request after hte context, example: 'wms?request=GetMap&version=1.1.1&..."
      * @param responseCode Expected HTTP code, will provide exception if not matched
      * @return An input stream which is the result of the request.
      */
@@ -1047,16 +1037,10 @@ public class GeoServerSystemTestSupport extends GeoServerBaseTestSupport<SystemT
         if (responseCode != status) {
             String content = response.getContentAsString();
             if (content == null || content.isEmpty()) {
-                throw new ServiceException(
-                        "expected status <" + responseCode + "> but was <" + status + ">");
+                throw new ServiceException("expected status <" + responseCode + "> but was <" + status + ">");
             } else {
                 throw new ServiceException(
-                        "expected status <"
-                                + responseCode
-                                + "> but was <"
-                                + status
-                                + ">:"
-                                + content);
+                        "expected status <" + responseCode + "> but was <" + status + ">:" + content);
             }
         }
         return new ByteArrayInputStream(response.getContentAsString().getBytes());
@@ -1065,8 +1049,7 @@ public class GeoServerSystemTestSupport extends GeoServerBaseTestSupport<SystemT
     /**
      * Executes an ows request using the GET method.
      *
-     * @param path The porition of the request after hte context, example:
-     *     'wms?request=GetMap&version=1.1.1&..."
+     * @param path The porition of the request after hte context, example: 'wms?request=GetMap&version=1.1.1&..."
      * @return the mock servlet response
      */
     protected MockHttpServletResponse getAsServletResponse(String path) throws Exception {
@@ -1076,13 +1059,11 @@ public class GeoServerSystemTestSupport extends GeoServerBaseTestSupport<SystemT
     /**
      * Executes an ows request using the GET method.
      *
-     * @param path The porition of the request after hte context, example:
-     *     'wms?request=GetMap&version=1.1.1&..."
+     * @param path The porition of the request after hte context, example: 'wms?request=GetMap&version=1.1.1&..."
      * @param charset The character set of the response.
      * @return the mock servlet response
      */
-    protected MockHttpServletResponse getAsServletResponse(String path, String charset)
-            throws Exception {
+    protected MockHttpServletResponse getAsServletResponse(String path, String charset) throws Exception {
         MockHttpServletRequest request = createRequest(path);
         request.setMethod("GET");
         request.setContent(new byte[] {});
@@ -1093,8 +1074,7 @@ public class GeoServerSystemTestSupport extends GeoServerBaseTestSupport<SystemT
     /**
      * Executes an ows request using the POST method with key value pairs form encoded.
      *
-     * @param path The porition of the request after hte context, example:
-     *     'wms?request=GetMap&version=1.1.1&..."
+     * @param path The porition of the request after hte context, example: 'wms?request=GetMap&version=1.1.1&..."
      * @return An input stream which is the result of the request.
      */
     protected InputStream post(String path) throws Exception {
@@ -1153,13 +1133,13 @@ public class GeoServerSystemTestSupport extends GeoServerBaseTestSupport<SystemT
         return putAsServletResponse(path, new byte[] {}, "text/plain");
     }
 
-    protected MockHttpServletResponse putAsServletResponse(
-            String path, String body, String contentType) throws Exception {
+    protected MockHttpServletResponse putAsServletResponse(String path, String body, String contentType)
+            throws Exception {
         return putAsServletResponse(path, body != null ? body.getBytes() : null, contentType);
     }
 
-    protected MockHttpServletResponse putAsServletResponse(
-            String path, byte[] body, String contentType) throws Exception {
+    protected MockHttpServletResponse putAsServletResponse(String path, byte[] body, String contentType)
+            throws Exception {
 
         MockHttpServletRequest request = createRequest(path);
         request.setMethod("PUT");
@@ -1169,13 +1149,13 @@ public class GeoServerSystemTestSupport extends GeoServerBaseTestSupport<SystemT
         return dispatch(request);
     }
 
-    protected MockHttpServletResponse patchAsServletResponse(
-            String path, String body, String contentType) throws Exception {
+    protected MockHttpServletResponse patchAsServletResponse(String path, String body, String contentType)
+            throws Exception {
         return patchAsServletResponse(path, body != null ? body.getBytes() : null, contentType);
     }
 
-    protected MockHttpServletResponse patchAsServletResponse(
-            String path, byte[] body, String contentType) throws Exception {
+    protected MockHttpServletResponse patchAsServletResponse(String path, byte[] body, String contentType)
+            throws Exception {
 
         MockHttpServletRequest request = createRequest(path);
         request.setMethod("PATCH");
@@ -1190,8 +1170,7 @@ public class GeoServerSystemTestSupport extends GeoServerBaseTestSupport<SystemT
      *
      * <p>
      *
-     * @param path The porition of the request after the context ( no query string ), example:
-     *     'wms'.
+     * @param path The porition of the request after the context ( no query string ), example: 'wms'.
      * @param xml The body content, often xml for OGC services
      * @return An input stream which is the result of the request.
      */
@@ -1203,30 +1182,26 @@ public class GeoServerSystemTestSupport extends GeoServerBaseTestSupport<SystemT
     /**
      * Executes an ows request using the POST method, with xml as body content.
      *
-     * @param path The porition of the request after the context ( no query string ), example:
-     *     'wms'.
+     * @param path The porition of the request after the context ( no query string ), example: 'wms'.
      * @param xml The body content, often xml for OGC services
      * @return the servlet response
      */
-    protected MockHttpServletResponse postAsServletResponse(String path, String xml)
-            throws Exception {
+    protected MockHttpServletResponse postAsServletResponse(String path, String xml) throws Exception {
 
         return postAsServletResponse(path, xml, "application/xml");
     }
 
     /**
-     * Extracts the true binary stream out of the response. The usual way (going thru {@link
-     * MockHttpServletResponse#getOutputStreamContent()}) mangles bytes if the content is not made
-     * of chars.
+     * Extracts the true binary stream out of the response. The usual way (going thru
+     * {@link MockHttpServletResponse#getOutputStreamContent()}) mangles bytes if the content is not made of chars.
      */
     protected ByteArrayInputStream getBinaryInputStream(MockHttpServletResponse response) {
         return new ByteArrayInputStream(getBinary(response));
     }
 
     /**
-     * Extracts the true binary stream out of the response. The usual way (going thru {@link
-     * MockHttpServletResponse#getOutputStreamContent()}) mangles bytes if the content is not made
-     * of chars.
+     * Extracts the true binary stream out of the response. The usual way (going thru
+     * {@link MockHttpServletResponse#getOutputStreamContent()}) mangles bytes if the content is not made of chars.
      */
     protected byte[] getBinary(MockHttpServletResponse response) {
         return response.getContentAsByteArray();
@@ -1235,8 +1210,7 @@ public class GeoServerSystemTestSupport extends GeoServerBaseTestSupport<SystemT
     /**
      * Executes an ows request using the POST method.
      *
-     * @param path The porition of the request after the context ( no query string ), example:
-     *     'wms'.
+     * @param path The porition of the request after the context ( no query string ), example: 'wms'.
      * @param body the body of the request
      * @param contentType the mimetype to set for the request
      * @return An input stream which is the result of the request.
@@ -1249,13 +1223,12 @@ public class GeoServerSystemTestSupport extends GeoServerBaseTestSupport<SystemT
     /**
      * Executes an ows request using the POST method, with xml as body content.
      *
-     * @param path The porition of the request after the context ( no query string ), example:
-     *     'wms'.
+     * @param path The porition of the request after the context ( no query string ), example: 'wms'.
      * @param xml The body content, often xml for OGC services
      * @return the servlet response
      */
-    protected MockHttpServletResponse postAsServletResponse(
-            String path, String body, String contentType) throws Exception {
+    protected MockHttpServletResponse postAsServletResponse(String path, String body, String contentType)
+            throws Exception {
         MockHttpServletRequest request = createRequest(path);
         request.setMethod("POST");
         request.setContentType(contentType);
@@ -1273,8 +1246,8 @@ public class GeoServerSystemTestSupport extends GeoServerBaseTestSupport<SystemT
         return dispatch(request, charset);
     }
 
-    protected MockHttpServletResponse postAsServletResponse(
-            String path, byte[] body, String contentType) throws Exception {
+    protected MockHttpServletResponse postAsServletResponse(String path, byte[] body, String contentType)
+            throws Exception {
 
         MockHttpServletRequest request = createRequest(path);
         request.setMethod("POST");
@@ -1300,8 +1273,7 @@ public class GeoServerSystemTestSupport extends GeoServerBaseTestSupport<SystemT
     /**
      * Executes an ows request using the GET method and returns the result as an xml document.
      *
-     * @param path The portion of the request after the context, example:
-     *     'wms?request=GetMap&version=1.1.1&..."
+     * @param path The portion of the request after the context, example: 'wms?request=GetMap&version=1.1.1&..."
      * @return A result of the request parsed into a dom.
      */
     protected Document getAsDOM(final String path) throws Exception {
@@ -1311,8 +1283,7 @@ public class GeoServerSystemTestSupport extends GeoServerBaseTestSupport<SystemT
     /**
      * Executes an ows request using the GET method and returns the result as an xml document.
      *
-     * @param path The portion of the request after the context, example:
-     *     'wms?request=GetMap&version=1.1.1&..."
+     * @param path The portion of the request after the context, example: 'wms?request=GetMap&version=1.1.1&..."
      * @param statusCode Expected status code
      * @return A result of the request parsed into a dom.
      */
@@ -1323,11 +1294,10 @@ public class GeoServerSystemTestSupport extends GeoServerBaseTestSupport<SystemT
     }
 
     /**
-     * Executes an ows request using the GET method and returns the result as an xml document, with
-     * the ability to override the XML document encoding.
+     * Executes an ows request using the GET method and returns the result as an xml document, with the ability to
+     * override the XML document encoding.
      *
-     * @param path The portion of the request after the context, example:
-     *     'wms?request=GetMap&version=1.1.1&..."
+     * @param path The portion of the request after the context, example: 'wms?request=GetMap&version=1.1.1&..."
      * @param encoding Override for the encoding of the document.
      * @return A result of the request parsed into a dom.
      */
@@ -1338,8 +1308,7 @@ public class GeoServerSystemTestSupport extends GeoServerBaseTestSupport<SystemT
     /**
      * Executes an ows request using the GET method and returns the result as an JSON document.
      *
-     * @param path The portion of the request after the context, example:
-     *     'wms?request=GetMap&version=1.1.1&..."
+     * @param path The portion of the request after the context, example: 'wms?request=GetMap&version=1.1.1&..."
      * @param statusCode Expected status code
      * @return A result of the request parsed into a dom.
      */
@@ -1349,28 +1318,23 @@ public class GeoServerSystemTestSupport extends GeoServerBaseTestSupport<SystemT
         if (statusCode != status) {
             String content = response.getContentAsString();
             if (content == null || content.isEmpty()) {
-                throw new ServiceException(
-                        "expected status <" + statusCode + "> but was <" + status + ">");
+                throw new ServiceException("expected status <" + statusCode + "> but was <" + status + ">");
             } else {
-                throw new ServiceException(
-                        "expected status <" + statusCode + "> but was <" + status + ">:" + content);
+                throw new ServiceException("expected status <" + statusCode + "> but was <" + status + ">:" + content);
             }
         }
         return json(response);
     }
 
-    private MockHttpServletResponse getAsServletResponse(String path, int statusCode)
-            throws Exception {
+    private MockHttpServletResponse getAsServletResponse(String path, int statusCode) throws Exception {
         MockHttpServletResponse response = getAsServletResponse(path);
         int status = response.getStatus();
         if (statusCode != status) {
             String content = response.getContentAsString();
             if (content == null || content.isEmpty()) {
-                throw new ServiceException(
-                        "expected status <" + statusCode + "> but was <" + status + ">");
+                throw new ServiceException("expected status <" + statusCode + "> but was <" + status + ">");
             } else {
-                throw new ServiceException(
-                        "expected status <" + statusCode + "> but was <" + status + ">:" + content);
+                throw new ServiceException("expected status <" + statusCode + "> but was <" + status + ">:" + content);
             }
         }
         return response;
@@ -1429,8 +1393,8 @@ public class GeoServerSystemTestSupport extends GeoServerBaseTestSupport<SystemT
     }
 
     /**
-     * Retrieves the request result as a list of BufferedImages from an animated format (works with
-     * GIF, other formats are not tested so far).
+     * Retrieves the request result as a list of BufferedImages from an animated format (works with GIF, other formats
+     * are not tested so far).
      */
     protected List<BufferedImage> getAsAnimation(String path, String mime) throws Exception {
         MockHttpServletResponse resp = getAsServletResponse(path);
@@ -1452,10 +1416,8 @@ public class GeoServerSystemTestSupport extends GeoServerBaseTestSupport<SystemT
     /**
      * Executes an ows request using the GET method and returns the result as an xml document.
      *
-     * @param path The portion of the request after the context, example:
-     *     'wms?request=GetMap&version=1.1.1&..."
-     * @param skipDTD if true, will avoid loading and validating against the response document
-     *     schema or DTD
+     * @param path The portion of the request after the context, example: 'wms?request=GetMap&version=1.1.1&..."
+     * @param skipDTD if true, will avoid loading and validating against the response document schema or DTD
      * @return A result of the request parsed into a dom.
      */
     protected Document getAsDOM(final String path, final boolean skipDTD) throws Exception {
@@ -1467,24 +1429,19 @@ public class GeoServerSystemTestSupport extends GeoServerBaseTestSupport<SystemT
     /**
      * Executes an ows request using the GET method and returns the result as an xml document.
      *
-     * @param path The portion of the request after the context, example:
-     *     'wms?request=GetMap&version=1.1.1&..."
-     * @param skipDTD if true, will avoid loading and validating against the response document
-     *     schema or DTD
+     * @param path The portion of the request after the context, example: 'wms?request=GetMap&version=1.1.1&..."
+     * @param skipDTD if true, will avoid loading and validating against the response document schema or DTD
      * @param encoding Overide for the encoding of the document.
      * @return A result of the request parsed into a dom.
      */
-    protected Document getAsDOM(final String path, final boolean skipDTD, String encoding)
-            throws Exception {
+    protected Document getAsDOM(final String path, final boolean skipDTD, String encoding) throws Exception {
         return dom(get(path, encoding), skipDTD, encoding);
     }
 
     /**
-     * Executes an ows request using the POST method with key value pairs form encoded, returning
-     * the result as a dom.
+     * Executes an ows request using the POST method with key value pairs form encoded, returning the result as a dom.
      *
-     * @param path The porition of the request after hte context, example:
-     *     'wms?request=GetMap&version=1.1.1&..."
+     * @param path The porition of the request after hte context, example: 'wms?request=GetMap&version=1.1.1&..."
      * @return An input stream which is the result of the request.
      */
     protected Document postAsDOM(String path) throws Exception {
@@ -1492,11 +1449,9 @@ public class GeoServerSystemTestSupport extends GeoServerBaseTestSupport<SystemT
     }
 
     /**
-     * Executes an ows request using the POST method with key value pairs form encoded, returning
-     * the result as a dom.
+     * Executes an ows request using the POST method with key value pairs form encoded, returning the result as a dom.
      *
-     * @param path The porition of the request after hte context, example:
-     *     'wms?request=GetMap&version=1.1.1&..."
+     * @param path The porition of the request after hte context, example: 'wms?request=GetMap&version=1.1.1&..."
      * @return An input stream which is the result of the request.
      */
     protected Document postAsDOM(String path, List<Exception> validationErrors) throws Exception {
@@ -1508,8 +1463,7 @@ public class GeoServerSystemTestSupport extends GeoServerBaseTestSupport<SystemT
      *
      * <p>
      *
-     * @param path The porition of the request after the context ( no query string ), example:
-     *     'wms'.
+     * @param path The porition of the request after the context ( no query string ), example: 'wms'.
      * @return An input stream which is the result of the request.
      */
     protected Document postAsDOM(String path, String xml) throws Exception {
@@ -1521,8 +1475,7 @@ public class GeoServerSystemTestSupport extends GeoServerBaseTestSupport<SystemT
      *
      * <p>
      *
-     * @param path The porition of the request after the context ( no query string ), example:
-     *     'wms'.
+     * @param path The porition of the request after the context ( no query string ), example: 'wms'.
      * @return An input stream which is the result of the request.
      */
     protected Document postAsDOM(String path, String xml, int expectedStatusCode) throws Exception {
@@ -1536,12 +1489,10 @@ public class GeoServerSystemTestSupport extends GeoServerBaseTestSupport<SystemT
      *
      * <p>
      *
-     * @param path The porition of the request after the context ( no query string ), example:
-     *     'wms'.
+     * @param path The porition of the request after the context ( no query string ), example: 'wms'.
      * @return An input stream which is the result of the request.
      */
-    protected Document postAsDOM(String path, String xml, List<Exception> validationErrors)
-            throws Exception {
+    protected Document postAsDOM(String path, String xml, List<Exception> validationErrors) throws Exception {
         return dom(post(path, xml));
     }
 
@@ -1554,8 +1505,7 @@ public class GeoServerSystemTestSupport extends GeoServerBaseTestSupport<SystemT
     }
 
     /**
-     * Helper method that extracts the content of HTTP response assuming that the content is XML and
-     * parse it.
+     * Helper method that extracts the content of HTTP response assuming that the content is XML and parse it.
      *
      * @param response HTTP response expected to contain XML content
      * @param skipSchemaValidation if TRUE XML schema validate wil be performed
@@ -1568,14 +1518,12 @@ public class GeoServerSystemTestSupport extends GeoServerBaseTestSupport<SystemT
             return dom(input, skipSchemaValidation);
         } catch (Exception exception) {
             // something bad happen, since this is test code we just throw an exception
-            throw new RuntimeException(
-                    "Something bad happen when parsing response XML content.", exception);
+            throw new RuntimeException("Something bad happen when parsing response XML content.", exception);
         }
     }
 
     /** Parses a stream into a dom. */
-    protected Document dom(InputStream is)
-            throws ParserConfigurationException, SAXException, IOException {
+    protected Document dom(InputStream is) throws ParserConfigurationException, SAXException, IOException {
         return dom(is, true);
     }
 
@@ -1622,8 +1570,7 @@ public class GeoServerSystemTestSupport extends GeoServerBaseTestSupport<SystemT
         return dispatch(request, (String) null);
     }
 
-    protected MockHttpServletResponse dispatch(HttpServletRequest request, String charset)
-            throws Exception {
+    protected MockHttpServletResponse dispatch(HttpServletRequest request, String charset) throws Exception {
 
         MockHttpServletResponse response = new MockHttpServletResponse();
 
@@ -1654,8 +1601,8 @@ public class GeoServerSystemTestSupport extends GeoServerBaseTestSupport<SystemT
     }
 
     /**
-     * Returns the last MockHttpServletRequest response. Warning, not thread safe. Last response is
-     * cleared at before each test method run.
+     * Returns the last MockHttpServletRequest response. Warning, not thread safe. Last response is cleared at before
+     * each test method run.
      */
     protected MockHttpServletResponse getLastResponse() {
         return lastResponse;
@@ -1673,52 +1620,47 @@ public class GeoServerSystemTestSupport extends GeoServerBaseTestSupport<SystemT
 
         DispatcherServlet dispatcher = new DispatcherServlet(applicationContext);
 
-        dispatcher.setContextConfigLocation(
-                GeoServerAbstractTestSupport.class
-                        .getResource("dispatcher-servlet.xml")
-                        .toString());
+        dispatcher.setContextConfigLocation(GeoServerAbstractTestSupport.class
+                .getResource("dispatcher-servlet.xml")
+                .toString());
         dispatcher.init(config);
 
         return dispatcher;
     }
 
-    private void dispatch(HttpServletRequest request, HttpServletResponse response)
-            throws Exception {
+    private void dispatch(HttpServletRequest request, HttpServletResponse response) throws Exception {
         final DispatcherServlet dispatcher = getDispatcher();
 
         // build a filter chain so that we can test with filters as well
-        HttpServlet servlet =
-                new HttpServlet() {
-                    @Override
-                    protected void service(HttpServletRequest request, HttpServletResponse response)
-                            throws ServletException, IOException {
-                        try {
-                            // excute the pre handler step
-                            Collection interceptors =
-                                    GeoServerExtensions.extensions(
-                                            HandlerInterceptor.class, applicationContext);
-                            for (Object value : interceptors) {
-                                HandlerInterceptor interceptor = (HandlerInterceptor) value;
-                                interceptor.preHandle(request, response, dispatcher);
-                            }
-
-                            // execute
-                            // dispatcher.handleRequest( request, response );
-                            dispatcher.service(request, response);
-
-                            // execute the post handler step
-                            for (Object o : interceptors) {
-                                HandlerInterceptor interceptor = (HandlerInterceptor) o;
-                                interceptor.postHandle(request, response, dispatcher, null);
-                            }
-                        } catch (RuntimeException | ServletException | IOException e) {
-                            throw e;
-                        } catch (Exception e) {
-                            throw (IOException)
-                                    new IOException("Failed to handle the request").initCause(e);
-                        }
+        HttpServlet servlet = new HttpServlet() {
+            @Override
+            protected void service(HttpServletRequest request, HttpServletResponse response)
+                    throws ServletException, IOException {
+                try {
+                    // excute the pre handler step
+                    Collection interceptors =
+                            GeoServerExtensions.extensions(HandlerInterceptor.class, applicationContext);
+                    for (Object value : interceptors) {
+                        HandlerInterceptor interceptor = (HandlerInterceptor) value;
+                        interceptor.preHandle(request, response, dispatcher);
                     }
-                };
+
+                    // execute
+                    // dispatcher.handleRequest( request, response );
+                    dispatcher.service(request, response);
+
+                    // execute the post handler step
+                    for (Object o : interceptors) {
+                        HandlerInterceptor interceptor = (HandlerInterceptor) o;
+                        interceptor.postHandle(request, response, dispatcher, null);
+                    }
+                } catch (RuntimeException | ServletException | IOException e) {
+                    throw e;
+                } catch (Exception e) {
+                    throw (IOException) new IOException("Failed to handle the request").initCause(e);
+                }
+            }
+        };
         List<Filter> filterList = getFilters();
         MockFilterChain chain;
         if (filterList != null) {
@@ -1737,8 +1679,8 @@ public class GeoServerSystemTestSupport extends GeoServerBaseTestSupport<SystemT
         Map<String, Object> params = KvpUtils.parseQueryString(path);
         for (String key : params.keySet()) {
             Object value = params.get(key);
-            if (value instanceof String) {
-                request.addParameter(key, (String) value);
+            if (value instanceof String string) {
+                request.addParameter(key, string);
             } else {
                 String[] values = (String[]) value;
                 request.addParameter(key, values);
@@ -1750,9 +1692,8 @@ public class GeoServerSystemTestSupport extends GeoServerBaseTestSupport<SystemT
      * Assert that a GET request to a path will have a particular status code for the response.
      *
      * @param code the number of the HTTP status code that is expected
-     * @param path the path to which a GET request should be made, without the protocol, server and
-     *     servlet context. For example, to make a request to "http://localhost:8080/geoserver/ows"
-     *     the path would be "ows"
+     * @param path the path to which a GET request should be made, without the protocol, server and servlet context. For
+     *     example, to make a request to "http://localhost:8080/geoserver/ows" the path would be "ows"
      * @throws Exception on test failure
      */
     protected void assertStatusCodeForGet(int code, String path) throws Exception {
@@ -1763,15 +1704,13 @@ public class GeoServerSystemTestSupport extends GeoServerBaseTestSupport<SystemT
      * Assert that a POST request to a path will have a particular status code for the response.
      *
      * @param code the number of the HTTP status code that is expected
-     * @param path the path to which a POST request should be made, without the protocol, server and
-     *     servlet context. For example, to make a request to "http://localhost:8080/geoserver/ows"
-     *     the path would be "ows"
+     * @param path the path to which a POST request should be made, without the protocol, server and servlet context.
+     *     For example, to make a request to "http://localhost:8080/geoserver/ows" the path would be "ows"
      * @param body the body to send with the request. May be empty, but must not be null.
      * @param type the mimetype to report for the body
      * @throws Exception on test failure
      */
-    protected void assertStatusCodeForPost(int code, String path, String body, String type)
-            throws Exception {
+    protected void assertStatusCodeForPost(int code, String path, String body, String type) throws Exception {
         assertStatusCodeForRequest(code, "POST", path, body, type);
     }
 
@@ -1779,15 +1718,13 @@ public class GeoServerSystemTestSupport extends GeoServerBaseTestSupport<SystemT
      * Assert that a PUT request to a path will have a particular status code for the response.
      *
      * @param code the number of the HTTP status code that is expected
-     * @param path the path to which a PUT request should be made, without the protocol, server and
-     *     servlet context. For example, to make a request to "http://localhost:8080/geoserver/ows"
-     *     the path would be "ows"
+     * @param path the path to which a PUT request should be made, without the protocol, server and servlet context. For
+     *     example, to make a request to "http://localhost:8080/geoserver/ows" the path would be "ows"
      * @param body the body to send with the request. May be empty, but must not be null.
      * @param type the mimetype to report for the body
      * @throws Exception on test failure
      */
-    protected void assertStatusCodeForPut(int code, String path, String body, String type)
-            throws Exception {
+    protected void assertStatusCodeForPut(int code, String path, String body, String type) throws Exception {
         assertStatusCodeForRequest(code, "PUT", path, body, type);
     }
 
@@ -1796,21 +1733,19 @@ public class GeoServerSystemTestSupport extends GeoServerBaseTestSupport<SystemT
      *
      * @param code the number of the HTTP status code that is expected
      * @param method the HTTP method for the request (eg, GET, PUT)
-     * @param path the path for the request, excluding the protocol, server, port, and servlet
-     *     context. For example, to make a request to "http://localhost:8080/geoserver/ows" the path
-     *     would be "ows"
+     * @param path the path for the request, excluding the protocol, server, port, and servlet context. For example, to
+     *     make a request to "http://localhost:8080/geoserver/ows" the path would be "ows"
      * @param body the body for the request. May be empty, but must not be null.
      * @param type the mimetype for the request.
      */
-    protected void assertStatusCodeForRequest(
-            int code, String method, String path, String body, String type) throws Exception {
+    protected void assertStatusCodeForRequest(int code, String method, String path, String body, String type)
+            throws Exception {
         MockHttpServletRequest request = createRequest(path);
         request.setMethod(method);
         request.setContent(body.getBytes(UTF_8));
         request.setContentType(type);
 
-        CodeExpectingHttpServletResponse response =
-                new CodeExpectingHttpServletResponse(new MockHttpServletResponse());
+        CodeExpectingHttpServletResponse response = new CodeExpectingHttpServletResponse(new MockHttpServletResponse());
         dispatch(request, response);
         assertEquals(code, response.getErrorCode());
     }
@@ -1823,12 +1758,7 @@ public class GeoServerSystemTestSupport extends GeoServerBaseTestSupport<SystemT
 
         Color actual;
         if (cm.hasAlpha()) {
-            actual =
-                    new Color(
-                            cm.getRed(pixel),
-                            cm.getGreen(pixel),
-                            cm.getBlue(pixel),
-                            cm.getAlpha(pixel));
+            actual = new Color(cm.getRed(pixel), cm.getGreen(pixel), cm.getBlue(pixel), cm.getAlpha(pixel));
         } else {
             actual = new Color(cm.getRed(pixel), cm.getGreen(pixel), cm.getBlue(pixel), 255);
         }
@@ -1898,8 +1828,7 @@ public class GeoServerSystemTestSupport extends GeoServerBaseTestSupport<SystemT
             Double resolution,
             String units,
             String unitSymbol) {
-        setupRasterDimension(
-                layer, dimensionName, presentation, resolution, units, unitSymbol, false, null);
+        setupRasterDimension(layer, dimensionName, presentation, resolution, units, unitSymbol, false, null);
     }
 
     /**
@@ -1975,8 +1904,7 @@ public class GeoServerSystemTestSupport extends GeoServerBaseTestSupport<SystemT
             boolean nearestMatch,
             String acceptableInterval,
             boolean rawNearestMatch) {
-        setupNearestMatch(
-                layer, dimensionName, nearestMatch, acceptableInterval, IGNORE, rawNearestMatch);
+        setupNearestMatch(layer, dimensionName, nearestMatch, acceptableInterval, IGNORE, rawNearestMatch);
     }
 
     /**
@@ -2011,8 +1939,7 @@ public class GeoServerSystemTestSupport extends GeoServerBaseTestSupport<SystemT
      * @param startValue The startValue
      * @param endValue The endValue
      */
-    protected void setupVectorStartAndEndValues(
-            QName layer, String dimensionName, String startValue, String endValue) {
+    protected void setupVectorStartAndEndValues(QName layer, String dimensionName, String startValue, String endValue) {
         ResourceInfo info = getCatalog().getResourceByName(getLayerId(layer), ResourceInfo.class);
         DimensionInfo di = info.getMetadata().get(dimensionName, DimensionInfo.class);
         di.setStartValue(startValue);
@@ -2028,8 +1955,7 @@ public class GeoServerSystemTestSupport extends GeoServerBaseTestSupport<SystemT
      * @param startValue The startValue
      * @param endValue The endValue
      */
-    protected void setupRasterStartAndEndValues(
-            QName layer, String dimensionName, String startValue, String endValue) {
+    protected void setupRasterStartAndEndValues(QName layer, String dimensionName, String startValue, String endValue) {
         CoverageInfo info = getCatalog().getCoverageByName(layer.getLocalPart());
         DimensionInfo di = info.getMetadata().get(dimensionName, DimensionInfo.class);
         di.setStartValue(startValue);
@@ -2038,8 +1964,8 @@ public class GeoServerSystemTestSupport extends GeoServerBaseTestSupport<SystemT
     }
 
     /**
-     * Asserts that the image is not blank, in the sense that there must be pixels different from
-     * the passed background color.
+     * Asserts that the image is not blank, in the sense that there must be pixels different from the passed background
+     * color.
      *
      * @param testName the name of the test to throw meaningfull messages if something goes wrong
      * @param image the imgage to check it is not "blank"
@@ -2051,8 +1977,7 @@ public class GeoServerSystemTestSupport extends GeoServerBaseTestSupport<SystemT
     }
 
     /**
-     * Asserts that the image is blank, in the sense that all pixels will be equal to the background
-     * color
+     * Asserts that the image is blank, in the sense that all pixels will be equal to the background color
      *
      * @param testName the name of the test to throw meaningful messages if something goes wrong
      * @param image the image to check it is not "blank"
@@ -2082,18 +2007,17 @@ public class GeoServerSystemTestSupport extends GeoServerBaseTestSupport<SystemT
             }
         }
 
-        LOGGER.fine(
-                testName
-                        + ": pixel count="
-                        + (image.getWidth() * image.getHeight())
-                        + " non bg pixels: "
-                        + pixelsDiffer);
+        LOGGER.fine(testName
+                + ": pixel count="
+                + (image.getWidth() * image.getHeight())
+                + " non bg pixels: "
+                + pixelsDiffer);
         return pixelsDiffer;
     }
 
     /**
-     * Executes an ows request using the GET method and returns the result as a JSoup document, that
-     * can be then queried using CSS selectors
+     * Executes an ows request using the GET method and returns the result as a JSoup document, that can be then queried
+     * using CSS selectors
      */
     protected org.jsoup.nodes.Document getAsJSoup(String url) throws Exception {
         MockHttpServletResponse response = getAsServletResponse(url);
@@ -2110,8 +2034,7 @@ public class GeoServerSystemTestSupport extends GeoServerBaseTestSupport<SystemT
     // xml validation helpers
     //
     /**
-     * Resolves everything to an empty xml document, useful for skipping errors due to missing dtds
-     * and the like
+     * Resolves everything to an empty xml document, useful for skipping errors due to missing dtds and the like
      *
      * @author Andrea Aime - TOPP
      */
@@ -2128,39 +2051,33 @@ public class GeoServerSystemTestSupport extends GeoServerBaseTestSupport<SystemT
         }
     }
 
-    protected void checkValidationErorrs(Document dom, String schemaLocation)
-            throws SAXException, IOException {
+    protected void checkValidationErorrs(Document dom, String schemaLocation) throws SAXException, IOException {
         final SchemaFactory factory = SchemaFactory.newInstance(XMLConstants.W3C_XML_SCHEMA_NS_URI);
         Schema schema = factory.newSchema(new File(schemaLocation));
         checkValidationErrors(dom, schema);
     }
 
-    /**
-     * Given a dom and a schema, checks that the dom validates against the schema of the validation
-     * errors instead
-     */
-    protected void checkValidationErrors(Document dom, Schema schema)
-            throws SAXException, IOException {
+    /** Given a dom and a schema, checks that the dom validates against the schema of the validation errors instead */
+    protected void checkValidationErrors(Document dom, Schema schema) throws SAXException, IOException {
         final Validator validator = schema.newValidator();
         final List<Exception> validationErrors = new ArrayList<>();
-        validator.setErrorHandler(
-                new ErrorHandler() {
+        validator.setErrorHandler(new ErrorHandler() {
 
-                    @Override
-                    public void warning(SAXParseException exception) throws SAXException {
-                        LOGGER.warning(exception.getMessage());
-                    }
+            @Override
+            public void warning(SAXParseException exception) throws SAXException {
+                LOGGER.warning(exception.getMessage());
+            }
 
-                    @Override
-                    public void fatalError(SAXParseException exception) throws SAXException {
-                        validationErrors.add(exception);
-                    }
+            @Override
+            public void fatalError(SAXParseException exception) throws SAXException {
+                validationErrors.add(exception);
+            }
 
-                    @Override
-                    public void error(SAXParseException exception) throws SAXException {
-                        validationErrors.add(exception);
-                    }
-                });
+            @Override
+            public void error(SAXParseException exception) throws SAXException {
+                validationErrors.add(exception);
+            }
+        });
         validator.validate(new DOMSource(dom));
         if (validationErrors != null && !validationErrors.isEmpty()) {
             StringBuilder sb = new StringBuilder();
@@ -2177,19 +2094,18 @@ public class GeoServerSystemTestSupport extends GeoServerBaseTestSupport<SystemT
     }
 
     /**
-     * Performs basic checks on an OWS 1.0 exception, to ensure it's well formed and ensuring that a
-     * particular exceptionCode is used.
+     * Performs basic checks on an OWS 1.0 exception, to ensure it's well formed and ensuring that a particular
+     * exceptionCode is used.
      */
     protected void checkOws10Exception(Document dom, String exceptionCode) throws Exception {
         checkOws10Exception(dom, exceptionCode, null);
     }
 
     /**
-     * Performs basic checks a pre OWS 1.0 exception, to ensure it's well formed and ensuring that a
-     * particular exceptionCode is used.
+     * Performs basic checks a pre OWS 1.0 exception, to ensure it's well formed and ensuring that a particular
+     * exceptionCode is used.
      */
-    protected String checkLegacyException(Document dom, String exceptionCode, String locator)
-            throws Exception {
+    protected String checkLegacyException(Document dom, String exceptionCode, String locator) throws Exception {
         Element root = dom.getDocumentElement();
         assertEquals("ServiceExceptionReport", root.getNodeName());
         assertEquals(1, dom.getElementsByTagName("ServiceException").getLength());
@@ -2205,11 +2121,10 @@ public class GeoServerSystemTestSupport extends GeoServerBaseTestSupport<SystemT
     }
 
     /**
-     * Performs basic checks on an OWS 1.0 exception, to ensure it's well formed and ensuring that a
-     * particular exceptionCode is used.
+     * Performs basic checks on an OWS 1.0 exception, to ensure it's well formed and ensuring that a particular
+     * exceptionCode is used.
      */
-    protected void checkOws10Exception(Document dom, String exceptionCode, String locator)
-            throws Exception {
+    protected void checkOws10Exception(Document dom, String exceptionCode, String locator) throws Exception {
         Element root = dom.getDocumentElement();
         assertEquals("ows:ExceptionReport", root.getNodeName());
         assertEquals("1.0.0", root.getAttribute("version"));
@@ -2235,8 +2150,8 @@ public class GeoServerSystemTestSupport extends GeoServerBaseTestSupport<SystemT
     }
 
     /**
-     * Performs basic checks on an OWS 1.1 exception, to ensure it's well formed and ensuring that a
-     * particular exceptionCode is used.
+     * Performs basic checks on an OWS 1.1 exception, to ensure it's well formed and ensuring that a particular
+     * exceptionCode is used.
      *
      * @return The exception text contents, if found
      */
@@ -2245,24 +2160,23 @@ public class GeoServerSystemTestSupport extends GeoServerBaseTestSupport<SystemT
     }
 
     /**
-     * Performs basic checks on an OWS 1.1 exception, to ensure it's well formed and ensuring that a
-     * particular exceptionCode is used.
+     * Performs basic checks on an OWS 1.1 exception, to ensure it's well formed and ensuring that a particular
+     * exceptionCode is used.
      *
      * @return The exception text contents, if found
      */
-    protected String checkOws11Exception(Document dom, String exceptionCode, String locator)
-            throws Exception {
+    protected String checkOws11Exception(Document dom, String exceptionCode, String locator) throws Exception {
         return checkOws11Exception(dom, "1.1.0", exceptionCode, locator);
     }
 
     /**
-     * Performs basic checks on an OWS 1.1 exception, to ensure it's well formed and ensuring that a
-     * particular exceptionCode is used.
+     * Performs basic checks on an OWS 1.1 exception, to ensure it's well formed and ensuring that a particular
+     * exceptionCode is used.
      *
      * @return The exception text contents, if found
      */
-    protected String checkOws11Exception(
-            Document dom, String version, String exceptionCode, String locator) throws Exception {
+    protected String checkOws11Exception(Document dom, String version, String exceptionCode, String locator)
+            throws Exception {
         Element root = dom.getDocumentElement();
         assertEquals("ows:ExceptionReport", root.getNodeName());
         assertEquals(version, root.getAttribute("version"));
@@ -2288,14 +2202,13 @@ public class GeoServerSystemTestSupport extends GeoServerBaseTestSupport<SystemT
     }
 
     /**
-     * Performs basic checks on an OWS 2.0 exception. The check for status, exception code and
-     * locator is optional, leave null if you don't want to check it.
+     * Performs basic checks on an OWS 2.0 exception. The check for status, exception code and locator is optional,
+     * leave null if you don't want to check it.
      *
-     * @returns Returns the message of the inner exception.
+     * @return Returns the message of the inner exception.
      */
     protected String checkOws20Exception(
-            MockHttpServletResponse response, Integer status, String exceptionCode, String locator)
-            throws Exception {
+            MockHttpServletResponse response, Integer status, String exceptionCode, String locator) throws Exception {
         // check the http level
         assertEquals("application/xml", response.getContentType());
         if (status != null) {
@@ -2303,7 +2216,8 @@ public class GeoServerSystemTestSupport extends GeoServerBaseTestSupport<SystemT
         }
 
         // check the returned xml
-        Document dom = dom(new ByteArrayInputStream(response.getContentAsString().getBytes()));
+        Document dom =
+                dom(new ByteArrayInputStream(response.getContentAsString().getBytes()));
         Element root = dom.getDocumentElement();
         assertEquals("ows:ExceptionReport", root.getNodeName());
         assertEquals("2.0.0", root.getAttribute("version"));
@@ -2329,12 +2243,10 @@ public class GeoServerSystemTestSupport extends GeoServerBaseTestSupport<SystemT
     /**
      * Reloads the catalog and configuration from disk.
      *
-     * <p>This method can be used by subclasses from a test method after they have changed the
-     * configuration on disk.
+     * <p>This method can be used by subclasses from a test method after they have changed the configuration on disk.
      */
     protected void reloadCatalogAndConfiguration() throws Exception {
-        GeoServerLoaderProxy loader =
-                GeoServerExtensions.bean(GeoServerLoaderProxy.class, applicationContext);
+        GeoServerLoaderProxy loader = GeoServerExtensions.bean(GeoServerLoaderProxy.class, applicationContext);
         loader.reload();
     }
 
@@ -2412,10 +2324,7 @@ public class GeoServerSystemTestSupport extends GeoServerBaseTestSupport<SystemT
         System.out.println(json.toString(2));
     }
 
-    /**
-     * Convenience method for element.getElementsByTagName() to return the first element in the
-     * resulting node list.
-     */
+    /** Convenience method for element.getElementsByTagName() to return the first element in the resulting node list. */
     protected Element getFirstElementByTagName(Element element, String name) {
         NodeList elements = element.getElementsByTagName(name);
         if (elements.getLength() > 0) {
@@ -2425,26 +2334,22 @@ public class GeoServerSystemTestSupport extends GeoServerBaseTestSupport<SystemT
         return null;
     }
 
-    /**
-     * Convenience method for element.getElementsByTagName() to return the first element in the
-     * resulting node list.
-     */
+    /** Convenience method for element.getElementsByTagName() to return the first element in the resulting node list. */
     protected Element getFirstElementByTagName(Document dom, String name) {
         return getFirstElementByTagName(dom.getDocumentElement(), name);
     }
 
     /**
-     * Check coordinate at xpathExpression against provided coordinate. Coordinate values are
-     * compared as doubles (with small delta) rather than as strings to account for floating point
-     * differences.
+     * Check coordinate at xpathExpression against provided coordinate. Coordinate values are compared as doubles (with
+     * small delta) rather than as strings to account for floating point differences.
      *
      * @param expected Expected coordinate
      * @param xpathExpression XPath expression
      * @param document Document
      * @throws XpathException
      */
-    public static void assertXpathCoordinate(
-            Coordinate expected, String xpathExpression, Document document) throws XpathException {
+    public static void assertXpathCoordinate(Coordinate expected, String xpathExpression, Document document)
+            throws XpathException {
         XpathEngine simpleXpathEngine = XMLUnit.newXpathEngine();
         String value = simpleXpathEngine.evaluate(xpathExpression, document);
 
@@ -2453,8 +2358,8 @@ public class GeoServerSystemTestSupport extends GeoServerBaseTestSupport<SystemT
     }
 
     /**
-     * Subclasses needed to do integration tests with servlet filters can override this method and
-     * return the list of filters to be used during mocked requests
+     * Subclasses needed to do integration tests with servlet filters can override this method and return the list of
+     * filters to be used during mocked requests
      */
     protected List<Filter> getFilters() {
         return null;
@@ -2484,14 +2389,10 @@ public class GeoServerSystemTestSupport extends GeoServerBaseTestSupport<SystemT
         return new CaseInsensitiveMap<>(result);
     }
 
-    /**
-     * Checks the image and its sources are all deferred loaded, that is, there is no BufferedImage
-     * in the chain
-     */
+    /** Checks the image and its sources are all deferred loaded, that is, there is no BufferedImage in the chain */
     protected void assertDeferredLoading(RenderedImage image) {
         if (image instanceof BufferedImage) {
-            fail(
-                    "Found a buffered image in the chain, the original image is not fully deferred loaded");
+            fail("Found a buffered image in the chain, the original image is not fully deferred loaded");
         } else {
             for (RenderedImage ri : image.getSources()) {
                 assertDeferredLoading(ri);
@@ -2623,8 +2524,8 @@ public class GeoServerSystemTestSupport extends GeoServerBaseTestSupport<SystemT
     }
 
     /**
-     * Helper method that adds some tests keywords to a layer group. The provided layer group name
-     * should not be NULL, if the layer group cannot be found an exception will be throw.
+     * Helper method that adds some tests keywords to a layer group. The provided layer group name should not be NULL,
+     * if the layer group cannot be found an exception will be throw.
      */
     protected void addKeywordsToLayerGroup(String layerGroupName) {
         // create a list of keywords
@@ -2641,42 +2542,35 @@ public class GeoServerSystemTestSupport extends GeoServerBaseTestSupport<SystemT
         LayerGroupInfo layerGroup = getCatalog().getLayerGroupByName(layerGroupName);
         if (layerGroup == null) {
             // targeted layer group doesn't exists
-            throw new RuntimeException(
-                    String.format("Layer group '%s' doesn't exists.", layerGroupName));
+            throw new RuntimeException("Layer group '%s' doesn't exists.".formatted(layerGroupName));
         }
         layerGroup.getKeywords().addAll(keywords);
         getCatalog().save(layerGroup);
     }
 
     /**
-     * Helper method that clones a vector layer and adds it to a certain workspace. The provided
-     * layer name should correspond to an existing layer otherwise an exception will be throw. The
-     * provided target workspace and namespace should also exist.
-     */
-    protected LayerInfo cloneVectorLayerIntoWorkspace(
-            WorkspaceInfo targetWorkspace, NamespaceInfo targetNameSpace, String layerName) {
-        return cloneVectorLayerIntoWorkspace(
-                targetWorkspace, targetNameSpace, layerName, layerName);
-    }
-
-    /**
-     * Helper method that clones a vector layer and adds it to a certain workspace updating the
-     * layer name with the provided one. The provided layer name should correspond to an existing
-     * layer otherwise an exception will be throw. The provided target workspace and namespace
+     * Helper method that clones a vector layer and adds it to a certain workspace. The provided layer name should
+     * correspond to an existing layer otherwise an exception will be throw. The provided target workspace and namespace
      * should also exist.
      */
     protected LayerInfo cloneVectorLayerIntoWorkspace(
-            WorkspaceInfo targetWorkspace,
-            NamespaceInfo targetNameSpace,
-            String layerName,
-            String targetLayerName) {
+            WorkspaceInfo targetWorkspace, NamespaceInfo targetNameSpace, String layerName) {
+        return cloneVectorLayerIntoWorkspace(targetWorkspace, targetNameSpace, layerName, layerName);
+    }
+
+    /**
+     * Helper method that clones a vector layer and adds it to a certain workspace updating the layer name with the
+     * provided one. The provided layer name should correspond to an existing layer otherwise an exception will be
+     * throw. The provided target workspace and namespace should also exist.
+     */
+    protected LayerInfo cloneVectorLayerIntoWorkspace(
+            WorkspaceInfo targetWorkspace, NamespaceInfo targetNameSpace, String layerName, String targetLayerName) {
         Catalog catalog = getCatalog();
         // get the original object from the catalog
         LayerInfo originalLayerInfo = catalog.getLayerByName(layerName);
         if (originalLayerInfo == null) {
             // layer don't exists
-            throw new RuntimeException(
-                    String.format("Could not retrieve a layer for name '%s'.", layerName));
+            throw new RuntimeException("Could not retrieve a layer for name '%s'.".formatted(layerName));
         }
         FeatureTypeInfo originalFeatureTypeInfo = (FeatureTypeInfo) originalLayerInfo.getResource();
         DataStoreInfo originalStoreInfo = originalFeatureTypeInfo.getStore();
@@ -2723,5 +2617,17 @@ public class GeoServerSystemTestSupport extends GeoServerBaseTestSupport<SystemT
             }
         }
         assertTrue("Module " + moduleId + " not found", requiredModuleWasFound);
+    }
+
+    /**
+     * Checks if the current build is running as a Github action, using the <code>GITHUB_ACTIONS</code> environment
+     * variable. See the <a
+     * href="https://docs.github.com/en/actions/writing-workflows/choosing-what-your-workflow-does/store-information-in-variables">
+     * default variables available in Github</a> too.
+     *
+     * @return
+     */
+    public static final boolean isGitHubAction() {
+        return Boolean.getBoolean("GITHUB_ACTIONS");
     }
 }
