@@ -5,6 +5,7 @@
  */
 package org.geoserver.ows;
 
+import static javax.xml.stream.XMLStreamConstants.END_ELEMENT;
 import static javax.xml.stream.XMLStreamConstants.START_ELEMENT;
 
 import java.io.BufferedInputStream;
@@ -30,6 +31,7 @@ import java.util.Iterator;
 import java.util.LinkedHashMap;
 import java.util.List;
 import java.util.Map;
+import java.util.Optional;
 import java.util.Set;
 import java.util.logging.Level;
 import java.util.logging.Logger;
@@ -88,36 +90,43 @@ import org.xml.sax.SAXException;
  *
  * <p>Additional, an OWS request can contain an arbitray number of additional parameters.
  *
- * <p>An OWS request can be specified in two forms. The first form is known as "KVP" in which all
- * the parameters come in the form of a set of key-value pairs. Commonly this type of request is
- * made in an http "GET" request, the parameters being specified in the query string:
+ * <p>An OWS request can be specified in two forms. The first form is known as "KVP" in which all the parameters come in
+ * the form of a set of key-value pairs. Commonly this type of request is made in an http "GET" request, the parameters
+ * being specified in the query string:
  *
  * <pre>
- * <code>http://www.xyz.com/geoserver?service=someService&amp;request=someRequest&amp;version=X.Y.Z&amp;param1=...&amp;param2=...</code>
+ * {@code http://www.xyz.com/geoserver?service=someService&request=someRequest&version=X.Y.Z&param1=...&param2=...}
  * </pre>
  *
  * <p>This type of request can also be made in a "POST" request in with a mime-type of
  * "application/x-www-form-urlencoded".
  *
- * <p>The second form is known as "XML" in which all the parameters come in the form of an xml
- * document. This type of request is made in an http "POST" request.
+ * <p>The second form is known as "XML" in which all the parameters come in the form of an xml document. This type of
+ * request is made in an http "POST" request.
  *
- * <pre><code>
- *  &lt;?xml version="1.0" encoding="UTF-8"?&gt;
- *  &lt;SomeRequest service="someService" version="X.Y.Z"&gt;
- *    &lt;Param1&gt;...&lt;/Param1&gt;
- *    &lt;Param2&gt;...&lt;/Param2&gt;
- *    ...
- *  &lt;/SomeRequest&gt;
- * </code></pre>
+ * <pre>{@code
+ * <?xml version="1.0" encoding="UTF-8"?>
+ * <SomeRequest service="someService" version="X.Y.Z">
+ *   <Param1>...</Param1>
+ *   <Param2>...</Param2>
+ *   ...
+ * </SomeRequest>
+ * }</pre>
  *
- * <p>When a request is received, the <b>service</b> the <b>version</b> parameters are used to
- * locate a service desciptor, an instance of {@link Service} . With the service descriptor, the
- * <b>request</b> parameter is used to locate the operation of the service to call.
+ * <p>When a request is received, the <b>service</b> the <b>version</b> parameters are used to locate a service
+ * desciptor, an instance of {@link Service} . With the service descriptor, the <b>request</b> parameter is used to
+ * locate the operation of the service to call.
  *
  * @author Justin Deoliveira, The Open Planning Project, jdeolive@openplans.org
  */
 public class Dispatcher extends AbstractController {
+
+    /**
+     * The KVP parameter used for version negotiation in OWS requests, enumerating the versions supported by the client,
+     * in order of preference.
+     */
+    public static final String ACCEPT_VERSIONS = "AcceptVersions";
+
     /** Logging instance */
     static Logger logger = Logging.getLogger("org.geoserver.ows");
 
@@ -164,12 +173,11 @@ public class Dispatcher extends AbstractController {
     /**
      * Sets the flag to control wether the dispatcher is cite compliante.
      *
-     * <p>If set to <code>true</code>, the dispatcher with throw exceptions when it encounters
-     * something that is not 100% compliant with CITE standards. An example would be a request which
-     * specifies the servce in the context path: '.../geoserver/wfs?request=...' and not with the
-     * kvp '&amp;service=wfs'.
+     * <p>If set to {@code true}, the dispatcher with throw exceptions when it encounters something that is not 100%
+     * compliant with CITE standards. An example would be a request which specifies the servce in the context path:
+     * '.../geoserver/wfs?request=...' and not with the kvp '&amp;service=wfs'.
      *
-     * @param citeCompliant <code>true</code> to set compliance, <code>false</code> to unset it.
+     * @param citeCompliant {@code true} to set compliance, {@code false} to unset it.
      */
     public void setCiteCompliant(boolean citeCompliant) {
         this.citeCompliant = citeCompliant;
@@ -191,16 +199,10 @@ public class Dispatcher extends AbstractController {
                 int lookaheadValue = Integer.valueOf(lookahead);
                 if (lookaheadValue <= 0)
                     logger.log(
-                            Level.SEVERE,
-                            "Invalid XML_LOOKAHEAD value, "
-                                    + "will use "
-                                    + XML_LOOKAHEAD
-                                    + " instead");
+                            Level.SEVERE, "Invalid XML_LOOKAHEAD value, " + "will use " + XML_LOOKAHEAD + " instead");
                 XML_LOOKAHEAD = lookaheadValue;
             } catch (Exception e) {
-                logger.log(
-                        Level.SEVERE,
-                        "Invalid XML_LOOKAHEAD value, " + "will use " + XML_LOOKAHEAD + " instead");
+                logger.log(Level.SEVERE, "Invalid XML_LOOKAHEAD value, " + "will use " + XML_LOOKAHEAD + " instead");
             }
         }
     }
@@ -221,8 +223,8 @@ public class Dispatcher extends AbstractController {
     }
 
     @Override
-    protected ModelAndView handleRequestInternal(
-            HttpServletRequest httpRequest, HttpServletResponse httpResponse) throws Exception {
+    protected ModelAndView handleRequestInternal(HttpServletRequest httpRequest, HttpServletResponse httpResponse)
+            throws Exception {
         preprocessRequest(httpRequest);
 
         // create a new request instance
@@ -325,14 +327,12 @@ public class Dispatcher extends AbstractController {
                     && httpRequest.getContentType().startsWith(SOAP_MIME)) {
                 request.setSOAP(true);
                 request.setInput(soapReader(httpRequest, request));
-            } else if (reqContentType != null
-                    && ServletFileUpload.isMultipartContent(httpRequest)) {
+            } else if (reqContentType != null && ServletFileUpload.isMultipartContent(httpRequest)) {
                 // multipart form upload
                 ServletFileUpload up = new ServletFileUpload(new DiskFileItemFactory());
 
                 // treat regular form fields as additional kvp parameters
-                Map<String, FileItem> kvpFileItems =
-                        new CaseInsensitiveMap<>(new LinkedHashMap<>());
+                Map<String, FileItem> kvpFileItems = new CaseInsensitiveMap<>(new LinkedHashMap<>());
                 try {
                     List<FileItem> items = up.parseRequest(httpRequest);
                     FileItemCleanupCallback.setFileItems(items);
@@ -356,8 +356,7 @@ public class Dispatcher extends AbstractController {
                     if (body == null) {
                         body = kvpFileItems.remove("body");
                         if (body == null) {
-                            throw new IllegalArgumentException(
-                                    "Unable to find input from multipart/form-data content");
+                            throw new IllegalArgumentException("Unable to find input from multipart/form-data content");
                         }
                     }
                     request.setInput(fileItemReader(body));
@@ -366,11 +365,10 @@ public class Dispatcher extends AbstractController {
                 }
 
                 Map<String, Object> kvpItems = new LinkedHashMap<>();
-                kvpFileItems.forEach(
-                        (key, value) -> {
-                            kvpItems.put(key, value.getString());
-                            value.delete(); // the temp file can be deleted at this point
-                        });
+                kvpFileItems.forEach((key, value) -> {
+                    kvpItems.put(key, value.getString());
+                    value.delete(); // the temp file can be deleted at this point
+                });
 
                 request.setOrAppendKvp(parseKVP(request, kvpItems));
             } else {
@@ -391,22 +389,95 @@ public class Dispatcher extends AbstractController {
     }
 
     /**
-     * Initializes the request context by parsing the request path into two components: the
-     * 'context' and the 'path'. The 'context' is the part of the URI before the last '/' and the
-     * 'path' is the part after the last '/'.
+     * Figures out the service from the kvp (or the context path if kvp is missing, and not cite compliant) and then
+     * performs version negotiation based on "version" or "acceptVersions"
+     */
+    private void negotiateServiceAndVersionKvp(Request req) {
+        Map<String, Object> kvp = req.getKvp();
+
+        // if the service is not explicitly set, some parsers will not be found
+        String service = KvpUtils.getSingleValue(kvp, "service");
+        if (service == null && !citeCompliant) {
+            try {
+                service = getServiceFromRequest(req);
+                if (!"OWS".equalsIgnoreCase(service)) { // OWS is too generic for the parser lookup
+                    kvp.put("service", service);
+                }
+                logger.log(Level.FINER, "service kvp parameter not found, setting to " + service);
+            } catch (Exception e) {
+                logger.log(Level.WARNING, "Unable to determine service from kvp or context");
+            }
+        }
+
+        // do not bother with version negotiation if the request is just a GWC proxy (see GwcServiceDispatcherCallback)
+        // GWC has the actual tile service implementation and will handle version negotiation itself
+        if ("/gwc".equals(req.getHttpRequest().getServletPath())) {
+            return;
+        }
+
+        // figure out the target version before we parse the kvp
+        // as some kvp parsers are version specific (e.g. AcceptVersions has 3 different implementations in EMF)
+        String request = KvpUtils.getSingleValue(kvp, "request");
+        String version = KvpUtils.getSingleValue(kvp, "version");
+        String wmtver = KvpUtils.getSingleValue(kvp, "wmtver");
+        if (service != null && "GetCapabilities".equalsIgnoreCase(request)) {
+            List<String> supportedVersions = RequestUtils.getSupportedVersions(service);
+
+            if (version != null) {
+                // pre-OWS negotiation if version if available
+                version = RequestUtils.getVersionPreOws(supportedVersions, List.of(version));
+            } else if (wmtver != null && "WMS".equalsIgnoreCase(service)) {
+                // this case is specific to WMS for backwards compatibility
+                version = RequestUtils.getVersionPreOws(supportedVersions, List.of(wmtver));
+            } else {
+                // OWS negotiation, using acceptVersions
+                String acceptVersionsList = Optional.ofNullable(kvp)
+                        .map(map -> map.get(ACCEPT_VERSIONS))
+                        .filter(v -> v instanceof String)
+                        .map(v -> (String) v)
+                        .orElse(null);
+                if (acceptVersionsList != null) {
+                    List<String> acceptVersions = KvpUtils.readFlat(acceptVersionsList, KvpUtils.INNER_DELIMETER);
+                    req.setAcceptVersions(acceptVersions);
+                    version = RequestUtils.getVersionOWS(supportedVersions, acceptVersions, citeCompliant);
+                    if (version == null) versionNegotiationFailed();
+                }
+            }
+
+            // set in negotiated version to control the parsing
+            if (version != null) {
+                kvp.put("version", version);
+            }
+        }
+    }
+
+    private static void versionNegotiationFailed() {
+        throw new ServiceException(
+                "Could not determine version", ServiceException.VERSION_NEGOTIATION_FAILED, "acceptVersions");
+    }
+
+    /**
+     * Initializes the request context by parsing the request path into two components: the 'context' and the 'path'.
+     * The 'context' is the part of the URI before the last '/' and the 'path' is the part after the last '/'.
      *
-     * <p>This method processes the given {@link Request} object to extract and set the context and
-     * path based on the HTTP request URI. Leading and trailing slashes are stripped from the
-     * request path before the context and path are determined.
+     * <p>This method processes the given {@link Request} object to extract and set the context and path based on the
+     * HTTP request URI. Leading and trailing slashes are stripped from the request path before the context and path are
+     * determined.
      *
-     * @param request the {@link Request} object whose context and path need to be initialized.
-     * @throws NullPointerException if the {@link Request} or its HTTP request is null.
-     *     <pre>
-     * Example:
+     * <p>Example:
+     *
+     * <pre>
      * If the request URI is "/app/resource/item", then:
      * - context: "app/resource"
      * - path: "item"
+     *
+     * If the request URI is "/geoserver/ne/countries/gwc/service/wmts", then:
+     * - context: "ne/countries/gwc/service"
+     * - path: "wmts"
      * </pre>
+     *
+     * @param request the {@link Request} object whose context and path need to be initialized.
+     * @throws NullPointerException if the {@link Request} or its HTTP request is null.
      */
     public static void initRequestContext(Request request) {
         // parse the request path into two components. (1) the 'path' which
@@ -492,8 +563,8 @@ public class Dispatcher extends AbstractController {
         Element payload = null;
         for (int i = 0; payload == null && i < body.getChildNodes().getLength(); i++) {
             Node n = body.getChildNodes().item(i);
-            if (n instanceof Element) {
-                payload = (Element) n;
+            if (n instanceof Element element) {
+                payload = element;
             }
         }
 
@@ -504,15 +575,12 @@ public class Dispatcher extends AbstractController {
         // transform the payload back into an input stream so we can parse it as usual
         ByteArrayOutputStream bout = new ByteArrayOutputStream();
         try {
-            TransformerFactory.newInstance()
-                    .newTransformer()
-                    .transform(new DOMSource(payload), new StreamResult(bout));
+            TransformerFactory.newInstance().newTransformer().transform(new DOMSource(payload), new StreamResult(bout));
         } catch (Exception e) {
             throw new IOException("Error encoding payload of SOAP request", e);
         }
 
-        return RequestUtils.getBufferedXMLReader(
-                new ByteArrayInputStream(bout.toByteArray()), XML_LOOKAHEAD);
+        return RequestUtils.getBufferedXMLReader(new ByteArrayInputStream(bout.toByteArray()), XML_LOOKAHEAD);
     }
 
     BufferedReader reader(HttpServletRequest httpRequest) throws IOException {
@@ -525,15 +593,15 @@ public class Dispatcher extends AbstractController {
 
     Service service(Request req) throws Exception {
         String service = getServiceFromRequest(req);
+        String version = req.getVersion();
 
         // load from teh context
-        Service serviceDescriptor = findService(service, req.getVersion(), req.getNamespace());
+        Service serviceDescriptor = findService(service, version, req.getNamespace());
         if (serviceDescriptor == null) {
             // hack for backwards compatability, try finding the service with the context instead
             // of the service
             if (req.getContext() != null) {
-                serviceDescriptor =
-                        findService(req.getContext(), req.getVersion(), req.getNamespace());
+                serviceDescriptor = findService(req.getContext(), version, req.getNamespace());
                 if (serviceDescriptor != null) {
                     // found, assume that the client is using <service>/<request>
                     if (req.getRequest() == null) {
@@ -553,9 +621,9 @@ public class Dispatcher extends AbstractController {
     }
 
     /**
-     * Retrieves the service name from the given request object, which may contain key-value pairs
-     * (KVP) or a request body. If the service name is not explicitly provided in the request,
-     * attempts to infer it from the request context.
+     * Retrieves the service name from the given request object, which may contain key-value pairs (KVP) or a request
+     * body. If the service name is not explicitly provided in the request, attempts to infer it from the request
+     * context.
      *
      * @param req The request object containing information about the service and request.
      * @return The name of the service extracted from the request.
@@ -567,14 +635,14 @@ public class Dispatcher extends AbstractController {
         if (req.getKvp() != null) {
 
             req.setService(normalize(KvpUtils.getSingleValue(req.getKvp(), "service")));
-            req.setVersion(
-                    normalizeVersion(normalize(KvpUtils.getSingleValue(req.getKvp(), "version"))));
+            req.setVersion(normalizeVersion(normalize(KvpUtils.getSingleValue(req.getKvp(), "version"))));
             req.setRequest(normalize(KvpUtils.getSingleValue(req.getKvp(), "request")));
             req.setOutputFormat(normalize(KvpUtils.getSingleValue(req.getKvp(), "outputFormat")));
         }
         // check the body
-        if (req.getInput() != null && "POST".equalsIgnoreCase(req.getHttpRequest().getMethod())) {
-            readOpPost(req);
+        if (req.getInput() != null
+                && "POST".equalsIgnoreCase(req.getHttpRequest().getMethod())) {
+            readOpPost(req, citeCompliant);
         }
 
         // try to infer from context
@@ -601,8 +669,7 @@ public class Dispatcher extends AbstractController {
 
         if (service == null) {
             // give up
-            throw new ServiceException(
-                    "Could not determine service", "MissingParameterValue", "service");
+            throw new ServiceException("Could not determine service", "MissingParameterValue", "service");
         }
         return service;
     }
@@ -648,13 +715,11 @@ public class Dispatcher extends AbstractController {
         }
 
         if (v.getMinor() == null) {
-            return String.format("%d.0.0", ((Number) v.getMajor()).intValue());
+            return "%d.0.0".formatted(((Number) v.getMajor()).intValue());
         }
 
         if (v.getRevision() == null) {
-            return String.format(
-                    "%d.%d.0",
-                    ((Number) v.getMajor()).intValue(), ((Number) v.getMinor()).intValue());
+            return "%d.%d.0".formatted(((Number) v.getMajor()).intValue(), ((Number) v.getMinor()).intValue());
         }
 
         // version ok
@@ -663,9 +728,7 @@ public class Dispatcher extends AbstractController {
 
     Operation dispatch(Request req, Service serviceDescriptor) throws Throwable {
         if (req.getRequest() == null) {
-            String msg =
-                    "Could not determine geoserver request from http request "
-                            + req.getHttpRequest();
+            String msg = "Could not determine geoserver request from http request " + req.getHttpRequest();
             throw new ServiceException(msg, "MissingParameterValue", "request");
         }
 
@@ -742,27 +805,21 @@ public class Dispatcher extends AbstractController {
                         throw t;
                     }
                     if (kvpParsed && xmlParsed || (!kvpParsed && !xmlParsed)) {
-                        throw new ServiceException(
-                                "Could not find request reader (either kvp or xml) for: "
-                                        + parameterType.getName()
-                                        + ", it might be that some request parameters are missing, "
-                                        + "please check the documentation");
+                        throw new ServiceException("Could not find request reader (either kvp or xml) for: "
+                                + parameterType.getName()
+                                + ", it might be that some request parameters are missing, "
+                                + "please check the documentation");
                     } else if (kvpParsed) {
-                        throw new ServiceException(
-                                "Could not parse the KVP for: " + parameterType.getName());
+                        throw new ServiceException("Could not parse the KVP for: " + parameterType.getName());
                     } else {
-                        throw new ServiceException(
-                                "Could not parse the XML for: " + parameterType.getName());
+                        throw new ServiceException("Could not parse the XML for: " + parameterType.getName());
                     }
                 }
 
                 // GEOS-934  and GEOS-1288
-                Method setBaseUrl =
-                        OwsUtils.setter(requestBean.getClass(), "baseUrl", String.class);
+                Method setBaseUrl = OwsUtils.setter(requestBean.getClass(), "baseUrl", String.class);
                 if (setBaseUrl != null) {
-                    setBaseUrl.invoke(
-                            requestBean,
-                            new String[] {ResponseUtils.baseURL(req.getHttpRequest())});
+                    setBaseUrl.invoke(requestBean, ResponseUtils.baseURL(req.getHttpRequest()));
                 }
 
                 // another couple of thos of those lovley cite things, version+service has to
@@ -777,14 +834,11 @@ public class Dispatcher extends AbstractController {
                     }
 
                     if (req.getVersion() == null) {
-                        req.setVersion(
-                                normalizeVersion(
-                                        lookupRequestBeanProperty(requestBean, "version", false)));
+                        req.setVersion(normalizeVersion(lookupRequestBeanProperty(requestBean, "version", false)));
                     }
 
                     if (req.getOutputFormat() == null) {
-                        req.setOutputFormat(
-                                lookupRequestBeanProperty(requestBean, "outputFormat", true));
+                        req.setOutputFormat(lookupRequestBeanProperty(requestBean, "outputFormat", true));
                     }
 
                     parameters[i] = requestBean;
@@ -800,22 +854,19 @@ public class Dispatcher extends AbstractController {
             if (!"GetCapabilities".equalsIgnoreCase(req.getRequest())) {
                 if (req.getVersion() == null) {
                     // must be a version on non-capabilities requests
-                    throw new ServiceException(
-                            "Could not determine version", "MissingParameterValue", "version");
+                    throw new ServiceException("Could not determine version", "MissingParameterValue", "version");
                 } else {
                     // version must be valid
                     if (!req.getVersion().matches("[0-99].[0-99].[0-99]")) {
                         throw new ServiceException(
-                                "Invalid version: " + req.getVersion(),
-                                "InvalidParameterValue",
-                                "version");
+                                "Invalid version: " + req.getVersion(), "InvalidParameterValue", "version");
                     }
 
                     // make sure the versoin actually exists
                     boolean found = false;
                     Version version = new Version(req.getVersion());
 
-                    for (Service service : loadServices()) {
+                    for (Service service : RequestUtils.loadServices()) {
                         if (version.equals(service.getVersion())) {
                             found = true;
 
@@ -825,9 +876,7 @@ public class Dispatcher extends AbstractController {
 
                     if (!found) {
                         throw new ServiceException(
-                                "Invalid version: " + req.getVersion(),
-                                "InvalidParameterValue",
-                                "version");
+                                "Invalid version: " + req.getVersion(), "InvalidParameterValue", "version");
                     }
                 }
             }
@@ -835,8 +884,7 @@ public class Dispatcher extends AbstractController {
             // the service is mandatory for all requests instead
             if (req.getService() == null) {
                 // give up
-                throw new ServiceException(
-                        "Could not determine service", "MissingParameterValue", "service");
+                throw new ServiceException("Could not determine service", "MissingParameterValue", "service");
             }
         }
 
@@ -863,13 +911,10 @@ public class Dispatcher extends AbstractController {
         return op;
     }
 
-    String lookupRequestBeanProperty(
-            Object requestBean, String property, boolean allowDefaultValues) {
-        if (requestBean instanceof EObject && EMFUtils.has((EObject) requestBean, property)) {
+    String lookupRequestBeanProperty(Object requestBean, String property, boolean allowDefaultValues) {
+        if (requestBean instanceof EObject eObject && EMFUtils.has(eObject, property)) {
             // special case hack for eObject, we should move
-            // this out into an extension ppint
-            EObject eObject = (EObject) requestBean;
-
+            // this out into an extension point
             if (allowDefaultValues || EMFUtils.isSet(eObject, property)) {
                 return normalize((String) EMFUtils.get(eObject, property));
             }
@@ -894,14 +939,12 @@ public class Dispatcher extends AbstractController {
         Object result = null;
 
         try {
-            if (serviceBean instanceof DirectInvocationService) {
+            if (serviceBean instanceof DirectInvocationService service) {
                 // invokeDirect expects the operation to be called as declared in the operation
                 // descriptor, although it used to match a method name, lets use the declared
                 // operation name for contract compliance.
                 String operationName = opDescriptor.getId();
-                result =
-                        ((DirectInvocationService) serviceBean)
-                                .invokeDirect(operationName, parameters);
+                result = service.invokeDirect(operationName, parameters);
             } else {
                 Method operation = opDescriptor.getMethod();
                 result = operation.invoke(serviceBean, parameters);
@@ -937,8 +980,7 @@ public class Dispatcher extends AbstractController {
 
                 Class<?> binding = response.getBinding();
 
-                if (!binding.isAssignableFrom(result.getClass())
-                        || !response.canHandle(opDescriptor)) {
+                if (!binding.isAssignableFrom(result.getClass()) || !response.canHandle(opDescriptor)) {
                     itr.remove();
 
                     continue;
@@ -984,30 +1026,27 @@ public class Dispatcher extends AbstractController {
 
             if (responses.size() > 1) {
                 // sort by class hierarchy
-                Collections.sort(
-                        responses,
-                        (o1, o2) -> {
-                            Class<?> c1 = o1.getBinding();
-                            Class<?> c2 = o2.getBinding();
+                Collections.sort(responses, (o1, o2) -> {
+                    Class<?> c1 = o1.getBinding();
+                    Class<?> c2 = o2.getBinding();
 
-                            if (c1.equals(c2)) {
-                                return 0;
-                            }
+                    if (c1.equals(c2)) {
+                        return 0;
+                    }
 
-                            if (c1.isAssignableFrom(c2)) {
-                                return 1;
-                            }
+                    if (c1.isAssignableFrom(c2)) {
+                        return 1;
+                    }
 
-                            return -1;
-                        });
+                    return -1;
+                });
 
                 // check first two and make sure bindings are not equal
                 Response r1 = responses.get(0);
                 Response r2 = responses.get(1);
 
                 if (r1.getBinding().equals(r2.getBinding())) {
-                    String msg =
-                            "Multiple responses: (" + result.getClass() + "): " + r1 + ", " + r2;
+                    String msg = "Multiple responses: (" + result.getClass() + "): " + r1 + ", " + r2;
                     throw new RuntimeException(msg);
                 }
             }
@@ -1050,8 +1089,8 @@ public class Dispatcher extends AbstractController {
                 }
 
                 // special check for transformer
-                if (req.isSOAP() && result instanceof TransformerBase) {
-                    ((TransformerBase) result).setOmitXMLDeclaration(true);
+                if (req.isSOAP() && result instanceof TransformerBase base) {
+                    base.setOmitXMLDeclaration(true);
                 }
 
                 // actually write out the response
@@ -1134,14 +1173,11 @@ public class Dispatcher extends AbstractController {
         }
     }
 
-    void startSOAPEnvelope(OutputStream output, Request request, Response response)
-            throws IOException {
-        output.write(
-                ("<soap:Envelope xmlns:soap='" + request.getSOAPNamespace() + "'><soap:Header/>")
-                        .getBytes());
+    void startSOAPEnvelope(OutputStream output, Request request, Response response) throws IOException {
+        output.write(("<soap:Envelope xmlns:soap='" + request.getSOAPNamespace() + "'><soap:Header/>").getBytes());
         output.write("<soap:Body".getBytes());
-        if (response != null && response instanceof SOAPAwareResponse) {
-            String type = ((SOAPAwareResponse) response).getBodyType();
+        if (response != null && response instanceof SOAPAwareResponse awareResponse) {
+            String type = awareResponse.getBodyType();
             if (type != null) {
                 output.write((" type='" + type + "'").getBytes());
             }
@@ -1153,8 +1189,7 @@ public class Dispatcher extends AbstractController {
         output.write(("</soap:Body></soap:Envelope>").getBytes());
     }
 
-    Response fireResponseDispatchedCallback(
-            Request req, Operation op, Object result, Response response) {
+    Response fireResponseDispatchedCallback(Request req, Operation op, Object result, Response response) {
         for (DispatcherCallback cb : callbacks) {
             Response r = cb.responseDispatched(req, op, result, response);
             response = r != null ? r : response;
@@ -1162,20 +1197,9 @@ public class Dispatcher extends AbstractController {
         return response;
     }
 
-    Collection<Service> loadServices() {
-        Collection<Service> services = GeoServerExtensions.extensions(Service.class);
-
-        if (!(new HashSet<>(services).size() == services.size())) {
-            String msg = "Two identical service descriptors found";
-            throw new IllegalStateException(msg);
-        }
-
-        return services;
-    }
-
     Service findService(String id, String ver, String namespace) throws ServiceException {
         Version version = (ver != null) ? new Version(ver) : null;
-        Collection<Service> services = loadServices();
+        Collection<Service> services = RequestUtils.loadServices();
 
         // the id is actually the pathinfo, in case workspace specific services
         // are active we want to skip the workspace part in the path and go directly to the
@@ -1243,8 +1267,7 @@ public class Dispatcher extends AbstractController {
             // multiple services found, sort by version
             if (vmatches.size() > 1) {
                 // use highest version
-                Comparator<Service> comparator =
-                        (s1, s2) -> s1.getVersion().compareTo(s2.getVersion());
+                Comparator<Service> comparator = (s1, s2) -> s1.getVersion().compareTo(s2.getVersion());
 
                 Collections.sort(vmatches, comparator);
             }
@@ -1259,8 +1282,7 @@ public class Dispatcher extends AbstractController {
     }
 
     public static Collection<KvpRequestReader> loadKvpRequestReaders() {
-        Collection<KvpRequestReader> kvpReaders =
-                GeoServerExtensions.extensions(KvpRequestReader.class);
+        Collection<KvpRequestReader> kvpReaders = GeoServerExtensions.extensions(KvpRequestReader.class);
 
         if (!(new HashSet<>(kvpReaders).size() == kvpReaders.size())) {
             String msg = "Two identical kvp readers found";
@@ -1287,14 +1309,13 @@ public class Dispatcher extends AbstractController {
 
         if (matches.size() > 1) {
             // sort by class hierarchy
-            Comparator<KvpRequestReader> comparator =
-                    (kvp1, kvp2) -> {
-                        if (kvp2.getRequestBean().isAssignableFrom(kvp1.getRequestBean())) {
-                            return -1;
-                        }
+            Comparator<KvpRequestReader> comparator = (kvp1, kvp2) -> {
+                if (kvp2.getRequestBean().isAssignableFrom(kvp1.getRequestBean())) {
+                    return -1;
+                }
 
-                        return 1;
-                    };
+                return 1;
+            };
 
             Collections.sort(matches, comparator);
         }
@@ -1326,8 +1347,7 @@ public class Dispatcher extends AbstractController {
     }
 
     /**
-     * Finds a registered {@link XmlRequestReader} bean able to read a request, given the request
-     * details
+     * Finds a registered {@link XmlRequestReader} bean able to read a request, given the request details
      *
      * @param namespace The XML namespace of the request body
      * @param element The OWS request, e.g. "GetMap"
@@ -1335,8 +1355,7 @@ public class Dispatcher extends AbstractController {
      * @param ver The OWS service version, e.g "1.1.1"
      * @return An {@link XmlRequestReader} capable of reading the request body
      */
-    public static XmlRequestReader findXmlReader(
-            String namespace, String element, String serviceId, String ver) {
+    public static XmlRequestReader findXmlReader(String namespace, String element, String serviceId, String ver) {
         Collection<XmlRequestReader> xmlReaders = loadXmlReaders();
 
         // first just match on namespace, element
@@ -1356,9 +1375,7 @@ public class Dispatcher extends AbstractController {
             // do a more lax serach, search only on the element name if the
             // namespace was unspecified
             if (namespace == null || namespace.equals("")) {
-                String msg =
-                        "No namespace specified in request, searching for "
-                                + " xml reader by element name only";
+                String msg = "No namespace specified in request, searching for " + " xml reader by element name only";
                 logger.info(msg);
 
                 for (XmlRequestReader xmlReader : xmlReaders) {
@@ -1439,46 +1456,45 @@ public class Dispatcher extends AbstractController {
             // multiple readers found, sort by version and by service match
             if (vmatches.size() > 1) {
                 // use highest version
-                Comparator<XmlRequestReader> comparator =
-                        (r1, r2) -> {
-                            Version v1 = r1.getVersion();
-                            Version v2 = r2.getVersion();
+                Comparator<XmlRequestReader> comparator = (r1, r2) -> {
+                    Version v1 = r1.getVersion();
+                    Version v2 = r2.getVersion();
 
-                            if ((v1 == null) && (v2 == null)) {
-                                return 0;
-                            }
+                    if ((v1 == null) && (v2 == null)) {
+                        return 0;
+                    }
 
-                            if ((v1 != null) && (v2 == null)) {
-                                return 1;
-                            }
+                    if ((v1 != null) && (v2 == null)) {
+                        return 1;
+                    }
 
-                            if ((v1 == null) && (v2 != null)) {
-                                return -1;
-                            }
+                    if ((v1 == null) && (v2 != null)) {
+                        return -1;
+                    }
 
-                            int versionCompare = v1.compareTo(v2);
+                    int versionCompare = v1.compareTo(v2);
 
-                            if (versionCompare != 0) {
-                                return versionCompare;
-                            }
+                    if (versionCompare != 0) {
+                        return versionCompare;
+                    }
 
-                            String sid1 = r1.getServiceId();
-                            String sid2 = r2.getServiceId();
+                    String sid1 = r1.getServiceId();
+                    String sid2 = r2.getServiceId();
 
-                            if ((sid1 == null) && (sid2 == null)) {
-                                return 0;
-                            }
+                    if ((sid1 == null) && (sid2 == null)) {
+                        return 0;
+                    }
 
-                            if ((sid1 != null) && (sid2 == null)) {
-                                return 1;
-                            }
+                    if ((sid1 != null) && (sid2 == null)) {
+                        return 1;
+                    }
 
-                            if ((sid1 == null) && (sid2 != null)) {
-                                return -1;
-                            }
+                    if ((sid1 == null) && (sid2 != null)) {
+                        return -1;
+                    }
 
-                            return sid1.compareTo(sid2);
-                        };
+                    return sid1.compareTo(sid2);
+                };
 
                 Collections.sort(vmatches, comparator);
             }
@@ -1528,23 +1544,11 @@ public class Dispatcher extends AbstractController {
 
     void parseKVP(Request req) throws ServiceException {
         preParseKVP(req);
+        negotiateServiceAndVersionKvp(req);
         parseKVP(req, req.getKvp());
     }
 
     Map<String, Object> parseKVP(Request req, Map<String, Object> kvp) {
-        // if the service is not explicitly set, some parsers will not be found
-        if (!kvp.containsKey("service") && !kvp.containsKey("SERVICE") && !citeCompliant) {
-            String service = null;
-            try {
-                service = getServiceFromRequest(req);
-                if (!"OWS".equalsIgnoreCase(service)) { // OWS is too generic for the parser lookup
-                    kvp.put("service", service);
-                }
-                logger.log(Level.FINER, "service kvp parameter not found, setting to " + service);
-            } catch (Exception e) {
-                logger.log(Level.WARNING, "Unable to determine service from kvp or context");
-            }
-        }
         List<Throwable> errors = KvpUtils.parse(kvp);
         if (!errors.isEmpty()) {
             req.setError(errors.get(0));
@@ -1569,15 +1573,14 @@ public class Dispatcher extends AbstractController {
     }
 
     /**
-     * To be called once it was determined the request is a POST request with an XML request body;
-     * uses {@link XmlRequestReader} to parse the {@link Request#getInput() request input}.
+     * To be called once it was determined the request is a POST request with an XML request body; uses
+     * {@link XmlRequestReader} to parse the {@link Request#getInput() request input}.
      *
-     * <p>This method expects {@code request.} {@link Request#getNamespace() namespace}, {@link
-     * Request#getPostRequestElementName() postRequestElementName}, {@link Request#getVersion()
-     * version}, and {@link Request#getService() service} to be set already.
+     * <p>This method expects {@code request.} {@link Request#getNamespace() namespace},
+     * {@link Request#getPostRequestElementName() postRequestElementName}, {@link Request#getVersion() version}, and
+     * {@link Request#getService() service} to be set already.
      */
-    Object parseRequestXML(Object requestBean, BufferedReader input, Request request)
-            throws Exception {
+    Object parseRequestXML(Object requestBean, BufferedReader input, Request request) throws Exception {
         // check for an empty input stream
         if (!input.ready()) {
             return null;
@@ -1610,8 +1613,7 @@ public class Dispatcher extends AbstractController {
         Map<String, String> map = new HashMap<>();
         if (request.getPath() != null) {
             map.put("service", request.getPath());
-        } else if (request.getHttpRequest() != null
-                && request.getHttpRequest().getServletPath() != null) {
+        } else if (request.getHttpRequest() != null && request.getHttpRequest().getServletPath() != null) {
             // Path not found so try to fall back on HTTPRequest Servlet Path
             String service =
                     extractServiceFromHttpRequest(request.getHttpRequest().getRequestURI());
@@ -1643,40 +1645,40 @@ public class Dispatcher extends AbstractController {
     }
 
     /**
-     * To be called once determined the incoming request is an HTTP POST request
-     * with a request body, and the request's {@link Request#getInput() input
-     * reader} has been set; in order to pre-parse the XML request body root element
-     * and establish the following request properties:
+     * To be called once determined the incoming request is an HTTP POST request with a request body, and the request's
+     * {@link Request#getInput() input reader} has been set; in order to pre-parse the XML request body root element and
+     * establish the following request properties:
+     *
      * <p>
+     *
      * <ul>
-     * <li>{@link Request#setNamespace namespace}: The xml root element's namespace,
-     * or {@code ""} (empty string) if {@code null}
-     * <li>{@link Request#setPostRequestElementName PostRequestElementName}: The xml
-     * root element name (e.g. {@code GetMap}, {@code GetFeature},
-     * {@code StyledLayerDescriptor}, etc.)
-     * <li>{@link Request#setRequest: The xml root element name, assuming it matches
-     * the request name, might be overriten later while parting the request's query
-     * string key-value pairs
-     * <li>{@link Request#setService service}: matching the xml root element's
-     * {@code service} attribute, or {@code null}
-     * <li>{@link Request#setVersion version}: matching the xml root element's
-     * {@code version} attribute, or {@code null}
-     * <li>{@link Request#setOutputFormat outputFormat}: matching the xml root
-     * element's {@code outputFormat} attribute, or {@code null}
+     *   <li>{@link Request#setNamespace namespace}: The xml root element's namespace, or {@code ""} (empty string) if
+     *       {@code null}
+     *   <li>{@link Request#setPostRequestElementName PostRequestElementName}: The xml root element name (e.g.
+     *       {@code GetMap}, {@code GetFeature}, {@code StyledLayerDescriptor}, etc.)
+     *   <li>{@link Request#setRequest}: The xml root element name, assuming it matches the request name, might be
+     *       overriten later while parting the request's query string key-value pairs
+     *   <li>{@link Request#setService service}: matching the xml root element's {@code service} attribute, or
+     *       {@code null}
+     *   <li>{@link Request#setVersion version}: matching the xml root element's {@code version} attribute, or
+     *       {@code null}
+     *   <li>{@link Request#setOutputFormat outputFormat}: matching the xml root element's {@code outputFormat}
+     *       attribute, or {@code null}
      * </ul>
      *
-     * @param req The request to set properties to based on the xml request body's
-     *            root element
+     * @param req The request to set properties to based on the xml request body's root element
+     * @param citeCompliant Whether to perform version negotiation for OWS requests
      * @return a {@link Map} containing the parsed parameters.
      * @throws Exception if there was an error reading the input.
      */
-    public static Request readOpPost(Request req) throws Exception {
+    public static Request readOpPost(Request req, boolean citeCompliant) throws Exception {
         String namespace;
         String elementName;
         String request;
         String service;
         String version;
         String outputFormat;
+        List<String> acceptVersions = new ArrayList<>();
 
         XMLStreamReader parser = createParserForRootElement(req);
         try {
@@ -1692,6 +1694,34 @@ public class Dispatcher extends AbstractController {
             service = parser.getAttributeValue(null, "service");
             version = parser.getAttributeValue(null, "version");
             outputFormat = parser.getAttributeValue(null, "outputFormat");
+
+            // GetCapabilities request may have AcceptVersions, needed for version negotiation in OWS
+            boolean done = false;
+            int lastEvent = -1;
+            if ("GetCapabilities".equals(request)) {
+                acceptVersions = new ArrayList<>();
+                while (parser.hasNext()) {
+                    lastEvent = parser.next();
+                    if (START_ELEMENT == lastEvent
+                            && parser.getName().getLocalPart().equals("AcceptVersions")) break;
+                    else if (END_ELEMENT == lastEvent
+                            && parser.getName().getLocalPart().equals("GetCapabilities")) {
+                        done = true;
+                        break;
+                    }
+                }
+
+                while (!done && parser.hasNext()) {
+                    int next = parser.next();
+                    if (START_ELEMENT == next && parser.getName().getLocalPart().equals("Version")) {
+                        String v = parser.getElementText();
+                        acceptVersions.add(v);
+                    } else if (END_ELEMENT == next) {
+                        String localPart = parser.getName().getLocalPart();
+                        if (localPart.equals("AcceptVersions") || localPart.equals("GetCapabilities")) break;
+                    }
+                }
+            }
         } finally {
             parser.close();
         }
@@ -1699,15 +1729,35 @@ public class Dispatcher extends AbstractController {
         req.setNamespace(normalize(namespace));
         req.setPostRequestElementName(normalize(elementName));
         // These may already be given by the request query string KVP's, override only if non-null
+        boolean isCapabilitiesRequest = "GetCapabilities".equals(request);
         if (request != null) {
             req.setRequest(normalize(request));
         }
+
         if (service != null) {
             req.setService(normalize(service));
         }
+
+        if (acceptVersions != null) req.setAcceptVersions(acceptVersions);
+
+        // normally the service is implied by the namespace of the request, but we might have negotiation (odd case)
         if (version != null) {
-            req.setVersion(normalizeVersion(normalize(version)));
+            req.setVersion(normalizeVersion(version));
+        } else if (isCapabilitiesRequest && acceptVersions != null && !acceptVersions.isEmpty()) {
+            // negotiation with accept version
+            List<String> supportedVersions = null;
+            if (service != null) {
+                req.setService(normalize(service));
+                supportedVersions = RequestUtils.getSupportedVersions(service);
+            }
+            version = RequestUtils.getVersionOWS(supportedVersions, acceptVersions, citeCompliant);
+            if (version == null) versionNegotiationFailed();
         }
+        // set the final version after negotiation
+        if (version != null) {
+            req.setVersion(version);
+        }
+
         if (outputFormat != null) {
             req.setOutputFormat(normalize(outputFormat));
         }
@@ -1743,8 +1793,11 @@ public class Dispatcher extends AbstractController {
                 && !(current instanceof ClientStreamAbortedException)
                 && !isSecurityException(current)
                 && !(current instanceof HttpErrorCodeException)) {
-            if (current instanceof SAXException) current = ((SAXException) current).getException();
-            else current = current.getCause();
+            if (current instanceof SAXException exception) {
+                current = exception.getException();
+            } else {
+                current = current.getCause();
+            }
         }
         if (current instanceof ClientStreamAbortedException) {
             logger.log(Level.FINER, "Client has closed stream", t);
@@ -1754,8 +1807,7 @@ public class Dispatcher extends AbstractController {
             throw (RuntimeException) current;
         }
 
-        if (current instanceof HttpErrorCodeException) {
-            HttpErrorCodeException ece = (HttpErrorCodeException) current;
+        if (current instanceof HttpErrorCodeException ece) {
             int errorCode = ece.getErrorCode();
             if (errorCode < 199 || errorCode > 299) {
                 logger.log(Level.FINE, "", t);
@@ -1800,8 +1852,8 @@ public class Dispatcher extends AbstractController {
             // unwind the exception stack until we find one we know about
             Throwable cause = t;
             while (cause != null) {
-                if (cause instanceof ServiceException) {
-                    errorCode = ((ServiceException) cause).getCode();
+                if (cause instanceof ServiceException exception) {
+                    errorCode = exception.getCode();
                     break;
                 }
                 cause = cause.getCause();
@@ -1843,24 +1895,23 @@ public class Dispatcher extends AbstractController {
         // find an exception handler
         ServiceExceptionHandler handler = null;
 
-        if (service != null) {
-            // look up the service exception handler
-            Collection handlers = GeoServerExtensions.extensions(ServiceExceptionHandler.class);
-            for (Object o : handlers) {
-                ServiceExceptionHandler seh = (ServiceExceptionHandler) o;
-
-                if (seh.getServices().contains(service)) {
-                    // found one,
-                    handler = seh;
-
-                    break;
-                }
+        // look up the service exception handler
+        List<ServiceExceptionHandler> handlers = GeoServerExtensions.extensions(ServiceExceptionHandler.class);
+        for (ServiceExceptionHandler seh : handlers) {
+            if (seh.canHandle(service, request)) {
+                handler = seh;
+                break;
             }
         }
 
         if (handler == null) {
-            // none found, fall back on default
-            handler = new OWS10ServiceExceptionHandler();
+            // none found, make a guess... if there is an "acceptVersions" it cannot be 1.0, default to 1.1 althought it
+            // could also be 2.0 (hey... that's why it's a guess)
+            if (request.getAcceptVersions() != null) {
+                handler = new OWS11ServiceExceptionHandler();
+            } else {
+                handler = new OWS10ServiceExceptionHandler();
+            }
         }
 
         // if SOAP request use special SOAP exception handler, but only for OWS requests because
@@ -1896,7 +1947,6 @@ public class Dispatcher extends AbstractController {
      * @return true if t is a security exception
      */
     public static boolean isSecurityException(Throwable t) {
-        return t != null
-                && t.getClass().getPackage().getName().startsWith("org.springframework.security");
+        return t != null && t.getClass().getPackage().getName().startsWith("org.springframework.security");
     }
 }
