@@ -15,6 +15,7 @@ import java.io.IOException;
 import java.io.InputStream;
 import java.io.OutputStream;
 import java.nio.file.NoSuchFileException;
+import java.nio.file.Path;
 import java.nio.file.StandardCopyOption;
 import java.nio.file.attribute.BasicFileAttributes;
 import java.util.ArrayList;
@@ -33,11 +34,10 @@ public class FileSystemResourceStore implements ResourceStore {
 
     public static final String GS_LOCK_TRACE = "gs.lock.trace";
     /**
-     * When true, the stack trace that got an input stream that wasn't closed is recorded and then
-     * printed out when warning the user about this.
+     * When true, the stack trace that got an input stream that wasn't closed is recorded and then printed out when
+     * warning the user about this.
      */
-    protected static final Boolean TRACE_ENABLED =
-            "true".equalsIgnoreCase(System.getProperty(GS_LOCK_TRACE));
+    protected static final Boolean TRACE_ENABLED = "true".equalsIgnoreCase(System.getProperty(GS_LOCK_TRACE));
 
     /** LockProvider used to secure resources for exclusive access */
     protected LockProvider lockProvider = new NullLockProvider();
@@ -103,8 +103,7 @@ public class FileSystemResourceStore implements ResourceStore {
         if (!resourceDirectory.exists()) {
             boolean create = resourceDirectory.mkdirs();
             if (!create) {
-                throw new IllegalArgumentException(
-                        "Unable to create directory " + resourceDirectory);
+                throw new IllegalArgumentException("Unable to create directory " + resourceDirectory);
             }
         }
         if (resourceDirectory.exists() && resourceDirectory.isDirectory()) {
@@ -144,9 +143,7 @@ public class FileSystemResourceStore implements ResourceStore {
         try {
             dest.getParentFile().mkdirs(); // Make sure there's somewhere to move to.
             java.nio.file.Files.move(
-                    java.nio.file.Paths.get(file.getAbsolutePath()),
-                    java.nio.file.Paths.get(dest.getAbsolutePath()),
-                    StandardCopyOption.ATOMIC_MOVE);
+                    Path.of(file.getAbsolutePath()), Path.of(dest.getAbsolutePath()), StandardCopyOption.ATOMIC_MOVE);
             return true;
         } catch (IOException e) {
             throw new IllegalStateException("Unable to move " + path + " to " + target, e);
@@ -245,9 +242,7 @@ public class FileSystemResourceStore implements ResourceStore {
                     do {
                         UUID uuid = UUID.randomUUID();
                         tryTemp =
-                                new File(
-                                        actualFile.getParentFile(),
-                                        String.format("%s.%s.tmp", actualFile.getName(), uuid));
+                                new File(actualFile.getParentFile(), "%s.%s.tmp".formatted(actualFile.getName(), uuid));
                     } while (tryTemp.exists());
 
                     temp = tryTemp;
@@ -305,8 +300,7 @@ public class FileSystemResourceStore implements ResourceStore {
                     if (!parent.exists()) {
                         boolean created = parent.mkdirs();
                         if (!created) {
-                            throw new IllegalStateException(
-                                    "Unable to create " + parent.getAbsolutePath());
+                            throw new IllegalStateException("Unable to create " + parent.getAbsolutePath());
                         }
                     }
                     if (parent.isDirectory()) {
@@ -318,15 +312,11 @@ public class FileSystemResourceStore implements ResourceStore {
                             lock.release();
                         }
                         if (!created) {
-                            throw new FileNotFoundException(
-                                    "Unable to create " + file.getAbsolutePath());
+                            throw new FileNotFoundException("Unable to create " + file.getAbsolutePath());
                         }
                     } else {
                         throw new FileNotFoundException(
-                                "Unable to create"
-                                        + file.getName()
-                                        + " - not a directory "
-                                        + parent.getAbsolutePath());
+                                "Unable to create" + file.getName() + " - not a directory " + parent.getAbsolutePath());
                     }
                 } catch (IOException e) {
                     throw new IllegalStateException("Cannot create " + path, e);
@@ -347,8 +337,7 @@ public class FileSystemResourceStore implements ResourceStore {
                     if (!parent.exists()) {
                         boolean created = parent.mkdirs();
                         if (!created) {
-                            throw new IllegalStateException(
-                                    "Unable to create " + parent.getAbsolutePath());
+                            throw new IllegalStateException("Unable to create " + parent.getAbsolutePath());
                         }
                     }
                     if (parent.isDirectory()) {
@@ -360,15 +349,11 @@ public class FileSystemResourceStore implements ResourceStore {
                             lock.release();
                         }
                         if (!created) {
-                            throw new FileNotFoundException(
-                                    "Unable to create " + file.getAbsolutePath());
+                            throw new FileNotFoundException("Unable to create " + file.getAbsolutePath());
                         }
                     } else {
                         throw new FileNotFoundException(
-                                "Unable to create"
-                                        + file.getName()
-                                        + " - not a directory "
-                                        + parent.getAbsolutePath());
+                                "Unable to create" + file.getName() + " - not a directory " + parent.getAbsolutePath());
                     }
                 } catch (IOException e) {
                     throw new IllegalStateException("Cannot create " + path, e);
@@ -431,15 +416,13 @@ public class FileSystemResourceStore implements ResourceStore {
         public Type getType() {
             try {
                 BasicFileAttributes attributes =
-                        java.nio.file.Files.readAttributes(
-                                file.toPath(), BasicFileAttributes.class);
+                        java.nio.file.Files.readAttributes(file.toPath(), BasicFileAttributes.class);
                 if (attributes.isDirectory()) {
                     return Type.DIRECTORY;
                 } else if (attributes.isRegularFile()) {
                     return Type.RESOURCE;
                 } else {
-                    throw new IllegalStateException(
-                            "Path does not represent a configuration resource: " + path);
+                    throw new IllegalStateException("Path does not represent a configuration resource: " + path);
                 }
             } catch (NoSuchFileException e) {
                 return Type.UNDEFINED;
@@ -488,18 +471,15 @@ public class FileSystemResourceStore implements ResourceStore {
                 return false;
             }
             try {
-                if (dest instanceof FileSystemResource) {
-                    rename(file, ((FileSystemResource) dest).file);
-                } else if (dest instanceof Files.ResourceAdaptor) {
-                    rename(file, ((Files.ResourceAdaptor) dest).file);
+                if (dest instanceof FileSystemResource resource) {
+                    rename(file, resource.file);
+                } else if (dest instanceof Files.ResourceAdaptor adaptor) {
+                    rename(file, adaptor.file);
                 } else {
                     return Resources.renameByCopy(this, dest);
                 }
             } catch (IOException e) {
-                LOGGER.log(
-                        Level.WARNING,
-                        "Failed to rename file resource " + path + " to " + dest.path(),
-                        e);
+                LOGGER.log(Level.WARNING, "Failed to rename file resource " + path + " to " + dest.path(), e);
                 return false;
             }
             return true;
@@ -524,9 +504,7 @@ public class FileSystemResourceStore implements ResourceStore {
                     do {
                         UUID uuid = UUID.randomUUID();
                         tryTemp =
-                                new File(
-                                        actualFile.getParentFile(),
-                                        String.format("%s.%s.tmp", actualFile.getName(), uuid));
+                                new File(actualFile.getParentFile(), "%s.%s.tmp".formatted(actualFile.getName(), uuid));
                     } while (tryTemp.exists());
 
                     temp = tryTemp;
@@ -552,13 +530,8 @@ public class FileSystemResourceStore implements ResourceStore {
         if (instance == null) {
             // lazily initialize the FileSystemWatcher in a thread contention free way,
             // creating a single instance
-            instance =
-                    watcher.updateAndGet(
-                            v ->
-                                    v == null
-                                            ? new FileSystemWatcher(
-                                                    path -> new File(baseDirectory, path))
-                                            : v);
+            instance = watcher.updateAndGet(
+                    v -> v == null ? new FileSystemWatcher(path -> new File(baseDirectory, path)) : v);
         }
         return instance;
     }
