@@ -12,6 +12,7 @@ import static org.hamcrest.CoreMatchers.not;
 import static org.hamcrest.MatcherAssert.assertThat;
 import static org.junit.Assert.assertEquals;
 import static org.junit.Assert.assertNotEquals;
+import static org.junit.Assert.assertThrows;
 import static org.junit.Assert.assertTrue;
 
 import java.io.ByteArrayOutputStream;
@@ -43,6 +44,7 @@ import org.geoserver.ows.Dispatcher;
 import org.geoserver.ows.Request;
 import org.geoserver.platform.GeoServerExtensions;
 import org.geoserver.platform.GeoServerResourceLoader;
+import org.geoserver.template.GeoServerMemberAccessPolicy;
 import org.geoserver.template.GeoServerTemplateLoader;
 import org.geoserver.wms.GetFeatureInfoRequest;
 import org.geoserver.wms.MapLayerInfo;
@@ -77,33 +79,30 @@ public class HTMLFeatureInfoOutputFormatTest extends WMSTestSupport {
     @Before
     public void setUp() throws URISyntaxException, IOException {
         outputFormat =
-                new HTMLFeatureInfoOutputFormat(
-                        getWMS(), GeoServerExtensions.bean(GeoServerResourceLoader.class));
+                new HTMLFeatureInfoOutputFormat(getWMS(), GeoServerExtensions.bean(GeoServerResourceLoader.class));
 
         currentTemplate = "test_content.ftl";
         // configure template loader
-        GeoServerTemplateLoader templateLoader =
-                new GeoServerTemplateLoader(this.getClass(), getDataDirectory()) {
+        GeoServerTemplateLoader templateLoader = new GeoServerTemplateLoader(this.getClass(), getDataDirectory()) {
 
-                    @Override
-                    public Object findTemplateSource(String path) throws IOException {
-                        String templatePath;
-                        if (path.toLowerCase().contains("content")) {
-                            templatePath = currentTemplate;
+            @Override
+            public Object findTemplateSource(String path) throws IOException {
+                String templatePath;
+                if (path.toLowerCase().contains("content")) {
+                    templatePath = currentTemplate;
 
-                        } else {
-                            templatePath = "empty.ftl";
-                        }
-                        try {
-                            return new File(
-                                    this.getClass()
-                                            .getResource(templateFolder + templatePath)
-                                            .toURI());
-                        } catch (URISyntaxException e) {
-                            return null;
-                        }
-                    }
-                };
+                } else {
+                    templatePath = "empty.ftl";
+                }
+                try {
+                    return new File(this.getClass()
+                            .getResource(templateFolder + templatePath)
+                            .toURI());
+                } catch (URISyntaxException e) {
+                    return null;
+                }
+            }
+        };
         outputFormat.getTemplateManager().setTemplateLoader(templateLoader);
 
         // test request with some parameters to use in templates
@@ -141,8 +140,11 @@ public class HTMLFeatureInfoOutputFormatTest extends WMSTestSupport {
     }
 
     @After
-    public void resetSetting() {
+    public void resetSettings() {
         System.clearProperty(FreeMarkerTemplateManager.FORCE_FREEMARKER_ESCAPING);
+        System.clearProperty(GeoServerMemberAccessPolicy.FREEMARKER_API_EXPOSED);
+        System.clearProperty(GeoServerMemberAccessPolicy.FREEMARKER_BLOCK_LIST);
+        FreeMarkerTemplateManager.clearClassIntrospectionCache();
     }
 
     @SuppressWarnings("unchecked") // EMF model without generics
@@ -165,8 +167,7 @@ public class HTMLFeatureInfoOutputFormatTest extends WMSTestSupport {
     public void testEnvironmentVariablesAreEvaluatedInTemplate() throws IOException {
         currentTemplate = "test_env_content.ftl";
         System.setProperty("TEST_PROPERTY", "MYVALUE");
-        MockServletContext servletContext =
-                (MockServletContext) applicationContext.getServletContext();
+        MockServletContext servletContext = (MockServletContext) applicationContext.getServletContext();
         servletContext.setInitParameter("TEST_INIT_PARAM", "MYPARAM");
         try {
             ByteArrayOutputStream outStream = new ByteArrayOutputStream();
@@ -187,8 +188,7 @@ public class HTMLFeatureInfoOutputFormatTest extends WMSTestSupport {
         builder.setName(toName(MockData.WORLD));
         SimpleFeatureType type = builder.buildFeatureType();
         Double[] values = new Double[0];
-        fcType.getFeature()
-                .set(0, DataUtilities.collection(SimpleFeatureBuilder.build(type, values, "")));
+        fcType.getFeature().set(0, DataUtilities.collection(SimpleFeatureBuilder.build(type, values, "")));
         ResourceInfo resource = getCatalog().getCoverageByName(toName(MockData.WORLD));
         resource.setTitle("Raster Title");
         resource.setAbstract("Raster Abstract");
@@ -224,20 +224,13 @@ public class HTMLFeatureInfoOutputFormatTest extends WMSTestSupport {
 
         ByteArrayOutputStream outStream = new ByteArrayOutputStream();
 
-        IOException e =
-                Assert.assertThrows(
-                        IOException.class,
-                        () -> outputFormat.write(fcType, getFeatureInfoRequest, outStream));
+        IOException e = Assert.assertThrows(
+                IOException.class, () -> outputFormat.write(fcType, getFeatureInfoRequest, outStream));
         assertThat(
-                e.getMessage(),
-                CoreMatchers.containsString(
-                        "Error occurred processing content template content.ftl"));
+                e.getMessage(), CoreMatchers.containsString("Error occurred processing content template content.ftl"));
     }
 
-    /**
-     * Test that if template asks a request parameter that is not present in request an exception is
-     * thrown.
-     */
+    /** Test that if template asks a request parameter that is not present in request an exception is thrown. */
     @Test
     public void testErrorWhenRequestParametersAreNotDefined() {
         ByteArrayOutputStream outStream = new ByteArrayOutputStream();
@@ -256,14 +249,13 @@ public class HTMLFeatureInfoOutputFormatTest extends WMSTestSupport {
     @Test
     public void testHTMLGetFeatureInfoCharset() throws Exception {
         String layer = getLayerId(MockData.FORESTS);
-        String request =
-                "wms?version=1.1.1&bbox=-0.002,-0.002,0.002,0.002&styles=&format=jpeg"
-                        + "&request=GetFeatureInfo&layers="
-                        + layer
-                        + "&query_layers="
-                        + layer
-                        + "&width=20&height=20&x=10&y=10"
-                        + "&info_format=text/html";
+        String request = "wms?version=1.1.1&bbox=-0.002,-0.002,0.002,0.002&styles=&format=jpeg"
+                + "&request=GetFeatureInfo&layers="
+                + layer
+                + "&query_layers="
+                + layer
+                + "&width=20&height=20&x=10&y=10"
+                + "&info_format=text/html";
 
         MockHttpServletResponse response = getAsServletResponse(request, "");
 
@@ -279,55 +271,47 @@ public class HTMLFeatureInfoOutputFormatTest extends WMSTestSupport {
     public void testConcurrentRequests() throws Exception {
         FeatureTypeInfo featureType1 = getFeatureTypeInfo(MockData.PRIMITIVEGEOFEATURE);
         List<MapLayerInfo> layers1 =
-                Collections.singletonList(
-                        new MapLayerInfo(getCatalog().getLayerByName(featureType1.prefixedName())));
+                Collections.singletonList(new MapLayerInfo(getCatalog().getLayerByName(featureType1.prefixedName())));
         FeatureCollectionType type1 = WfsFactory.eINSTANCE.createFeatureCollectionType();
         type1.getFeature().add(featureType1.getFeatureSource(null, null).getFeatures());
         final FeatureTypeInfo featureType2 = getFeatureTypeInfo(MockData.BASIC_POLYGONS);
         List<MapLayerInfo> layers2 =
-                Collections.singletonList(
-                        new MapLayerInfo(getCatalog().getLayerByName(featureType2.prefixedName())));
+                Collections.singletonList(new MapLayerInfo(getCatalog().getLayerByName(featureType2.prefixedName())));
         FeatureCollectionType type2 = WfsFactory.eINSTANCE.createFeatureCollectionType();
         type2.getFeature().add(featureType2.getFeatureSource(null, null).getFeatures());
         final HTMLFeatureInfoOutputFormat format =
-                new HTMLFeatureInfoOutputFormat(
-                        getWMS(), GeoServerExtensions.bean(GeoServerResourceLoader.class));
-        format.getTemplateManager()
-                .setTemplateLoader(
-                        new GeoServerTemplateLoader(getClass(), getDataDirectory()) {
-                            @Override
-                            public Object findTemplateSource(String path) throws IOException {
-                                String templatePath = "empty.ftl";
-                                if (path.toLowerCase().contains("content")
-                                        && (this.resource != null)
-                                        && this.resource
-                                                .prefixedName()
-                                                .equals(featureType2.prefixedName())) {
-                                    templatePath = "test_content.ftl";
-                                }
-                                try {
-                                    return new File(
-                                            this.getClass()
-                                                    .getResource(templateFolder + templatePath)
-                                                    .toURI());
-                                } catch (URISyntaxException e) {
-                                    return null;
-                                }
-                            }
-                        });
+                new HTMLFeatureInfoOutputFormat(getWMS(), GeoServerExtensions.bean(GeoServerResourceLoader.class));
+        format.getTemplateManager().setTemplateLoader(new GeoServerTemplateLoader(getClass(), getDataDirectory()) {
+            @Override
+            public Object findTemplateSource(String path) throws IOException {
+                String templatePath = "empty.ftl";
+                if (path.toLowerCase().contains("content")
+                        && (this.resource != null)
+                        && this.resource.prefixedName().equals(featureType2.prefixedName())) {
+                    templatePath = "test_content.ftl";
+                }
+                try {
+                    return new File(this.getClass()
+                            .getResource(templateFolder + templatePath)
+                            .toURI());
+                } catch (URISyntaxException e) {
+                    return null;
+                }
+            }
+        });
         int numRequests = 50;
         List<Callable<String>> tasks = new ArrayList<>(numRequests);
         for (int i = 0; i < numRequests; i++) {
             final GetFeatureInfoRequest request = new GetFeatureInfoRequest();
             request.setQueryLayers(((i % 2) == 0) ? layers1 : layers2);
             final FeatureCollectionType type = (((i % 2) == 0) ? type1 : type2);
-            tasks.add(
-                    () -> {
-                        ByteArrayOutputStream output = new ByteArrayOutputStream();
-                        format.write(type, request, output);
-                        return new String(output.toByteArray());
-                    });
+            tasks.add(() -> {
+                ByteArrayOutputStream output = new ByteArrayOutputStream();
+                format.write(type, request, output);
+                return new String(output.toByteArray());
+            });
         }
+
         ExecutorService executor = Executors.newFixedThreadPool(8);
         try {
             List<Future<String>> futures = executor.invokeAll(tasks);
@@ -361,7 +345,7 @@ public class HTMLFeatureInfoOutputFormatTest extends WMSTestSupport {
         ByteArrayOutputStream outStream = new ByteArrayOutputStream();
         outputFormat.write(fcType, getFeatureInfoRequest, outStream);
         String result = new String(outStream.toByteArray());
-        assertEquals(String.format("Amount: %.2f €", 47.11), result);
+        assertEquals("Amount: %.2f €".formatted(47.11), result);
     }
 
     /** Verifies calls to static methods are disabled by default. */
@@ -381,7 +365,7 @@ public class HTMLFeatureInfoOutputFormatTest extends WMSTestSupport {
     }
 
     /** Verifies calls to static methods for are enabled for specified classes. */
-    @Test(expected = IOException.class)
+    @Test
     public void testSpecifiedStaticMethodsInTemplateAvailable() throws IOException {
         activateStaticsAccessRules(java.util.Locale.class.getName() + "," + Locale.class.getName());
         currentTemplate = "test_custom_static_content_specified.ftl";
@@ -392,8 +376,7 @@ public class HTMLFeatureInfoOutputFormatTest extends WMSTestSupport {
     }
 
     /**
-     * Ensures the template processing works when one query layer is resolved to multiple
-     * featureCollections
+     * Ensures the template processing works when one query layer is resolved to multiple featureCollections
      *
      * @throws Exception
      */
@@ -404,8 +387,7 @@ public class HTMLFeatureInfoOutputFormatTest extends WMSTestSupport {
         // given: further featureType and feature instance
         SimpleFeatureTypeBuilder builder = new SimpleFeatureTypeBuilder();
         builder.setName(toName(MockData.WORLD));
-        SimpleFeature feature =
-                SimpleFeatureBuilder.build(builder.buildFeatureType(), new Double[0], "");
+        SimpleFeature feature = SimpleFeatureBuilder.build(builder.buildFeatureType(), new Double[0], "");
 
         // given: further featureCollection in result data
         fcType.getFeature().add(DataUtilities.collection(feature));
@@ -462,8 +444,7 @@ public class HTMLFeatureInfoOutputFormatTest extends WMSTestSupport {
         }
     }
 
-    private void doTestAutoEscaping(String property, String contains, String notContains)
-            throws Exception {
+    private void doTestAutoEscaping(String property, String contains, String notContains) throws Exception {
         if (property != null) {
             System.setProperty(FreeMarkerTemplateManager.FORCE_FREEMARKER_ESCAPING, property);
         } else {
@@ -484,8 +465,7 @@ public class HTMLFeatureInfoOutputFormatTest extends WMSTestSupport {
     }
 
     /**
-     * Activates the rule for the given pattern by re-initializing the {@link
-     * FreeMarkerTemplateManager}.
+     * Activates the rule for the given pattern by re-initializing the {@link FreeMarkerTemplateManager}.
      *
      * @param aPattern
      */
@@ -496,5 +476,51 @@ public class HTMLFeatureInfoOutputFormatTest extends WMSTestSupport {
             System.setProperty(FreeMarkerTemplateManager.KEY_STATIC_MEMBER_ACCESS, aPattern);
         }
         FreeMarkerTemplateManager.initStaticsAccessRule();
+    }
+
+    @Test
+    public void testBlockSensitive1() throws IOException {
+        doTestSensitive("test_block_sensitive_1.ftl", true);
+    }
+
+    @Test
+    public void testBlockSensitive2() throws IOException {
+        doTestSensitive("test_block_sensitive_2.ftl", true);
+    }
+
+    @Test
+    public void testBlockSensitive3() throws IOException {
+        doTestSensitive("test_block_sensitive_3.ftl", true);
+    }
+
+    @Test
+    public void testCustomBlockList() throws IOException {
+        // access to the namespace is allowed by default
+        doTestSensitive("test_block_custom.ftl", false);
+        // set the property to block access to the namespace
+        System.setProperty(GeoServerMemberAccessPolicy.FREEMARKER_BLOCK_LIST, NamespaceInfo.class.getName());
+        doTestSensitive("test_block_custom.ftl", true);
+    }
+
+    @Test
+    public void testBlockApi() throws IOException {
+        // access to non-getter methods is blocked by default
+        doTestSensitive("test_block_api.ftl", true);
+        // set the property to allow access to non-getter methods
+        System.setProperty(GeoServerMemberAccessPolicy.FREEMARKER_API_EXPOSED, "true");
+        doTestSensitive("test_block_api.ftl", false);
+    }
+
+    private void doTestSensitive(String template, boolean exception) throws IOException {
+        FreeMarkerTemplateManager.clearClassIntrospectionCache();
+        currentTemplate = template;
+        ByteArrayOutputStream out = new ByteArrayOutputStream();
+        if (exception) {
+            IOException e =
+                    assertThrows(IOException.class, () -> outputFormat.write(fcType, getFeatureInfoRequest, out));
+            assertThat(e.getMessage(), containsString("Error occurred processing content template content.ftl"));
+        } else {
+            outputFormat.write(fcType, getFeatureInfoRequest, out);
+        }
     }
 }
